commit bilingual contents

--- a/docs/docs-ref-autogen/excel/excel.charttype.yml
+++ b/docs/docs-ref-autogen/excel/excel.charttype.yml
@@ -1,13 +1,13 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: e17c526f35fce62c31752a2025b9191ddffac0ff
-ms.sourcegitcommit: 262b7c417245b7b61a57d53eee33a477a722ca6e
+ms.openlocfilehash: c8640c43f0610959cd150b0794cb99cd3aab0cec
+ms.sourcegitcommit: c1149d24b38f20daf9ce690cd0761ec1ceb7333d
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 09/28/2018
-ms.locfileid: "24062854"
+ms.lasthandoff: 10/17/2018
+ms.locfileid: "25592742"
 items:
 - uid: excel.Excel.ChartType
-  summary: '<span data-ttu-id="e0781-101">\[[API 集： ExcelApi 1.1](/javascript/office/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e0781-101">\[ [API set: ExcelApi 1.1](/javascript/office/requirement-sets/excel-api-requirement-sets) \]</span></span>'
+  summary: '<span data-ttu-id="4a442-101">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="4a442-101">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>'
   name: Excel.ChartType
   fullName: excel.Excel.ChartType
   langs:
