--- a/docs/docs-ref-autogen/excel/excel.interfaces.chartlegendupdatedata.yml
+++ b/docs/docs-ref-autogen/excel/excel.interfaces.chartlegendupdatedata.yml
@@ -1,13 +1,13 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: a196bd228ebd8472d6172db77c113a464b1eb702
-ms.sourcegitcommit: 262b7c417245b7b61a57d53eee33a477a722ca6e
+ms.openlocfilehash: 7ca09196fdad0d7db847bddd2eafed529584027b
+ms.sourcegitcommit: c1149d24b38f20daf9ce690cd0761ec1ceb7333d
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 09/28/2018
-ms.locfileid: "24040377"
+ms.lasthandoff: 10/17/2018
+ms.locfileid: "25592848"
 items:
 - uid: excel.Excel.Interfaces.ChartLegendUpdateData
-  summary: <span data-ttu-id="fd48b-101">更新数据的 ChartLegend 对象，在"chartLegend.set （{...}）"中使用的接口。</span><span class="sxs-lookup"><span data-stu-id="fd48b-101">An interface for updating data on the ChartLegend object, for use in "chartLegend.set({ ... })".</span></span>
+  summary: <span data-ttu-id="afa22-101">更新数据的 ChartLegend 对象，在"chartLegend.set （{...}）"中使用的接口。</span><span class="sxs-lookup"><span data-stu-id="afa22-101">An interface for updating data on the ChartLegend object, for use in "chartLegend.set({ ... })".</span></span>
   name: Excel.Interfaces.ChartLegendUpdateData
   fullName: excel.Excel.Interfaces.ChartLegendUpdateData
   langs:
@@ -26,10 +26,10 @@ items:
   - excel.Excel.Interfaces.ChartLegendUpdateData.width
 - uid: excel.Excel.Interfaces.ChartLegendUpdateData.format
   summary: >-
-    <span data-ttu-id="fd48b-102">代表图表图例，其中包括填充和字体格式的格式。</span><span class="sxs-lookup"><span data-stu-id="fd48b-102">Represents the formatting of a chart legend, which includes fill and font formatting.</span></span>
+    <span data-ttu-id="afa22-102">代表图表图例，其中包括填充和字体格式的格式。</span><span class="sxs-lookup"><span data-stu-id="afa22-102">Represents the formatting of a chart legend, which includes fill and font formatting.</span></span>
 
 
-    <span data-ttu-id="fd48b-103">\[[API 集： ExcelApi 1.1](/javascript/office/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="fd48b-103">\[ [API set: ExcelApi 1.1](/javascript/office/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="afa22-103">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="afa22-103">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   name: format
   fullName: excel.Excel.Interfaces.ChartLegendUpdateData.format
   langs:
@@ -42,10 +42,10 @@ items:
       - excel.Excel.Interfaces.ChartLegendFormatUpdateData
 - uid: excel.Excel.Interfaces.ChartLegendUpdateData.height
   summary: >-
-    <span data-ttu-id="fd48b-104">表示高度，以磅为单位的图表上图例。</span><span class="sxs-lookup"><span data-stu-id="fd48b-104">Represents the height, in points, of the legend on the chart.</span></span> <span data-ttu-id="fd48b-105">如果图例不可见，则为 null。</span><span class="sxs-lookup"><span data-stu-id="fd48b-105">Null if legend is not visible.</span></span>
+    <span data-ttu-id="afa22-104">表示高度，以磅为单位的图表上图例。</span><span class="sxs-lookup"><span data-stu-id="afa22-104">Represents the height, in points, of the legend on the chart.</span></span> <span data-ttu-id="afa22-105">如果图例不可见，则为 null。</span><span class="sxs-lookup"><span data-stu-id="afa22-105">Null if legend is not visible.</span></span>
 
 
-    <span data-ttu-id="fd48b-106">\[[API 集： ExcelApi 1.7](/javascript/office/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="fd48b-106">\[ [API set: ExcelApi 1.7](/javascript/office/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="afa22-106">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="afa22-106">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   name: height
   fullName: excel.Excel.Interfaces.ChartLegendUpdateData.height
   langs:
@@ -58,10 +58,10 @@ items:
       - number
 - uid: excel.Excel.Interfaces.ChartLegendUpdateData.left
   summary: >-
-    <span data-ttu-id="fd48b-107">代表左，以磅为单位的图表图例。</span><span class="sxs-lookup"><span data-stu-id="fd48b-107">Represents the left, in points, of a chart legend.</span></span> <span data-ttu-id="fd48b-108">如果图例不可见，则为 null。</span><span class="sxs-lookup"><span data-stu-id="fd48b-108">Null if legend is not visible.</span></span>
+    <span data-ttu-id="afa22-107">代表左，以磅为单位的图表图例。</span><span class="sxs-lookup"><span data-stu-id="afa22-107">Represents the left, in points, of a chart legend.</span></span> <span data-ttu-id="afa22-108">如果图例不可见，则为 null。</span><span class="sxs-lookup"><span data-stu-id="afa22-108">Null if legend is not visible.</span></span>
 
 
-    <span data-ttu-id="fd48b-109">\[[API 集： ExcelApi 1.7](/javascript/office/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="fd48b-109">\[ [API set: ExcelApi 1.7](/javascript/office/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="afa22-109">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="afa22-109">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   name: left
   fullName: excel.Excel.Interfaces.ChartLegendUpdateData.left
   langs:
@@ -74,10 +74,10 @@ items:
       - number
 - uid: excel.Excel.Interfaces.ChartLegendUpdateData.overlay
   summary: >-
-    <span data-ttu-id="fd48b-110">表示图表图例是否应该与图表主体重叠的布尔值。</span><span class="sxs-lookup"><span data-stu-id="fd48b-110">Boolean value for whether the chart legend should overlap with the main body of the chart.</span></span>
+    <span data-ttu-id="afa22-110">表示图表图例是否应该与图表主体重叠的布尔值。</span><span class="sxs-lookup"><span data-stu-id="afa22-110">Boolean value for whether the chart legend should overlap with the main body of the chart.</span></span>
 
 
-    <span data-ttu-id="fd48b-111">\[[API 集： ExcelApi 1.1](/javascript/office/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="fd48b-111">\[ [API set: ExcelApi 1.1](/javascript/office/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="afa22-111">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="afa22-111">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   name: overlay
   fullName: excel.Excel.Interfaces.ChartLegendUpdateData.overlay
   langs:
@@ -90,10 +90,10 @@ items:
       - boolean
 - uid: excel.Excel.Interfaces.ChartLegendUpdateData.position
   summary: >-
-    <span data-ttu-id="fd48b-112">代表图表上图例的位置。</span><span class="sxs-lookup"><span data-stu-id="fd48b-112">Represents the position of the legend on the chart.</span></span> <span data-ttu-id="fd48b-113">有关详细信息，请参阅 Excel.ChartLegendPosition。</span><span class="sxs-lookup"><span data-stu-id="fd48b-113">See Excel.ChartLegendPosition for details.</span></span>
+    <span data-ttu-id="afa22-112">代表图表上图例的位置。</span><span class="sxs-lookup"><span data-stu-id="afa22-112">Represents the position of the legend on the chart.</span></span> <span data-ttu-id="afa22-113">有关详细信息，请参阅 Excel.ChartLegendPosition。</span><span class="sxs-lookup"><span data-stu-id="afa22-113">See Excel.ChartLegendPosition for details.</span></span>
 
 
-    <span data-ttu-id="fd48b-114">\[[API 集： ExcelApi 1.1](/javascript/office/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="fd48b-114">\[ [API set: ExcelApi 1.1](/javascript/office/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="afa22-114">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="afa22-114">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   name: position
   fullName: excel.Excel.Interfaces.ChartLegendUpdateData.position
   langs:
@@ -106,10 +106,10 @@ items:
       - Excel.ChartLegendPosition | "Invalid" | "Top" | "Bottom" | "Left" | "Right" | "Corner" | "Custom"
 - uid: excel.Excel.Interfaces.ChartLegendUpdateData.showShadow
   summary: >-
-    <span data-ttu-id="fd48b-115">代表如果图例在图表上有阴影。</span><span class="sxs-lookup"><span data-stu-id="fd48b-115">Represents if the legend has a shadow on the chart.</span></span>
+    <span data-ttu-id="afa22-115">代表如果图例在图表上有阴影。</span><span class="sxs-lookup"><span data-stu-id="afa22-115">Represents if the legend has a shadow on the chart.</span></span>
 
 
-    <span data-ttu-id="fd48b-116">\[[API 集： ExcelApi 1.7](/javascript/office/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="fd48b-116">\[ [API set: ExcelApi 1.7](/javascript/office/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="afa22-116">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="afa22-116">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   name: showShadow
   fullName: excel.Excel.Interfaces.ChartLegendUpdateData.showShadow
   langs:
@@ -122,10 +122,10 @@ items:
       - boolean
 - uid: excel.Excel.Interfaces.ChartLegendUpdateData.top
   summary: >-
-    <span data-ttu-id="fd48b-117">代表图表图例的顶部。</span><span class="sxs-lookup"><span data-stu-id="fd48b-117">Represents the top of a chart legend.</span></span>
+    <span data-ttu-id="afa22-117">代表图表图例的顶部。</span><span class="sxs-lookup"><span data-stu-id="afa22-117">Represents the top of a chart legend.</span></span>
 
 
-    <span data-ttu-id="fd48b-118">\[[API 集： ExcelApi 1.7](/javascript/office/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="fd48b-118">\[ [API set: ExcelApi 1.7](/javascript/office/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="afa22-118">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="afa22-118">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   name: top
   fullName: excel.Excel.Interfaces.ChartLegendUpdateData.top
   langs:
@@ -138,10 +138,10 @@ items:
       - number
 - uid: excel.Excel.Interfaces.ChartLegendUpdateData.visible
   summary: >-
-    <span data-ttu-id="fd48b-119">表示 ChartLegend 对象的可见性的布尔值。</span><span class="sxs-lookup"><span data-stu-id="fd48b-119">A boolean value the represents the visibility of a ChartLegend object.</span></span>
+    <span data-ttu-id="afa22-119">表示 ChartLegend 对象的可见性的布尔值。</span><span class="sxs-lookup"><span data-stu-id="afa22-119">A boolean value the represents the visibility of a ChartLegend object.</span></span>
 
 
-    <span data-ttu-id="fd48b-120">\[[API 集： ExcelApi 1.1](/javascript/office/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="fd48b-120">\[ [API set: ExcelApi 1.1](/javascript/office/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="afa22-120">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="afa22-120">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   name: visible
   fullName: excel.Excel.Interfaces.ChartLegendUpdateData.visible
   langs:
@@ -154,10 +154,10 @@ items:
       - boolean
 - uid: excel.Excel.Interfaces.ChartLegendUpdateData.width
   summary: >-
-    <span data-ttu-id="fd48b-121">表示的宽度，以磅为单位的图表上图例。</span><span class="sxs-lookup"><span data-stu-id="fd48b-121">Represents the width, in points, of the legend on the chart.</span></span> <span data-ttu-id="fd48b-122">如果图例不可见，则为 null。</span><span class="sxs-lookup"><span data-stu-id="fd48b-122">Null if legend is not visible.</span></span>
+    <span data-ttu-id="afa22-121">表示的宽度，以磅为单位的图表上图例。</span><span class="sxs-lookup"><span data-stu-id="afa22-121">Represents the width, in points, of the legend on the chart.</span></span> <span data-ttu-id="afa22-122">如果图例不可见，则为 null。</span><span class="sxs-lookup"><span data-stu-id="afa22-122">Null if legend is not visible.</span></span>
 
 
-    <span data-ttu-id="fd48b-123">\[[API 集： ExcelApi 1.7](/javascript/office/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="fd48b-123">\[ [API set: ExcelApi 1.7](/javascript/office/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="afa22-123">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="afa22-123">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   name: width
   fullName: excel.Excel.Interfaces.ChartLegendUpdateData.width
   langs:
