--- a/docs/docs-ref-autogen/excel/excel.worksheetdeletedeventargs.yml
+++ b/docs/docs-ref-autogen/excel/excel.worksheetdeletedeventargs.yml
@@ -1,17 +1,17 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 2f2445d200eb9c4302d17b319b7f2eb45b0601ea
-ms.sourcegitcommit: 262b7c417245b7b61a57d53eee33a477a722ca6e
+ms.openlocfilehash: de83ad217bb8d2b1864194d48c746415b439c7ef
+ms.sourcegitcommit: c1149d24b38f20daf9ce690cd0761ec1ceb7333d
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 09/28/2018
-ms.locfileid: "24041243"
+ms.lasthandoff: 10/17/2018
+ms.locfileid: "25592385"
 items:
 - uid: excel.Excel.WorksheetDeletedEventArgs
   summary: >-
-    <span data-ttu-id="6a68b-101">提供有关引发事件的已删除的工作表信息。</span><span class="sxs-lookup"><span data-stu-id="6a68b-101">Provides information about the worksheet that raised the Deleted event.</span></span>
+    <span data-ttu-id="7b496-101">提供有关引发事件的已删除的工作表信息。</span><span class="sxs-lookup"><span data-stu-id="7b496-101">Provides information about the worksheet that raised the Deleted event.</span></span>
 
 
-    <span data-ttu-id="6a68b-102">\[[API 集： ExcelApi 1.7](/javascript/office/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="6a68b-102">\[ [API set: ExcelApi 1.7](/javascript/office/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="7b496-102">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="7b496-102">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   name: Excel.WorksheetDeletedEventArgs
   fullName: excel.Excel.WorksheetDeletedEventArgs
   langs:
@@ -24,10 +24,10 @@ items:
   - excel.Excel.WorksheetDeletedEventArgs.worksheetId
 - uid: excel.Excel.WorksheetDeletedEventArgs.source
   summary: >-
-    <span data-ttu-id="6a68b-103">获取在事件的源。</span><span class="sxs-lookup"><span data-stu-id="6a68b-103">Gets the source of the event.</span></span> <span data-ttu-id="6a68b-104">有关详细信息，请参阅 Excel.EventSource。</span><span class="sxs-lookup"><span data-stu-id="6a68b-104">See Excel.EventSource for details.</span></span>
+    <span data-ttu-id="7b496-103">获取在事件的源。</span><span class="sxs-lookup"><span data-stu-id="7b496-103">Gets the source of the event.</span></span> <span data-ttu-id="7b496-104">有关详细信息，请参阅 Excel.EventSource。</span><span class="sxs-lookup"><span data-stu-id="7b496-104">See Excel.EventSource for details.</span></span>
 
 
-    <span data-ttu-id="6a68b-105">\[[API 集： ExcelApi 1.7](/javascript/office/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="6a68b-105">\[ [API set: ExcelApi 1.7](/javascript/office/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="7b496-105">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="7b496-105">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   name: source
   fullName: excel.Excel.WorksheetDeletedEventArgs.source
   langs:
@@ -40,10 +40,10 @@ items:
       - Excel.EventSource | "Local" | "Remote"
 - uid: excel.Excel.WorksheetDeletedEventArgs.type
   summary: >-
-    <span data-ttu-id="6a68b-106">获取该事件的类型。</span><span class="sxs-lookup"><span data-stu-id="6a68b-106">Gets the type of the event.</span></span> <span data-ttu-id="6a68b-107">有关详细信息，请参阅 Excel.EventType。</span><span class="sxs-lookup"><span data-stu-id="6a68b-107">See Excel.EventType for details.</span></span>
+    <span data-ttu-id="7b496-106">获取该事件的类型。</span><span class="sxs-lookup"><span data-stu-id="7b496-106">Gets the type of the event.</span></span> <span data-ttu-id="7b496-107">有关详细信息，请参阅 Excel.EventType。</span><span class="sxs-lookup"><span data-stu-id="7b496-107">See Excel.EventType for details.</span></span>
 
 
-    <span data-ttu-id="6a68b-108">\[[API 集： ExcelApi 1.7](/javascript/office/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="6a68b-108">\[ [API set: ExcelApi 1.7](/javascript/office/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="7b496-108">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="7b496-108">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   name: type
   fullName: excel.Excel.WorksheetDeletedEventArgs.type
   langs:
@@ -56,10 +56,10 @@ items:
       - "\"WorksheetDeleted\""
 - uid: excel.Excel.WorksheetDeletedEventArgs.worksheetId
   summary: >-
-    <span data-ttu-id="6a68b-109">获取从工作簿中删除的工作表的 id。</span><span class="sxs-lookup"><span data-stu-id="6a68b-109">Gets the id of the worksheet that is deleted from the workbook.</span></span>
+    <span data-ttu-id="7b496-109">获取从工作簿中删除的工作表的 id。</span><span class="sxs-lookup"><span data-stu-id="7b496-109">Gets the id of the worksheet that is deleted from the workbook.</span></span>
 
 
-    <span data-ttu-id="6a68b-110">\[[API 集： ExcelApi 1.7](/javascript/office/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="6a68b-110">\[ [API set: ExcelApi 1.7](/javascript/office/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="7b496-110">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="7b496-110">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   name: worksheetId
   fullName: excel.Excel.WorksheetDeletedEventArgs.worksheetId
   langs:
