--- a/docs/docs-ref-autogen/word/word.interfaces.inlinepicturedata.yml
+++ b/docs/docs-ref-autogen/word/word.interfaces.inlinepicturedata.yml
@@ -1,13 +1,13 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 92f8f6541d9c296c3983508cf72c047822972420
-ms.sourcegitcommit: 262b7c417245b7b61a57d53eee33a477a722ca6e
+ms.openlocfilehash: ff3fceef5876cb0e1f33fac2175049a5bf1955d9
+ms.sourcegitcommit: c1149d24b38f20daf9ce690cd0761ec1ceb7333d
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 09/28/2018
-ms.locfileid: "24041391"
+ms.lasthandoff: 10/17/2018
+ms.locfileid: "25592882"
 items:
 - uid: word.Word.Interfaces.InlinePictureData
-  summary: <span data-ttu-id="197a1-101">描述调用"inlinePicture.toJSON()"返回的数据的接口。</span><span class="sxs-lookup"><span data-stu-id="197a1-101">An interface describing the data returned by calling "inlinePicture.toJSON()".</span></span>
+  summary: <span data-ttu-id="ba6b9-101">描述调用"inlinePicture.toJSON()"返回的数据的接口。</span><span class="sxs-lookup"><span data-stu-id="ba6b9-101">An interface describing the data returned by calling "inlinePicture.toJSON()".</span></span>
   name: Word.Interfaces.InlinePictureData
   fullName: word.Word.Interfaces.InlinePictureData
   langs:
@@ -30,10 +30,10 @@ items:
   - word.Word.Interfaces.InlinePictureData.width
 - uid: word.Word.Interfaces.InlinePictureData.altTextDescription
   summary: >-
-    <span data-ttu-id="197a1-102">获取或设置一个 string 值，该值代表内嵌图像相关联的可选文字。</span><span class="sxs-lookup"><span data-stu-id="197a1-102">Gets or sets a string that represents the alternative text associated with the inline image.</span></span>
+    <span data-ttu-id="ba6b9-102">获取或设置一个 string 值，该值代表内嵌图像相关联的可选文字。</span><span class="sxs-lookup"><span data-stu-id="ba6b9-102">Gets or sets a string that represents the alternative text associated with the inline image.</span></span>
 
 
-    <span data-ttu-id="197a1-103">\[[API 集： WordApi 1.1](/javascript/office/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="197a1-103">\[ [API set: WordApi 1.1](/javascript/office/requirement-sets/word-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="ba6b9-103">\[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="ba6b9-103">\[ [API set: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
   name: altTextDescription
   fullName: word.Word.Interfaces.InlinePictureData.altTextDescription
   langs:
@@ -46,10 +46,10 @@ items:
       - string
 - uid: word.Word.Interfaces.InlinePictureData.altTextTitle
   summary: >-
-    <span data-ttu-id="197a1-104">获取或设置包含嵌入式图像的标题的字符串。</span><span class="sxs-lookup"><span data-stu-id="197a1-104">Gets or sets a string that contains the title for the inline image.</span></span>
+    <span data-ttu-id="ba6b9-104">获取或设置包含嵌入式图像的标题的字符串。</span><span class="sxs-lookup"><span data-stu-id="ba6b9-104">Gets or sets a string that contains the title for the inline image.</span></span>
 
 
-    <span data-ttu-id="197a1-105">\[[API 集： WordApi 1.1](/javascript/office/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="197a1-105">\[ [API set: WordApi 1.1](/javascript/office/requirement-sets/word-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="ba6b9-105">\[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="ba6b9-105">\[ [API set: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
   name: altTextTitle
   fullName: word.Word.Interfaces.InlinePictureData.altTextTitle
   langs:
@@ -62,10 +62,10 @@ items:
       - string
 - uid: word.Word.Interfaces.InlinePictureData.height
   summary: >-
-    <span data-ttu-id="197a1-106">获取或设置描述嵌入式图像的高度的数字。</span><span class="sxs-lookup"><span data-stu-id="197a1-106">Gets or sets a number that describes the height of the inline image.</span></span>
+    <span data-ttu-id="ba6b9-106">获取或设置描述嵌入式图像的高度的数字。</span><span class="sxs-lookup"><span data-stu-id="ba6b9-106">Gets or sets a number that describes the height of the inline image.</span></span>
 
 
-    <span data-ttu-id="197a1-107">\[[API 集： WordApi 1.1](/javascript/office/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="197a1-107">\[ [API set: WordApi 1.1](/javascript/office/requirement-sets/word-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="ba6b9-107">\[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="ba6b9-107">\[ [API set: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
   name: height
   fullName: word.Word.Interfaces.InlinePictureData.height
   langs:
@@ -78,10 +78,10 @@ items:
       - number
 - uid: word.Word.Interfaces.InlinePictureData.hyperlink
   summary: >-
-    <span data-ttu-id="197a1-108">获取或设置图像的超链接。</span><span class="sxs-lookup"><span data-stu-id="197a1-108">Gets or sets a hyperlink on the image.</span></span> <span data-ttu-id="197a1-109">使用\#从可选位置部件分隔的地址部分。</span><span class="sxs-lookup"><span data-stu-id="197a1-109">Use a '\#' to separate the address part from the optional location part.</span></span>
+    <span data-ttu-id="ba6b9-108">获取或设置图像的超链接。</span><span class="sxs-lookup"><span data-stu-id="ba6b9-108">Gets or sets a hyperlink on the image.</span></span> <span data-ttu-id="ba6b9-109">使用\#从可选位置部件分隔的地址部分。</span><span class="sxs-lookup"><span data-stu-id="ba6b9-109">Use a '\#' to separate the address part from the optional location part.</span></span>
 
 
-    <span data-ttu-id="197a1-110">\[[API 集： WordApi 1.1](/javascript/office/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="197a1-110">\[ [API set: WordApi 1.1](/javascript/office/requirement-sets/word-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="ba6b9-110">\[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="ba6b9-110">\[ [API set: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
   name: hyperlink
   fullName: word.Word.Interfaces.InlinePictureData.hyperlink
   langs:
@@ -94,10 +94,10 @@ items:
       - string
 - uid: word.Word.Interfaces.InlinePictureData.lockAspectRatio
   summary: >-
-    <span data-ttu-id="197a1-111">获取或设置指示在您调整嵌入式图像大小时其是否保留原始比例的值。</span><span class="sxs-lookup"><span data-stu-id="197a1-111">Gets or sets a value that indicates whether the inline image retains its original proportions when you resize it.</span></span>
+    <span data-ttu-id="ba6b9-111">获取或设置指示在您调整嵌入式图像大小时其是否保留原始比例的值。</span><span class="sxs-lookup"><span data-stu-id="ba6b9-111">Gets or sets a value that indicates whether the inline image retains its original proportions when you resize it.</span></span>
 
 
-    <span data-ttu-id="197a1-112">\[[API 集： WordApi 1.1](/javascript/office/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="197a1-112">\[ [API set: WordApi 1.1](/javascript/office/requirement-sets/word-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="ba6b9-112">\[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="ba6b9-112">\[ [API set: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
   name: lockAspectRatio
   fullName: word.Word.Interfaces.InlinePictureData.lockAspectRatio
   langs:
@@ -110,10 +110,10 @@ items:
       - boolean
 - uid: word.Word.Interfaces.InlinePictureData.paragraph
   summary: >-
-    <span data-ttu-id="197a1-p102">获取包含嵌入式图像的父段落。只读。</span><span class="sxs-lookup"><span data-stu-id="197a1-p102">Gets the parent paragraph that contains the inline image. Read-only.</span></span>
+    <span data-ttu-id="ba6b9-p102">获取包含嵌入式图像的父段落。只读。</span><span class="sxs-lookup"><span data-stu-id="ba6b9-p102">Gets the parent paragraph that contains the inline image. Read-only.</span></span>
 
 
-    <span data-ttu-id="197a1-115">\[[API 集： WordApi 1.2](/javascript/office/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="197a1-115">\[ [API set: WordApi 1.2](/javascript/office/requirement-sets/word-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="ba6b9-115">\[[API 集： WordApi 1.2](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="ba6b9-115">\[ [API set: WordApi 1.2](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
   name: paragraph
   fullName: word.Word.Interfaces.InlinePictureData.paragraph
   langs:
@@ -126,10 +126,10 @@ items:
       - Word.Interfaces.ParagraphData
 - uid: word.Word.Interfaces.InlinePictureData.parentContentControl
   summary: >-
-    <span data-ttu-id="197a1-p103">获取包含嵌入式图像的内容控件。如果不存在父内容控件，则引发。只读。</span><span class="sxs-lookup"><span data-stu-id="197a1-p103">Gets the content control that contains the inline image. Throws if there isn't a parent content control. Read-only.</span></span>
+    <span data-ttu-id="ba6b9-p103">获取包含嵌入式图像的内容控件。如果不存在父内容控件，则引发。只读。</span><span class="sxs-lookup"><span data-stu-id="ba6b9-p103">Gets the content control that contains the inline image. Throws if there isn't a parent content control. Read-only.</span></span>
 
 
-    <span data-ttu-id="197a1-119">\[[API 集： WordApi 1.1](/javascript/office/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="197a1-119">\[ [API set: WordApi 1.1](/javascript/office/requirement-sets/word-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="ba6b9-119">\[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="ba6b9-119">\[ [API set: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
   name: parentContentControl
   fullName: word.Word.Interfaces.InlinePictureData.parentContentControl
   langs:
@@ -142,10 +142,10 @@ items:
       - word.Word.Interfaces.ContentControlData
 - uid: word.Word.Interfaces.InlinePictureData.parentContentControlOrNullObject
   summary: >-
-    <span data-ttu-id="197a1-p104">获取包含嵌入式图像的内容控件。如果不存在父内容控件，则返回 Null 对象。只读。</span><span class="sxs-lookup"><span data-stu-id="197a1-p104">Gets the content control that contains the inline image. Returns a null object if there isn't a parent content control. Read-only.</span></span>
+    <span data-ttu-id="ba6b9-p104">获取包含嵌入式图像的内容控件。如果不存在父内容控件，则返回 Null 对象。只读。</span><span class="sxs-lookup"><span data-stu-id="ba6b9-p104">Gets the content control that contains the inline image. Returns a null object if there isn't a parent content control. Read-only.</span></span>
 
 
-    <span data-ttu-id="197a1-123">\[[API 集： WordApi 1.3](/javascript/office/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="197a1-123">\[ [API set: WordApi 1.3](/javascript/office/requirement-sets/word-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="ba6b9-123">\[[API 集： WordApi 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="ba6b9-123">\[ [API set: WordApi 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
   name: parentContentControlOrNullObject
   fullName: word.Word.Interfaces.InlinePictureData.parentContentControlOrNullObject
   langs:
@@ -158,10 +158,10 @@ items:
       - word.Word.Interfaces.ContentControlData
 - uid: word.Word.Interfaces.InlinePictureData.parentTable
   summary: >-
-    <span data-ttu-id="197a1-p105">获取包含嵌入式图像的 table。如果未包含在 table 中，则引发。只读。</span><span class="sxs-lookup"><span data-stu-id="197a1-p105">Gets the table that contains the inline image. Throws if it is not contained in a table. Read-only.</span></span>
+    <span data-ttu-id="ba6b9-p105">获取包含嵌入式图像的 table。如果未包含在 table 中，则引发。只读。</span><span class="sxs-lookup"><span data-stu-id="ba6b9-p105">Gets the table that contains the inline image. Throws if it is not contained in a table. Read-only.</span></span>
 
 
-    <span data-ttu-id="197a1-127">\[[API 集： WordApi 1.3](/javascript/office/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="197a1-127">\[ [API set: WordApi 1.3](/javascript/office/requirement-sets/word-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="ba6b9-127">\[[API 集： WordApi 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="ba6b9-127">\[ [API set: WordApi 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
   name: parentTable
   fullName: word.Word.Interfaces.InlinePictureData.parentTable
   langs:
@@ -174,10 +174,10 @@ items:
       - Word.Interfaces.TableData
 - uid: word.Word.Interfaces.InlinePictureData.parentTableCell
   summary: >-
-    <span data-ttu-id="197a1-p106">获取包含嵌入式图像的 tableCell。如果未包含在 table 单元格中，则引发。只读。</span><span class="sxs-lookup"><span data-stu-id="197a1-p106">Gets the table cell that contains the inline image. Throws if it is not contained in a table cell. Read-only.</span></span>
+    <span data-ttu-id="ba6b9-p106">获取包含嵌入式图像的 tableCell。如果未包含在 table 单元格中，则引发。只读。</span><span class="sxs-lookup"><span data-stu-id="ba6b9-p106">Gets the table cell that contains the inline image. Throws if it is not contained in a table cell. Read-only.</span></span>
 
 
-    <span data-ttu-id="197a1-131">\[[API 集： WordApi 1.3](/javascript/office/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="197a1-131">\[ [API set: WordApi 1.3](/javascript/office/requirement-sets/word-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="ba6b9-131">\[[API 集： WordApi 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="ba6b9-131">\[ [API set: WordApi 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
   name: parentTableCell
   fullName: word.Word.Interfaces.InlinePictureData.parentTableCell
   langs:
@@ -190,10 +190,10 @@ items:
       - Word.Interfaces.TableCellData
 - uid: word.Word.Interfaces.InlinePictureData.parentTableCellOrNullObject
   summary: >-
-    <span data-ttu-id="197a1-p107">获取包含嵌入式图像的 tableCell。如果未包含在 tableCell 中，则此关系返回空对象。只读。</span><span class="sxs-lookup"><span data-stu-id="197a1-p107">Gets the table cell that contains the inline image. Returns a null object if it is not contained in a table cell. Read-only.</span></span>
+    <span data-ttu-id="ba6b9-p107">获取包含嵌入式图像的 tableCell。如果未包含在 tableCell 中，则此关系返回空对象。只读。</span><span class="sxs-lookup"><span data-stu-id="ba6b9-p107">Gets the table cell that contains the inline image. Returns a null object if it is not contained in a table cell. Read-only.</span></span>
 
 
-    <span data-ttu-id="197a1-135">\[[API 集： WordApi 1.3](/javascript/office/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="197a1-135">\[ [API set: WordApi 1.3](/javascript/office/requirement-sets/word-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="ba6b9-135">\[[API 集： WordApi 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="ba6b9-135">\[ [API set: WordApi 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
   name: parentTableCellOrNullObject
   fullName: word.Word.Interfaces.InlinePictureData.parentTableCellOrNullObject
   langs:
@@ -206,10 +206,10 @@ items:
       - Word.Interfaces.TableCellData
 - uid: word.Word.Interfaces.InlinePictureData.parentTableOrNullObject
   summary: >-
-    <span data-ttu-id="197a1-p108">获取包含嵌入式图像的 table。如果未包含在 table 中，则此关系返回空对象。只读。</span><span class="sxs-lookup"><span data-stu-id="197a1-p108">Gets the table that contains the inline image. Returns a null object if it is not contained in a table. Read-only.</span></span>
+    <span data-ttu-id="ba6b9-p108">获取包含嵌入式图像的 table。如果未包含在 table 中，则此关系返回空对象。只读。</span><span class="sxs-lookup"><span data-stu-id="ba6b9-p108">Gets the table that contains the inline image. Returns a null object if it is not contained in a table. Read-only.</span></span>
 
 
-    <span data-ttu-id="197a1-139">\[[API 集： WordApi 1.3](/javascript/office/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="197a1-139">\[ [API set: WordApi 1.3](/javascript/office/requirement-sets/word-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="ba6b9-139">\[[API 集： WordApi 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="ba6b9-139">\[ [API set: WordApi 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
   name: parentTableOrNullObject
   fullName: word.Word.Interfaces.InlinePictureData.parentTableOrNullObject
   langs:
@@ -222,10 +222,10 @@ items:
       - Word.Interfaces.TableData
 - uid: word.Word.Interfaces.InlinePictureData.width
   summary: >-
-    <span data-ttu-id="197a1-140">获取或设置描述嵌入式图像的宽度的数字。</span><span class="sxs-lookup"><span data-stu-id="197a1-140">Gets or sets a number that describes the width of the inline image.</span></span>
+    <span data-ttu-id="ba6b9-140">获取或设置描述嵌入式图像的宽度的数字。</span><span class="sxs-lookup"><span data-stu-id="ba6b9-140">Gets or sets a number that describes the width of the inline image.</span></span>
 
 
-    <span data-ttu-id="197a1-141">\[[API 集： WordApi 1.1](/javascript/office/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="197a1-141">\[ [API set: WordApi 1.1](/javascript/office/requirement-sets/word-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="ba6b9-141">\[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="ba6b9-141">\[ [API set: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
   name: width
   fullName: word.Word.Interfaces.InlinePictureData.width
   langs:
