--- a/docs/docs-ref-autogen/excel/excel.colorscaleconditionalformat.yml
+++ b/docs/docs-ref-autogen/excel/excel.colorscaleconditionalformat.yml
@@ -1,17 +1,17 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 525b568db4c8fb7e18e982de16ac9ebbe426261f
-ms.sourcegitcommit: 262b7c417245b7b61a57d53eee33a477a722ca6e
+ms.openlocfilehash: 32399581cb746516198c89261f9af88ccfce3bdb
+ms.sourcegitcommit: c1149d24b38f20daf9ce690cd0761ec1ceb7333d
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 09/28/2018
-ms.locfileid: "24042450"
+ms.lasthandoff: 10/17/2018
+ms.locfileid: "25592784"
 items:
 - uid: excel.Excel.ColorScaleConditionalFormat
   summary: >-
-    <span data-ttu-id="2a9a5-101">代表条件格式的 IconSet 条件。</span><span class="sxs-lookup"><span data-stu-id="2a9a5-101">Represents an IconSet criteria for conditional formatting.</span></span>
+    <span data-ttu-id="52c55-101">代表条件格式的 IconSet 条件。</span><span class="sxs-lookup"><span data-stu-id="52c55-101">Represents an IconSet criteria for conditional formatting.</span></span>
 
 
-    <span data-ttu-id="2a9a5-102">\[[API 集： ExcelApi 1.6](/javascript/office/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="2a9a5-102">\[ [API set: ExcelApi 1.6](/javascript/office/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="52c55-102">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="52c55-102">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   name: Excel.ColorScaleConditionalFormat
   fullName: excel.Excel.ColorScaleConditionalFormat
   langs:
@@ -27,10 +27,10 @@ items:
   - excel.Excel.ColorScaleConditionalFormat.toJSON
 - uid: excel.Excel.ColorScaleConditionalFormat.criteria
   summary: >-
-    <span data-ttu-id="2a9a5-p101">彩色温标的条件。使用两点彩色温标时，中点可选。</span><span class="sxs-lookup"><span data-stu-id="2a9a5-p101">The criteria of the color scale. Midpoint is optional when using a two point color scale.</span></span>
+    <span data-ttu-id="52c55-p101">彩色温标的条件。使用两点彩色温标时，中点可选。</span><span class="sxs-lookup"><span data-stu-id="52c55-p101">The criteria of the color scale. Midpoint is optional when using a two point color scale.</span></span>
 
 
-    <span data-ttu-id="2a9a5-105">\[[API 集： ExcelApi 1.6](/javascript/office/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="2a9a5-105">\[ [API set: ExcelApi 1.6](/javascript/office/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="52c55-105">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="52c55-105">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   name: criteria
   fullName: excel.Excel.ColorScaleConditionalFormat.criteria
   langs:
@@ -41,17 +41,17 @@ items:
     return:
       type:
       - excel.Excel.ConditionalColorScaleCriteria
-      description: "\n#### <a name=\"examples\"></a><span data-ttu-id=\"2a9a5-106\">示例</span><span class=\"sxs-lookup\"><span data-stu-id=\"2a9a5-106\">Examples</span></span>\n\n```typescript\nawait Excel.run(async (context) => {\n    const sheet = context.workbook.worksheets.getItem(\"Sample\");\n    const range = sheet.getRange(\"B2:M5\");\n    const conditionalFormat = range.conditionalFormats\n        .add(Excel.ConditionalFormatType.colorScale);\n    const criteria = {\n        minimum: { formula: null, type: Excel.ConditionalFormatColorCriterionType.lowestValue, color: \"blue\" },\n        midpoint: { formula: \"50\", type: Excel.ConditionalFormatColorCriterionType.percent, color: \"yellow\" },\n        maximum: { formula: null, type: Excel.ConditionalFormatColorCriterionType.highestValue, color: \"red\" }\n    };\n    conditionalFormat.colorScale.criteria = criteria;\n\n    await context.sync();\n});\n```"
+      description: "\n#### <a name=\"examples\"></a><span data-ttu-id=\"52c55-106\">示例</span><span class=\"sxs-lookup\"><span data-stu-id=\"52c55-106\">Examples</span></span>\n\n```typescript\nawait Excel.run(async (context) => {\n    const sheet = context.workbook.worksheets.getItem(\"Sample\");\n    const range = sheet.getRange(\"B2:M5\");\n    const conditionalFormat = range.conditionalFormats\n        .add(Excel.ConditionalFormatType.colorScale);\n    const criteria = {\n        minimum: { formula: null, type: Excel.ConditionalFormatColorCriterionType.lowestValue, color: \"blue\" },\n        midpoint: { formula: \"50\", type: Excel.ConditionalFormatColorCriterionType.percent, color: \"yellow\" },\n        maximum: { formula: null, type: Excel.ConditionalFormatColorCriterionType.highestValue, color: \"red\" }\n    };\n    conditionalFormat.colorScale.criteria = criteria;\n\n    await context.sync();\n});\n```"
 - uid: excel.Excel.ColorScaleConditionalFormat.load
-  summary: <span data-ttu-id="2a9a5-107">队列设置命令加载指定的对象的属性。</span><span class="sxs-lookup"><span data-stu-id="2a9a5-107">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="2a9a5-108">读取属性之前，必须调用"context.sync()"。</span><span class="sxs-lookup"><span data-stu-id="2a9a5-108">You must call "context.sync()" before reading the properties.</span></span>
+  summary: <span data-ttu-id="52c55-107">队列设置命令加载指定的对象的属性。</span><span class="sxs-lookup"><span data-stu-id="52c55-107">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="52c55-108">读取属性之前，必须调用"context.sync()"。</span><span class="sxs-lookup"><span data-stu-id="52c55-108">You must call "context.sync()" before reading the properties.</span></span>
   remarks: >-
-    <span data-ttu-id="2a9a5-109">除了此签名，此方法具有以下签名：</span><span class="sxs-lookup"><span data-stu-id="2a9a5-109">In addition to this signature, this method has the following signatures:</span></span>
+    <span data-ttu-id="52c55-109">除了此签名，此方法具有以下签名：</span><span class="sxs-lookup"><span data-stu-id="52c55-109">In addition to this signature, this method has the following signatures:</span></span>
 
 
-    <span data-ttu-id="2a9a5-110">`load(option?: { select?: string; expand?: string; }): Excel.ColorScaleConditionalFormat`-其中 option.select 是一个以逗号分隔的字符串，指定要加载的属性，options.expand 是一个以逗号分隔的字符串，指定要加载的导航属性。</span><span class="sxs-lookup"><span data-stu-id="2a9a5-110">`load(option?: { select?: string; expand?: string; }): Excel.ColorScaleConditionalFormat` - Where option.select is a comma-delimited string that specifies the properties to load, and options.expand is a comma-delimited string that specifies the navigation properties to load.</span></span>
+    <span data-ttu-id="52c55-110">`load(option?: { select?: string; expand?: string; }): Excel.ColorScaleConditionalFormat`-其中 option.select 是一个以逗号分隔的字符串，指定要加载的属性，options.expand 是一个以逗号分隔的字符串，指定要加载的导航属性。</span><span class="sxs-lookup"><span data-stu-id="52c55-110">`load(option?: { select?: string; expand?: string; }): Excel.ColorScaleConditionalFormat` - Where option.select is a comma-delimited string that specifies the properties to load, and options.expand is a comma-delimited string that specifies the navigation properties to load.</span></span>
 
 
-    <span data-ttu-id="2a9a5-111">`load(option?: { select?: string; expand?: string; top?: number; skip?: number }): Excel.ColorScaleConditionalFormat`-仅可对集合的类型。</span><span class="sxs-lookup"><span data-stu-id="2a9a5-111">`load(option?: { select?: string; expand?: string; top?: number; skip?: number }): Excel.ColorScaleConditionalFormat` - Only available on collection types.</span></span> <span data-ttu-id="2a9a5-112">它是类似于前一个签名。</span><span class="sxs-lookup"><span data-stu-id="2a9a5-112">It is similar to the preceding signature.</span></span> <span data-ttu-id="2a9a5-113">Option.top 指定集合项可在结果中包含的最大数目。</span><span class="sxs-lookup"><span data-stu-id="2a9a5-113">Option.top specifies the maximum number of collection items that can be included in the result.</span></span> <span data-ttu-id="2a9a5-114">Option.skip 指定要跳过和结果中不包含的项的数目。</span><span class="sxs-lookup"><span data-stu-id="2a9a5-114">Option.skip specifies the number of items that are to be skipped and not included in the result.</span></span> <span data-ttu-id="2a9a5-115">如果指定 option.top，则将跳过指定的数目的项后启动结果集。</span><span class="sxs-lookup"><span data-stu-id="2a9a5-115">If option.top is specified, the result set will start after skipping the specified number of items.</span></span>
+    <span data-ttu-id="52c55-111">`load(option?: { select?: string; expand?: string; top?: number; skip?: number }): Excel.ColorScaleConditionalFormat`-仅可对集合的类型。</span><span class="sxs-lookup"><span data-stu-id="52c55-111">`load(option?: { select?: string; expand?: string; top?: number; skip?: number }): Excel.ColorScaleConditionalFormat` - Only available on collection types.</span></span> <span data-ttu-id="52c55-112">它是类似于前一个签名。</span><span class="sxs-lookup"><span data-stu-id="52c55-112">It is similar to the preceding signature.</span></span> <span data-ttu-id="52c55-113">Option.top 指定集合项可在结果中包含的最大数目。</span><span class="sxs-lookup"><span data-stu-id="52c55-113">Option.top specifies the maximum number of collection items that can be included in the result.</span></span> <span data-ttu-id="52c55-114">Option.skip 指定要跳过和结果中不包含的项的数目。</span><span class="sxs-lookup"><span data-stu-id="52c55-114">Option.skip specifies the number of items that are to be skipped and not included in the result.</span></span> <span data-ttu-id="52c55-115">如果指定 option.top，则将跳过指定的数目的项后启动结果集。</span><span class="sxs-lookup"><span data-stu-id="52c55-115">If option.top is specified, the result set will start after skipping the specified number of items.</span></span>
   name: load(option)
   fullName: excel.Excel.ColorScaleConditionalFormat.load
   langs:
@@ -65,15 +65,15 @@ items:
       description: ''
     parameters:
     - id: option
-      description: <span data-ttu-id="2a9a5-116">以逗号分隔字符串或一个指定要加载的属性的字符串数组。</span><span class="sxs-lookup"><span data-stu-id="2a9a5-116">A comma-delimited string or an array of strings that specify the properties to load.</span></span>
+      description: <span data-ttu-id="52c55-116">以逗号分隔字符串或一个指定要加载的属性的字符串数组。</span><span class="sxs-lookup"><span data-stu-id="52c55-116">A comma-delimited string or an array of strings that specify the properties to load.</span></span>
       type:
       - string | string[]
 - uid: excel.Excel.ColorScaleConditionalFormat.threeColorScale
   summary: >-
-    <span data-ttu-id="2a9a5-117">如果 true 色阶将有三个点 （最小值、 中点，最大），否则它将有两个 （最小值、 最大）。</span><span class="sxs-lookup"><span data-stu-id="2a9a5-117">If true the color scale will have three points (minimum, midpoint, maximum), otherwise it will have two (minimum, maximum).</span></span>
+    <span data-ttu-id="52c55-117">如果 true 色阶将有三个点 （最小值、 中点，最大），否则它将有两个 （最小值、 最大）。</span><span class="sxs-lookup"><span data-stu-id="52c55-117">If true the color scale will have three points (minimum, midpoint, maximum), otherwise it will have two (minimum, maximum).</span></span>
 
 
-    <span data-ttu-id="2a9a5-118">\[[API 集： ExcelApi 1.6](/javascript/office/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="2a9a5-118">\[ [API set: ExcelApi 1.6](/javascript/office/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="52c55-118">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="52c55-118">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   name: threeColorScale
   fullName: excel.Excel.ColorScaleConditionalFormat.threeColorScale
   langs:
