--- a/docs/docs-ref-autogen/excel/excel.conditionalcolorscalecriterion.yml
+++ b/docs/docs-ref-autogen/excel/excel.conditionalcolorscalecriterion.yml
@@ -1,17 +1,17 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: fac38f75212d93120f10abc91edc4026974269e1
-ms.sourcegitcommit: 262b7c417245b7b61a57d53eee33a477a722ca6e
+ms.openlocfilehash: bebff4e1d833aa63e436b9f1e62ab180721bc5a3
+ms.sourcegitcommit: c1149d24b38f20daf9ce690cd0761ec1ceb7333d
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 09/28/2018
-ms.locfileid: "24042441"
+ms.lasthandoff: 10/17/2018
+ms.locfileid: "25592693"
 items:
 - uid: excel.Excel.ConditionalColorScaleCriterion
   summary: >-
-    <span data-ttu-id="3b1a6-101">代表一个颜色刻度条件，其中包含类型、 值和颜色。</span><span class="sxs-lookup"><span data-stu-id="3b1a6-101">Represents a Color Scale Criterion which contains a type, value, and a color.</span></span>
+    <span data-ttu-id="ddf78-101">代表一个颜色刻度条件，其中包含类型、 值和颜色。</span><span class="sxs-lookup"><span data-stu-id="ddf78-101">Represents a Color Scale Criterion which contains a type, value, and a color.</span></span>
 
 
-    <span data-ttu-id="3b1a6-102">\[[API 集： ExcelApi 1.6](/javascript/office/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="3b1a6-102">\[ [API set: ExcelApi 1.6](/javascript/office/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="ddf78-102">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="ddf78-102">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   name: Excel.ConditionalColorScaleCriterion
   fullName: excel.Excel.ConditionalColorScaleCriterion
   langs:
@@ -24,10 +24,10 @@ items:
   - excel.Excel.ConditionalColorScaleCriterion.type
 - uid: excel.Excel.ConditionalColorScaleCriterion.color
   summary: >-
-    <span data-ttu-id="3b1a6-103">HTML 颜色代码的表示形式的颜色刻度颜色。</span><span class="sxs-lookup"><span data-stu-id="3b1a6-103">HTML color code representation of the color scale color.</span></span> <span data-ttu-id="3b1a6-104">例如，</span><span class="sxs-lookup"><span data-stu-id="3b1a6-104">E.g.</span></span> <span data-ttu-id="3b1a6-105">\#FF0000 表示红色。</span><span class="sxs-lookup"><span data-stu-id="3b1a6-105">\#FF0000 represents Red.</span></span>
+    <span data-ttu-id="ddf78-103">HTML 颜色代码的表示形式的颜色刻度颜色。</span><span class="sxs-lookup"><span data-stu-id="ddf78-103">HTML color code representation of the color scale color.</span></span> <span data-ttu-id="ddf78-104">例如，</span><span class="sxs-lookup"><span data-stu-id="ddf78-104">E.g.</span></span> <span data-ttu-id="ddf78-105">\#FF0000 表示红色。</span><span class="sxs-lookup"><span data-stu-id="ddf78-105">\#FF0000 represents Red.</span></span>
 
 
-    <span data-ttu-id="3b1a6-106">\[[API 集： ExcelApi 1.6](/javascript/office/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="3b1a6-106">\[ [API set: ExcelApi 1.6](/javascript/office/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="ddf78-106">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="ddf78-106">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   name: color
   fullName: excel.Excel.ConditionalColorScaleCriterion.color
   langs:
@@ -40,10 +40,10 @@ items:
       - string
 - uid: excel.Excel.ConditionalColorScaleCriterion.formula
   summary: >-
-    <span data-ttu-id="3b1a6-107">数字、公式或 null（如果类型为 LowestValue）。</span><span class="sxs-lookup"><span data-stu-id="3b1a6-107">A number, a formula, or null (if Type is LowestValue).</span></span>
+    <span data-ttu-id="ddf78-107">数字、公式或 null（如果类型为 LowestValue）。</span><span class="sxs-lookup"><span data-stu-id="ddf78-107">A number, a formula, or null (if Type is LowestValue).</span></span>
 
 
-    <span data-ttu-id="3b1a6-108">\[[API 集： ExcelApi 1.6](/javascript/office/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="3b1a6-108">\[ [API set: ExcelApi 1.6](/javascript/office/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="ddf78-108">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="ddf78-108">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   name: formula
   fullName: excel.Excel.ConditionalColorScaleCriterion.formula
   langs:
@@ -56,10 +56,10 @@ items:
       - string
 - uid: excel.Excel.ConditionalColorScaleCriterion.type
   summary: >-
-    <span data-ttu-id="3b1a6-109">应基于的图标条件公式。</span><span class="sxs-lookup"><span data-stu-id="3b1a6-109">What the icon conditional formula should be based on.</span></span>
+    <span data-ttu-id="ddf78-109">应基于的图标条件公式。</span><span class="sxs-lookup"><span data-stu-id="ddf78-109">What the icon conditional formula should be based on.</span></span>
 
 
-    <span data-ttu-id="3b1a6-110">\[[API 集： ExcelApi 1.6](/javascript/office/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="3b1a6-110">\[ [API set: ExcelApi 1.6](/javascript/office/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="ddf78-110">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="ddf78-110">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   name: type
   fullName: excel.Excel.ConditionalColorScaleCriterion.type
   langs:
