--- a/docs/docs-ref-autogen/excel/excel.conditionaldatabaraxisformat.yml
+++ b/docs/docs-ref-autogen/excel/excel.conditionaldatabaraxisformat.yml
@@ -1,17 +1,17 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 2e0d34a49911f9c2791e09a8a0332df2a811c4ff
-ms.sourcegitcommit: 262b7c417245b7b61a57d53eee33a477a722ca6e
+ms.openlocfilehash: 9d6a3585283395327329161808dbf2edf00db21d
+ms.sourcegitcommit: c1149d24b38f20daf9ce690cd0761ec1ceb7333d
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 09/28/2018
-ms.locfileid: "24041924"
+ms.lasthandoff: 10/17/2018
+ms.locfileid: "25592112"
 items:
 - uid: excel.Excel.ConditionalDataBarAxisFormat
   summary: >-
-    <span data-ttu-id="84e13-101">代表数据栏轴的格式选项。</span><span class="sxs-lookup"><span data-stu-id="84e13-101">Represents the format options for a Data Bar Axis.</span></span>
+    <span data-ttu-id="9974f-101">代表数据栏轴的格式选项。</span><span class="sxs-lookup"><span data-stu-id="9974f-101">Represents the format options for a Data Bar Axis.</span></span>
 
 
-    <span data-ttu-id="84e13-102">\[[API 集： ExcelApi 1.6](/javascript/office/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="84e13-102">\[ [API set: ExcelApi 1.6](/javascript/office/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="9974f-102">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="9974f-102">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   name: Excel.ConditionalDataBarAxisFormat
   fullName: excel.Excel.ConditionalDataBarAxisFormat
   langs:
