--- a/docs/docs-ref-autogen/excel/excel.conditionalformatcolorcriteriontype.yml
+++ b/docs/docs-ref-autogen/excel/excel.conditionalformatcolorcriteriontype.yml
@@ -1,17 +1,17 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 8cc51230a52b8df3c36dc9ac7b5def56774ce92a
-ms.sourcegitcommit: 262b7c417245b7b61a57d53eee33a477a722ca6e
+ms.openlocfilehash: 5c51a287f8160c5fd353872614da4c0c43e25361
+ms.sourcegitcommit: c1149d24b38f20daf9ce690cd0761ec1ceb7333d
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 09/28/2018
-ms.locfileid: "24041931"
+ms.lasthandoff: 10/17/2018
+ms.locfileid: "25592644"
 items:
 - uid: excel.Excel.ConditionalFormatColorCriterionType
   summary: >-
-    <span data-ttu-id="c47bc-101">代表条件格式值的类型。</span><span class="sxs-lookup"><span data-stu-id="c47bc-101">Represents the types of conditional format values.</span></span>
+    <span data-ttu-id="c8f85-101">代表条件格式值的类型。</span><span class="sxs-lookup"><span data-stu-id="c8f85-101">Represents the types of conditional format values.</span></span>
 
 
-    <span data-ttu-id="c47bc-102">\[[API 集： ExcelApi 1.6](/javascript/office/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="c47bc-102">\[ [API set: ExcelApi 1.6](/javascript/office/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="c8f85-102">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="c8f85-102">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   name: Excel.ConditionalFormatColorCriterionType
   fullName: excel.Excel.ConditionalFormatColorCriterionType
   langs:
