--- a/docs/docs-ref-autogen/excel/excel.interfaces.chartlegendentrydata.yml
+++ b/docs/docs-ref-autogen/excel/excel.interfaces.chartlegendentrydata.yml
@@ -1,13 +1,13 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 62dc41322b32ede3c267f00b5ba8ea089f33e579
-ms.sourcegitcommit: 262b7c417245b7b61a57d53eee33a477a722ca6e
+ms.openlocfilehash: f12ef9329ab4188e2d4a2182578b31b7d5221eac
+ms.sourcegitcommit: c1149d24b38f20daf9ce690cd0761ec1ceb7333d
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 09/28/2018
-ms.locfileid: "24062924"
+ms.lasthandoff: 10/17/2018
+ms.locfileid: "25592728"
 items:
 - uid: excel.Excel.Interfaces.ChartLegendEntryData
-  summary: <span data-ttu-id="b5cd9-101">描述调用"chartLegendEntry.toJSON()"返回的数据的接口。</span><span class="sxs-lookup"><span data-stu-id="b5cd9-101">An interface describing the data returned by calling "chartLegendEntry.toJSON()".</span></span>
+  summary: <span data-ttu-id="c0400-101">描述调用"chartLegendEntry.toJSON()"返回的数据的接口。</span><span class="sxs-lookup"><span data-stu-id="c0400-101">An interface describing the data returned by calling "chartLegendEntry.toJSON()".</span></span>
   name: Excel.Interfaces.ChartLegendEntryData
   fullName: excel.Excel.Interfaces.ChartLegendEntryData
   langs:
@@ -23,10 +23,10 @@ items:
   - excel.Excel.Interfaces.ChartLegendEntryData.width
 - uid: excel.Excel.Interfaces.ChartLegendEntryData.height
   summary: >-
-    <span data-ttu-id="b5cd9-102">代表图表图例上 legendEntry 的高度。</span><span class="sxs-lookup"><span data-stu-id="b5cd9-102">Represents the height of the legendEntry on the chart Legend.</span></span>
+    <span data-ttu-id="c0400-102">代表图表图例上 legendEntry 的高度。</span><span class="sxs-lookup"><span data-stu-id="c0400-102">Represents the height of the legendEntry on the chart Legend.</span></span>
 
 
-    <span data-ttu-id="b5cd9-103">\[[API 集： ExcelApi 1.8](/javascript/office/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="b5cd9-103">\[ [API set: ExcelApi 1.8](/javascript/office/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="c0400-103">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="c0400-103">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   name: height
   fullName: excel.Excel.Interfaces.ChartLegendEntryData.height
   langs:
@@ -39,10 +39,10 @@ items:
       - number
 - uid: excel.Excel.Interfaces.ChartLegendEntryData.index
   summary: >-
-    <span data-ttu-id="b5cd9-104">代表图表图例中 LegendEntry 的索引。</span><span class="sxs-lookup"><span data-stu-id="b5cd9-104">Represents the index of the LegendEntry in the Chart Legend.</span></span>
+    <span data-ttu-id="c0400-104">代表图表图例中 LegendEntry 的索引。</span><span class="sxs-lookup"><span data-stu-id="c0400-104">Represents the index of the LegendEntry in the Chart Legend.</span></span>
 
 
-    <span data-ttu-id="b5cd9-105">\[[API 集： ExcelApi 1.8](/javascript/office/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="b5cd9-105">\[ [API set: ExcelApi 1.8](/javascript/office/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="c0400-105">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="c0400-105">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   name: index
   fullName: excel.Excel.Interfaces.ChartLegendEntryData.index
   langs:
@@ -55,10 +55,10 @@ items:
       - number
 - uid: excel.Excel.Interfaces.ChartLegendEntryData.left
   summary: >-
-    <span data-ttu-id="b5cd9-106">代表图表 legendEntry 的左侧。</span><span class="sxs-lookup"><span data-stu-id="b5cd9-106">Represents the left of a chart legendEntry.</span></span>
+    <span data-ttu-id="c0400-106">代表图表 legendEntry 的左侧。</span><span class="sxs-lookup"><span data-stu-id="c0400-106">Represents the left of a chart legendEntry.</span></span>
 
 
-    <span data-ttu-id="b5cd9-107">\[[API 集： ExcelApi 1.8](/javascript/office/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="b5cd9-107">\[ [API set: ExcelApi 1.8](/javascript/office/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="c0400-107">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="c0400-107">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   name: left
   fullName: excel.Excel.Interfaces.ChartLegendEntryData.left
   langs:
@@ -71,10 +71,10 @@ items:
       - number
 - uid: excel.Excel.Interfaces.ChartLegendEntryData.top
   summary: >-
-    <span data-ttu-id="b5cd9-108">代表图表 legendEntry 顶部。</span><span class="sxs-lookup"><span data-stu-id="b5cd9-108">Represents the top of a chart legendEntry.</span></span>
+    <span data-ttu-id="c0400-108">代表图表 legendEntry 顶部。</span><span class="sxs-lookup"><span data-stu-id="c0400-108">Represents the top of a chart legendEntry.</span></span>
 
 
-    <span data-ttu-id="b5cd9-109">\[[API 集： ExcelApi 1.8](/javascript/office/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="b5cd9-109">\[ [API set: ExcelApi 1.8](/javascript/office/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="c0400-109">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="c0400-109">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   name: top
   fullName: excel.Excel.Interfaces.ChartLegendEntryData.top
   langs:
@@ -87,10 +87,10 @@ items:
       - number
 - uid: excel.Excel.Interfaces.ChartLegendEntryData.visible
   summary: >-
-    <span data-ttu-id="b5cd9-110">代表图表图例项的可见。</span><span class="sxs-lookup"><span data-stu-id="b5cd9-110">Represents the visible of a chart legend entry.</span></span>
+    <span data-ttu-id="c0400-110">代表图表图例项的可见。</span><span class="sxs-lookup"><span data-stu-id="c0400-110">Represents the visible of a chart legend entry.</span></span>
 
 
-    <span data-ttu-id="b5cd9-111">\[[API 集： ExcelApi 1.7](/javascript/office/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="b5cd9-111">\[ [API set: ExcelApi 1.7](/javascript/office/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="c0400-111">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="c0400-111">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   name: visible
   fullName: excel.Excel.Interfaces.ChartLegendEntryData.visible
   langs:
@@ -103,10 +103,10 @@ items:
       - boolean
 - uid: excel.Excel.Interfaces.ChartLegendEntryData.width
   summary: >-
-    <span data-ttu-id="b5cd9-112">代表图表图例上 legendEntry 的宽度。</span><span class="sxs-lookup"><span data-stu-id="b5cd9-112">Represents the width of the legendEntry on the chart Legend.</span></span>
+    <span data-ttu-id="c0400-112">代表图表图例上 legendEntry 的宽度。</span><span class="sxs-lookup"><span data-stu-id="c0400-112">Represents the width of the legendEntry on the chart Legend.</span></span>
 
 
-    <span data-ttu-id="b5cd9-113">\[[API 集： ExcelApi 1.8](/javascript/office/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="b5cd9-113">\[ [API set: ExcelApi 1.8](/javascript/office/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="c0400-113">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="c0400-113">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   name: width
   fullName: excel.Excel.Interfaces.ChartLegendEntryData.width
   langs:
