--- a/docs/docs-ref-autogen/excel/excel.interfaces.chartlegendentryupdatedata.yml
+++ b/docs/docs-ref-autogen/excel/excel.interfaces.chartlegendentryupdatedata.yml
@@ -1,13 +1,13 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 352e88e963e33f006279f7353ca825b1a995b52a
-ms.sourcegitcommit: 262b7c417245b7b61a57d53eee33a477a722ca6e
+ms.openlocfilehash: e965b18b0d72c626248b59c5701d7794a195c859
+ms.sourcegitcommit: c1149d24b38f20daf9ce690cd0761ec1ceb7333d
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 09/28/2018
-ms.locfileid: "24040962"
+ms.lasthandoff: 10/17/2018
+ms.locfileid: "25592707"
 items:
 - uid: excel.Excel.Interfaces.ChartLegendEntryUpdateData
-  summary: <span data-ttu-id="e1d91-101">更新数据的 ChartLegendEntry 对象，在"chartLegendEntry.set （{...}）"中使用的接口。</span><span class="sxs-lookup"><span data-stu-id="e1d91-101">An interface for updating data on the ChartLegendEntry object, for use in "chartLegendEntry.set({ ... })".</span></span>
+  summary: <span data-ttu-id="ba335-101">更新数据的 ChartLegendEntry 对象，在"chartLegendEntry.set （{...}）"中使用的接口。</span><span class="sxs-lookup"><span data-stu-id="ba335-101">An interface for updating data on the ChartLegendEntry object, for use in "chartLegendEntry.set({ ... })".</span></span>
   name: Excel.Interfaces.ChartLegendEntryUpdateData
   fullName: excel.Excel.Interfaces.ChartLegendEntryUpdateData
   langs:
@@ -18,10 +18,10 @@ items:
   - excel.Excel.Interfaces.ChartLegendEntryUpdateData.visible
 - uid: excel.Excel.Interfaces.ChartLegendEntryUpdateData.visible
   summary: >-
-    <span data-ttu-id="e1d91-102">代表图表图例项的可见。</span><span class="sxs-lookup"><span data-stu-id="e1d91-102">Represents the visible of a chart legend entry.</span></span>
+    <span data-ttu-id="ba335-102">代表图表图例项的可见。</span><span class="sxs-lookup"><span data-stu-id="ba335-102">Represents the visible of a chart legend entry.</span></span>
 
 
-    <span data-ttu-id="e1d91-103">\[[API 集： ExcelApi 1.7](/javascript/office/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e1d91-103">\[ [API set: ExcelApi 1.7](/javascript/office/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="ba335-103">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="ba335-103">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   name: visible
   fullName: excel.Excel.Interfaces.ChartLegendEntryUpdateData.visible
   langs:
