--- a/docs/docs-ref-autogen/excel/excel.interfaces.chartlegendformatdata.yml
+++ b/docs/docs-ref-autogen/excel/excel.interfaces.chartlegendformatdata.yml
@@ -1,13 +1,13 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: fef31715b5d52790845c3dad58236ba121c90b95
-ms.sourcegitcommit: 262b7c417245b7b61a57d53eee33a477a722ca6e
+ms.openlocfilehash: 414a697fcd7da7e08119939bb4be0c10793174a1
+ms.sourcegitcommit: c1149d24b38f20daf9ce690cd0761ec1ceb7333d
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 09/28/2018
-ms.locfileid: "24062581"
+ms.lasthandoff: 10/17/2018
+ms.locfileid: "25592791"
 items:
 - uid: excel.Excel.Interfaces.ChartLegendFormatData
-  summary: <span data-ttu-id="3a6db-101">描述调用"chartLegendFormat.toJSON()"返回的数据的接口。</span><span class="sxs-lookup"><span data-stu-id="3a6db-101">An interface describing the data returned by calling "chartLegendFormat.toJSON()".</span></span>
+  summary: <span data-ttu-id="152cd-101">描述调用"chartLegendFormat.toJSON()"返回的数据的接口。</span><span class="sxs-lookup"><span data-stu-id="152cd-101">An interface describing the data returned by calling "chartLegendFormat.toJSON()".</span></span>
   name: Excel.Interfaces.ChartLegendFormatData
   fullName: excel.Excel.Interfaces.ChartLegendFormatData
   langs:
@@ -19,10 +19,10 @@ items:
   - excel.Excel.Interfaces.ChartLegendFormatData.font
 - uid: excel.Excel.Interfaces.ChartLegendFormatData.border
   summary: >-
-    <span data-ttu-id="3a6db-102">代表边框格式，其中包括颜色、 linestyle 和权重。</span><span class="sxs-lookup"><span data-stu-id="3a6db-102">Represents the border format, which includes color, linestyle, and weight.</span></span> <span data-ttu-id="3a6db-103">只读。</span><span class="sxs-lookup"><span data-stu-id="3a6db-103">Read-only.</span></span>
+    <span data-ttu-id="152cd-102">代表边框格式，其中包括颜色、 linestyle 和权重。</span><span class="sxs-lookup"><span data-stu-id="152cd-102">Represents the border format, which includes color, linestyle, and weight.</span></span> <span data-ttu-id="152cd-103">只读。</span><span class="sxs-lookup"><span data-stu-id="152cd-103">Read-only.</span></span>
 
 
-    <span data-ttu-id="3a6db-104">\[[API 集： ExcelApi 1.8](/javascript/office/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="3a6db-104">\[ [API set: ExcelApi 1.8](/javascript/office/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="152cd-104">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="152cd-104">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   name: border
   fullName: excel.Excel.Interfaces.ChartLegendFormatData.border
   langs:
@@ -35,10 +35,10 @@ items:
       - excel.Excel.Interfaces.ChartBorderData
 - uid: excel.Excel.Interfaces.ChartLegendFormatData.font
   summary: >-
-    <span data-ttu-id="3a6db-p102">表示图表图例的字体属性，例如字体名称、字体大小、颜色等。只读。</span><span class="sxs-lookup"><span data-stu-id="3a6db-p102">Represents the font attributes such as font name, font size, color, etc. of a chart legend. Read-only.</span></span>
+    <span data-ttu-id="152cd-p102">表示图表图例的字体属性，例如字体名称、字体大小、颜色等。只读。</span><span class="sxs-lookup"><span data-stu-id="152cd-p102">Represents the font attributes such as font name, font size, color, etc. of a chart legend. Read-only.</span></span>
 
 
-    <span data-ttu-id="3a6db-107">\[[API 集： ExcelApi 1.1](/javascript/office/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="3a6db-107">\[ [API set: ExcelApi 1.1](/javascript/office/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="152cd-107">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="152cd-107">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   name: font
   fullName: excel.Excel.Interfaces.ChartLegendFormatData.font
   langs:
