--- a/docs/docs-ref-autogen/excel/excel.interfaces.chartlegendformatupdatedata.yml
+++ b/docs/docs-ref-autogen/excel/excel.interfaces.chartlegendformatupdatedata.yml
@@ -1,13 +1,13 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 270631b4b087c1369118015dde0a9dbf495ac78e
-ms.sourcegitcommit: 262b7c417245b7b61a57d53eee33a477a722ca6e
+ms.openlocfilehash: 43aeeeb55b0043187508aad8f46513d0bd3eca31
+ms.sourcegitcommit: c1149d24b38f20daf9ce690cd0761ec1ceb7333d
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 09/28/2018
-ms.locfileid: "24063197"
+ms.lasthandoff: 10/17/2018
+ms.locfileid: "25592756"
 items:
 - uid: excel.Excel.Interfaces.ChartLegendFormatUpdateData
-  summary: <span data-ttu-id="b76a5-101">更新数据的 ChartLegendFormat 对象，在"chartLegendFormat.set （{...}）"中使用的接口。</span><span class="sxs-lookup"><span data-stu-id="b76a5-101">An interface for updating data on the ChartLegendFormat object, for use in "chartLegendFormat.set({ ... })".</span></span>
+  summary: <span data-ttu-id="edea7-101">更新数据的 ChartLegendFormat 对象，在"chartLegendFormat.set （{...}）"中使用的接口。</span><span class="sxs-lookup"><span data-stu-id="edea7-101">An interface for updating data on the ChartLegendFormat object, for use in "chartLegendFormat.set({ ... })".</span></span>
   name: Excel.Interfaces.ChartLegendFormatUpdateData
   fullName: excel.Excel.Interfaces.ChartLegendFormatUpdateData
   langs:
@@ -19,10 +19,10 @@ items:
   - excel.Excel.Interfaces.ChartLegendFormatUpdateData.font
 - uid: excel.Excel.Interfaces.ChartLegendFormatUpdateData.border
   summary: >-
-    <span data-ttu-id="b76a5-102">代表边框格式，其中包括颜色、 linestyle 和权重。</span><span class="sxs-lookup"><span data-stu-id="b76a5-102">Represents the border format, which includes color, linestyle, and weight.</span></span>
+    <span data-ttu-id="edea7-102">代表边框格式，其中包括颜色、 linestyle 和权重。</span><span class="sxs-lookup"><span data-stu-id="edea7-102">Represents the border format, which includes color, linestyle, and weight.</span></span>
 
 
-    <span data-ttu-id="b76a5-103">\[[API 集： ExcelApi 1.8](/javascript/office/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="b76a5-103">\[ [API set: ExcelApi 1.8](/javascript/office/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="edea7-103">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="edea7-103">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   name: border
   fullName: excel.Excel.Interfaces.ChartLegendFormatUpdateData.border
   langs:
@@ -35,10 +35,10 @@ items:
       - excel.Excel.Interfaces.ChartBorderUpdateData
 - uid: excel.Excel.Interfaces.ChartLegendFormatUpdateData.font
   summary: >-
-    <span data-ttu-id="b76a5-104">代表如字体名称、 字号、 颜色等图表图例的字体属性。</span><span class="sxs-lookup"><span data-stu-id="b76a5-104">Represents the font attributes such as font name, font size, color, etc. of a chart legend.</span></span>
+    <span data-ttu-id="edea7-104">代表如字体名称、 字号、 颜色等图表图例的字体属性。</span><span class="sxs-lookup"><span data-stu-id="edea7-104">Represents the font attributes such as font name, font size, color, etc. of a chart legend.</span></span>
 
 
-    <span data-ttu-id="b76a5-105">\[[API 集： ExcelApi 1.1](/javascript/office/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="b76a5-105">\[ [API set: ExcelApi 1.1](/javascript/office/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="edea7-105">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="edea7-105">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   name: font
   fullName: excel.Excel.Interfaces.ChartLegendFormatUpdateData.font
   langs:
