--- a/docs/docs-ref-autogen/excel/excel.interfaces.chartlineformatdata.yml
+++ b/docs/docs-ref-autogen/excel/excel.interfaces.chartlineformatdata.yml
@@ -1,13 +1,13 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 20d7697128bc4011b6480469f94bcf0a89f9d854
-ms.sourcegitcommit: 262b7c417245b7b61a57d53eee33a477a722ca6e
+ms.openlocfilehash: c11e5ca0019e805f86f5dad905e5c64830742381
+ms.sourcegitcommit: c1149d24b38f20daf9ce690cd0761ec1ceb7333d
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 09/28/2018
-ms.locfileid: "24041580"
+ms.lasthandoff: 10/17/2018
+ms.locfileid: "25592805"
 items:
 - uid: excel.Excel.Interfaces.ChartLineFormatData
-  summary: <span data-ttu-id="81a79-101">描述调用"chartLineFormat.toJSON()"返回的数据的接口。</span><span class="sxs-lookup"><span data-stu-id="81a79-101">An interface describing the data returned by calling "chartLineFormat.toJSON()".</span></span>
+  summary: <span data-ttu-id="1aa55-101">描述调用"chartLineFormat.toJSON()"返回的数据的接口。</span><span class="sxs-lookup"><span data-stu-id="1aa55-101">An interface describing the data returned by calling "chartLineFormat.toJSON()".</span></span>
   name: Excel.Interfaces.ChartLineFormatData
   fullName: excel.Excel.Interfaces.ChartLineFormatData
   langs:
@@ -20,10 +20,10 @@ items:
   - excel.Excel.Interfaces.ChartLineFormatData.weight
 - uid: excel.Excel.Interfaces.ChartLineFormatData.color
   summary: >-
-    <span data-ttu-id="81a79-102">表示图表中的线条颜色的 HTML 颜色代码。</span><span class="sxs-lookup"><span data-stu-id="81a79-102">HTML color code representing the color of lines in the chart.</span></span>
+    <span data-ttu-id="1aa55-102">表示图表中的线条颜色的 HTML 颜色代码。</span><span class="sxs-lookup"><span data-stu-id="1aa55-102">HTML color code representing the color of lines in the chart.</span></span>
 
 
-    <span data-ttu-id="81a79-103">\[[API 集： ExcelApi 1.1](/javascript/office/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="81a79-103">\[ [API set: ExcelApi 1.1](/javascript/office/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="1aa55-103">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="1aa55-103">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   name: color
   fullName: excel.Excel.Interfaces.ChartLineFormatData.color
   langs:
@@ -36,10 +36,10 @@ items:
       - string
 - uid: excel.Excel.Interfaces.ChartLineFormatData.lineStyle
   summary: >-
-    <span data-ttu-id="81a79-104">代表线条样式。</span><span class="sxs-lookup"><span data-stu-id="81a79-104">Represents the line style.</span></span> <span data-ttu-id="81a79-105">有关详细信息，请参阅 Excel.ChartLineStyle。</span><span class="sxs-lookup"><span data-stu-id="81a79-105">See Excel.ChartLineStyle for details.</span></span>
+    <span data-ttu-id="1aa55-104">代表线条样式。</span><span class="sxs-lookup"><span data-stu-id="1aa55-104">Represents the line style.</span></span> <span data-ttu-id="1aa55-105">有关详细信息，请参阅 Excel.ChartLineStyle。</span><span class="sxs-lookup"><span data-stu-id="1aa55-105">See Excel.ChartLineStyle for details.</span></span>
 
 
-    <span data-ttu-id="81a79-106">\[[API 集： ExcelApi 1.7](/javascript/office/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="81a79-106">\[ [API set: ExcelApi 1.7](/javascript/office/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="1aa55-106">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="1aa55-106">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   name: lineStyle
   fullName: excel.Excel.Interfaces.ChartLineFormatData.lineStyle
   langs:
@@ -52,10 +52,10 @@ items:
       - Excel.ChartLineStyle | "None" | "Continuous" | "Dash" | "DashDot" | "DashDotDot" | "Dot" | "Grey25" | "Grey50" | "Grey75" | "Automatic" | "RoundDot"
 - uid: excel.Excel.Interfaces.ChartLineFormatData.weight
   summary: >-
-    <span data-ttu-id="81a79-107">代表线条，以磅为单位的粗细。</span><span class="sxs-lookup"><span data-stu-id="81a79-107">Represents weight of the line, in points.</span></span>
+    <span data-ttu-id="1aa55-107">代表线条，以磅为单位的粗细。</span><span class="sxs-lookup"><span data-stu-id="1aa55-107">Represents weight of the line, in points.</span></span>
 
 
-    <span data-ttu-id="81a79-108">\[[API 集： ExcelApi 1.7](/javascript/office/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="81a79-108">\[ [API set: ExcelApi 1.7](/javascript/office/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="1aa55-108">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="1aa55-108">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   name: weight
   fullName: excel.Excel.Interfaces.ChartLineFormatData.weight
   langs:
