--- a/docs/docs-ref-autogen/excel/excel.interfaces.chartlineformatupdatedata.yml
+++ b/docs/docs-ref-autogen/excel/excel.interfaces.chartlineformatupdatedata.yml
@@ -1,13 +1,13 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 3c87db273dc642cc85ac3960daaf72d5f7bde7cb
-ms.sourcegitcommit: 262b7c417245b7b61a57d53eee33a477a722ca6e
+ms.openlocfilehash: 67420948b0189727291f13f9cd28ad7bd0feb54e
+ms.sourcegitcommit: c1149d24b38f20daf9ce690cd0761ec1ceb7333d
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 09/28/2018
-ms.locfileid: "24041635"
+ms.lasthandoff: 10/17/2018
+ms.locfileid: "25592868"
 items:
 - uid: excel.Excel.Interfaces.ChartLineFormatUpdateData
-  summary: <span data-ttu-id="ea319-101">更新数据的 ChartLineFormat 对象，在"chartLineFormat.set （{...}）"中使用的接口。</span><span class="sxs-lookup"><span data-stu-id="ea319-101">An interface for updating data on the ChartLineFormat object, for use in "chartLineFormat.set({ ... })".</span></span>
+  summary: <span data-ttu-id="ce12b-101">更新数据的 ChartLineFormat 对象，在"chartLineFormat.set （{...}）"中使用的接口。</span><span class="sxs-lookup"><span data-stu-id="ce12b-101">An interface for updating data on the ChartLineFormat object, for use in "chartLineFormat.set({ ... })".</span></span>
   name: Excel.Interfaces.ChartLineFormatUpdateData
   fullName: excel.Excel.Interfaces.ChartLineFormatUpdateData
   langs:
@@ -20,10 +20,10 @@ items:
   - excel.Excel.Interfaces.ChartLineFormatUpdateData.weight
 - uid: excel.Excel.Interfaces.ChartLineFormatUpdateData.color
   summary: >-
-    <span data-ttu-id="ea319-102">表示图表中的线条颜色的 HTML 颜色代码。</span><span class="sxs-lookup"><span data-stu-id="ea319-102">HTML color code representing the color of lines in the chart.</span></span>
+    <span data-ttu-id="ce12b-102">表示图表中的线条颜色的 HTML 颜色代码。</span><span class="sxs-lookup"><span data-stu-id="ce12b-102">HTML color code representing the color of lines in the chart.</span></span>
 
 
-    <span data-ttu-id="ea319-103">\[[API 集： ExcelApi 1.1](/javascript/office/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="ea319-103">\[ [API set: ExcelApi 1.1](/javascript/office/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="ce12b-103">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="ce12b-103">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   name: color
   fullName: excel.Excel.Interfaces.ChartLineFormatUpdateData.color
   langs:
@@ -36,10 +36,10 @@ items:
       - string
 - uid: excel.Excel.Interfaces.ChartLineFormatUpdateData.lineStyle
   summary: >-
-    <span data-ttu-id="ea319-104">代表线条样式。</span><span class="sxs-lookup"><span data-stu-id="ea319-104">Represents the line style.</span></span> <span data-ttu-id="ea319-105">有关详细信息，请参阅 Excel.ChartLineStyle。</span><span class="sxs-lookup"><span data-stu-id="ea319-105">See Excel.ChartLineStyle for details.</span></span>
+    <span data-ttu-id="ce12b-104">代表线条样式。</span><span class="sxs-lookup"><span data-stu-id="ce12b-104">Represents the line style.</span></span> <span data-ttu-id="ce12b-105">有关详细信息，请参阅 Excel.ChartLineStyle。</span><span class="sxs-lookup"><span data-stu-id="ce12b-105">See Excel.ChartLineStyle for details.</span></span>
 
 
-    <span data-ttu-id="ea319-106">\[[API 集： ExcelApi 1.7](/javascript/office/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="ea319-106">\[ [API set: ExcelApi 1.7](/javascript/office/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="ce12b-106">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="ce12b-106">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   name: lineStyle
   fullName: excel.Excel.Interfaces.ChartLineFormatUpdateData.lineStyle
   langs:
@@ -52,10 +52,10 @@ items:
       - Excel.ChartLineStyle | "None" | "Continuous" | "Dash" | "DashDot" | "DashDotDot" | "Dot" | "Grey25" | "Grey50" | "Grey75" | "Automatic" | "RoundDot"
 - uid: excel.Excel.Interfaces.ChartLineFormatUpdateData.weight
   summary: >-
-    <span data-ttu-id="ea319-107">代表线条，以磅为单位的粗细。</span><span class="sxs-lookup"><span data-stu-id="ea319-107">Represents weight of the line, in points.</span></span>
+    <span data-ttu-id="ce12b-107">代表线条，以磅为单位的粗细。</span><span class="sxs-lookup"><span data-stu-id="ce12b-107">Represents weight of the line, in points.</span></span>
 
 
-    <span data-ttu-id="ea319-108">\[[API 集： ExcelApi 1.7](/javascript/office/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="ea319-108">\[ [API set: ExcelApi 1.7](/javascript/office/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="ce12b-108">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="ce12b-108">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   name: weight
   fullName: excel.Excel.Interfaces.ChartLineFormatUpdateData.weight
   langs:
