--- a/docs/docs-ref-autogen/excel/excel.interfaces.colorscaleconditionalformatupdatedata.yml
+++ b/docs/docs-ref-autogen/excel/excel.interfaces.colorscaleconditionalformatupdatedata.yml
@@ -1,13 +1,13 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 6a6bc05d0e4091f415f4133f7bb3f065ab15e6a9
-ms.sourcegitcommit: 262b7c417245b7b61a57d53eee33a477a722ca6e
+ms.openlocfilehash: 083dab62a275a568d8ee24f38c8e776ddd6f4c59
+ms.sourcegitcommit: c1149d24b38f20daf9ce690cd0761ec1ceb7333d
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 09/28/2018
-ms.locfileid: "24042006"
+ms.lasthandoff: 10/17/2018
+ms.locfileid: "25592840"
 items:
 - uid: excel.Excel.Interfaces.ColorScaleConditionalFormatUpdateData
-  summary: <span data-ttu-id="77ce3-101">更新数据的 ColorScaleConditionalFormat 对象，在"colorScaleConditionalFormat.set （{...}）"中使用的接口。</span><span class="sxs-lookup"><span data-stu-id="77ce3-101">An interface for updating data on the ColorScaleConditionalFormat object, for use in "colorScaleConditionalFormat.set({ ... })".</span></span>
+  summary: <span data-ttu-id="b545c-101">更新数据的 ColorScaleConditionalFormat 对象，在"colorScaleConditionalFormat.set （{...}）"中使用的接口。</span><span class="sxs-lookup"><span data-stu-id="b545c-101">An interface for updating data on the ColorScaleConditionalFormat object, for use in "colorScaleConditionalFormat.set({ ... })".</span></span>
   name: Excel.Interfaces.ColorScaleConditionalFormatUpdateData
   fullName: excel.Excel.Interfaces.ColorScaleConditionalFormatUpdateData
   langs:
@@ -18,10 +18,10 @@ items:
   - excel.Excel.Interfaces.ColorScaleConditionalFormatUpdateData.criteria
 - uid: excel.Excel.Interfaces.ColorScaleConditionalFormatUpdateData.criteria
   summary: >-
-    <span data-ttu-id="77ce3-p101">彩色温标的条件。使用两点彩色温标时，中点可选。</span><span class="sxs-lookup"><span data-stu-id="77ce3-p101">The criteria of the color scale. Midpoint is optional when using a two point color scale.</span></span>
+    <span data-ttu-id="b545c-p101">彩色温标的条件。使用两点彩色温标时，中点可选。</span><span class="sxs-lookup"><span data-stu-id="b545c-p101">The criteria of the color scale. Midpoint is optional when using a two point color scale.</span></span>
 
 
-    <span data-ttu-id="77ce3-104">\[[API 集： ExcelApi 1.6](/javascript/office/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="77ce3-104">\[ [API set: ExcelApi 1.6](/javascript/office/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="b545c-104">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="b545c-104">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   name: criteria
   fullName: excel.Excel.Interfaces.ColorScaleConditionalFormatUpdateData.criteria
   langs:
