--- a/docs/docs-ref-autogen/excel/excel.worksheetpositiontype.yml
+++ b/docs/docs-ref-autogen/excel/excel.worksheetpositiontype.yml
@@ -1,13 +1,13 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: d85da298696ac641870ac78ffd5316023a27d945
-ms.sourcegitcommit: 262b7c417245b7b61a57d53eee33a477a722ca6e
+ms.openlocfilehash: 8ecb9b8050d005071ed0a930c145aa8b43ad3cb5
+ms.sourcegitcommit: c1149d24b38f20daf9ce690cd0761ec1ceb7333d
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 09/28/2018
-ms.locfileid: "24040475"
+ms.lasthandoff: 10/17/2018
+ms.locfileid: "25592434"
 items:
 - uid: excel.Excel.WorksheetPositionType
-  summary: '<span data-ttu-id="757f1-101">\[[API 集： ExcelApi 1.7](/javascript/office/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="757f1-101">\[ [API set: ExcelApi 1.7](/javascript/office/requirement-sets/excel-api-requirement-sets) \]</span></span>'
+  summary: '<span data-ttu-id="ca410-101">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="ca410-101">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>'
   name: Excel.WorksheetPositionType
   fullName: excel.Excel.WorksheetPositionType
   langs:
