--- a/docs/docs-ref-autogen/excel/excel.worksheetprotectionoptions.yml
+++ b/docs/docs-ref-autogen/excel/excel.worksheetprotectionoptions.yml
@@ -1,17 +1,17 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 1359859d7b5787a4199adbdf3c19853a08d8c167
-ms.sourcegitcommit: 262b7c417245b7b61a57d53eee33a477a722ca6e
+ms.openlocfilehash: 699e778390f191754b0a33485d5467049e09c7d6
+ms.sourcegitcommit: c1149d24b38f20daf9ce690cd0761ec1ceb7333d
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 09/28/2018
-ms.locfileid: "24040608"
+ms.lasthandoff: 10/17/2018
+ms.locfileid: "25592588"
 items:
 - uid: excel.Excel.WorksheetProtectionOptions
   summary: >-
-    <span data-ttu-id="aa825-101">表示工作表保护选项。</span><span class="sxs-lookup"><span data-stu-id="aa825-101">Represents the options in sheet protection.</span></span>
+    <span data-ttu-id="0d573-101">表示工作表保护选项。</span><span class="sxs-lookup"><span data-stu-id="0d573-101">Represents the options in sheet protection.</span></span>
 
 
-    <span data-ttu-id="aa825-102">\[[API 集： ExcelApi 1.2](/javascript/office/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="aa825-102">\[ [API set: ExcelApi 1.2](/javascript/office/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="0d573-102">\[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="0d573-102">\[ [API set: ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   name: Excel.WorksheetProtectionOptions
   fullName: excel.Excel.WorksheetProtectionOptions
   langs:
@@ -35,10 +35,10 @@ items:
   - excel.Excel.WorksheetProtectionOptions.selectionMode
 - uid: excel.Excel.WorksheetProtectionOptions.allowAutoFilter
   summary: >-
-    <span data-ttu-id="aa825-103">表示允许使用自动筛选功能的工作表保护选项。</span><span class="sxs-lookup"><span data-stu-id="aa825-103">Represents the worksheet protection option of allowing using auto filter feature.</span></span>
+    <span data-ttu-id="0d573-103">表示允许使用自动筛选功能的工作表保护选项。</span><span class="sxs-lookup"><span data-stu-id="0d573-103">Represents the worksheet protection option of allowing using auto filter feature.</span></span>
 
 
-    <span data-ttu-id="aa825-104">\[[API 集： ExcelApi 1.2](/javascript/office/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="aa825-104">\[ [API set: ExcelApi 1.2](/javascript/office/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="0d573-104">\[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="0d573-104">\[ [API set: ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   name: allowAutoFilter
   fullName: excel.Excel.WorksheetProtectionOptions.allowAutoFilter
   langs:
@@ -51,10 +51,10 @@ items:
       - boolean
 - uid: excel.Excel.WorksheetProtectionOptions.allowDeleteColumns
   summary: >-
-    <span data-ttu-id="aa825-105">表示允许删除列的工作表保护选项。</span><span class="sxs-lookup"><span data-stu-id="aa825-105">Represents the worksheet protection option of allowing deleting columns.</span></span>
+    <span data-ttu-id="0d573-105">表示允许删除列的工作表保护选项。</span><span class="sxs-lookup"><span data-stu-id="0d573-105">Represents the worksheet protection option of allowing deleting columns.</span></span>
 
 
-    <span data-ttu-id="aa825-106">\[[API 集： ExcelApi 1.2](/javascript/office/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="aa825-106">\[ [API set: ExcelApi 1.2](/javascript/office/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="0d573-106">\[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="0d573-106">\[ [API set: ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   name: allowDeleteColumns
   fullName: excel.Excel.WorksheetProtectionOptions.allowDeleteColumns
   langs:
@@ -67,10 +67,10 @@ items:
       - boolean
 - uid: excel.Excel.WorksheetProtectionOptions.allowDeleteRows
   summary: >-
-    <span data-ttu-id="aa825-107">表示允许删除行的工作表保护选项。</span><span class="sxs-lookup"><span data-stu-id="aa825-107">Represents the worksheet protection option of allowing deleting rows.</span></span>
+    <span data-ttu-id="0d573-107">表示允许删除行的工作表保护选项。</span><span class="sxs-lookup"><span data-stu-id="0d573-107">Represents the worksheet protection option of allowing deleting rows.</span></span>
 
 
-    <span data-ttu-id="aa825-108">\[[API 集： ExcelApi 1.2](/javascript/office/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="aa825-108">\[ [API set: ExcelApi 1.2](/javascript/office/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="0d573-108">\[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="0d573-108">\[ [API set: ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   name: allowDeleteRows
   fullName: excel.Excel.WorksheetProtectionOptions.allowDeleteRows
   langs:
@@ -83,10 +83,10 @@ items:
       - boolean
 - uid: excel.Excel.WorksheetProtectionOptions.allowEditObjects
   summary: >-
-    <span data-ttu-id="aa825-109">代表工作表保护选项的允许编辑对象。</span><span class="sxs-lookup"><span data-stu-id="aa825-109">Represents the worksheet protection option of allowing editing objects.</span></span>
+    <span data-ttu-id="0d573-109">代表工作表保护选项的允许编辑对象。</span><span class="sxs-lookup"><span data-stu-id="0d573-109">Represents the worksheet protection option of allowing editing objects.</span></span>
 
 
-    <span data-ttu-id="aa825-110">\[[API 集： ExcelApi 1.7](/javascript/office/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="aa825-110">\[ [API set: ExcelApi 1.7](/javascript/office/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="0d573-110">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="0d573-110">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   name: allowEditObjects
   fullName: excel.Excel.WorksheetProtectionOptions.allowEditObjects
   langs:
@@ -99,10 +99,10 @@ items:
       - boolean
 - uid: excel.Excel.WorksheetProtectionOptions.allowEditScenarios
   summary: >-
-    <span data-ttu-id="aa825-111">表示允许编辑方案的工作表保护选项。</span><span class="sxs-lookup"><span data-stu-id="aa825-111">Represents the worksheet protection option of allowing editing scenarios.</span></span>
+    <span data-ttu-id="0d573-111">表示允许编辑方案的工作表保护选项。</span><span class="sxs-lookup"><span data-stu-id="0d573-111">Represents the worksheet protection option of allowing editing scenarios.</span></span>
 
 
-    <span data-ttu-id="aa825-112">\[[API 集： ExcelApi 1.7](/javascript/office/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="aa825-112">\[ [API set: ExcelApi 1.7](/javascript/office/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="0d573-112">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="0d573-112">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   name: allowEditScenarios
   fullName: excel.Excel.WorksheetProtectionOptions.allowEditScenarios
   langs:
@@ -115,10 +115,10 @@ items:
       - boolean
 - uid: excel.Excel.WorksheetProtectionOptions.allowFormatCells
   summary: >-
-    <span data-ttu-id="aa825-113">表示允许格式化单元格的工作表保护选项。</span><span class="sxs-lookup"><span data-stu-id="aa825-113">Represents the worksheet protection option of allowing formatting cells.</span></span>
+    <span data-ttu-id="0d573-113">表示允许格式化单元格的工作表保护选项。</span><span class="sxs-lookup"><span data-stu-id="0d573-113">Represents the worksheet protection option of allowing formatting cells.</span></span>
 
 
-    <span data-ttu-id="aa825-114">\[[API 集： ExcelApi 1.2](/javascript/office/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="aa825-114">\[ [API set: ExcelApi 1.2](/javascript/office/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="0d573-114">\[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="0d573-114">\[ [API set: ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   name: allowFormatCells
   fullName: excel.Excel.WorksheetProtectionOptions.allowFormatCells
   langs:
@@ -131,10 +131,10 @@ items:
       - boolean
 - uid: excel.Excel.WorksheetProtectionOptions.allowFormatColumns
   summary: >-
-    <span data-ttu-id="aa825-115">表示允许格式化列的工作表保护选项。</span><span class="sxs-lookup"><span data-stu-id="aa825-115">Represents the worksheet protection option of allowing formatting columns.</span></span>
+    <span data-ttu-id="0d573-115">表示允许格式化列的工作表保护选项。</span><span class="sxs-lookup"><span data-stu-id="0d573-115">Represents the worksheet protection option of allowing formatting columns.</span></span>
 
 
-    <span data-ttu-id="aa825-116">\[[API 集： ExcelApi 1.2](/javascript/office/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="aa825-116">\[ [API set: ExcelApi 1.2](/javascript/office/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="0d573-116">\[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="0d573-116">\[ [API set: ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   name: allowFormatColumns
   fullName: excel.Excel.WorksheetProtectionOptions.allowFormatColumns
   langs:
@@ -147,10 +147,10 @@ items:
       - boolean
 - uid: excel.Excel.WorksheetProtectionOptions.allowFormatRows
   summary: >-
-    <span data-ttu-id="aa825-117">表示允许格式化行的工作表保护选项。</span><span class="sxs-lookup"><span data-stu-id="aa825-117">Represents the worksheet protection option of allowing formatting rows.</span></span>
+    <span data-ttu-id="0d573-117">表示允许格式化行的工作表保护选项。</span><span class="sxs-lookup"><span data-stu-id="0d573-117">Represents the worksheet protection option of allowing formatting rows.</span></span>
 
 
-    <span data-ttu-id="aa825-118">\[[API 集： ExcelApi 1.2](/javascript/office/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="aa825-118">\[ [API set: ExcelApi 1.2](/javascript/office/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="0d573-118">\[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="0d573-118">\[ [API set: ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   name: allowFormatRows
   fullName: excel.Excel.WorksheetProtectionOptions.allowFormatRows
   langs:
@@ -163,10 +163,10 @@ items:
       - boolean
 - uid: excel.Excel.WorksheetProtectionOptions.allowInsertColumns
   summary: >-
-    <span data-ttu-id="aa825-119">表示允许插入列的工作表保护选项。</span><span class="sxs-lookup"><span data-stu-id="aa825-119">Represents the worksheet protection option of allowing inserting columns.</span></span>
+    <span data-ttu-id="0d573-119">表示允许插入列的工作表保护选项。</span><span class="sxs-lookup"><span data-stu-id="0d573-119">Represents the worksheet protection option of allowing inserting columns.</span></span>
 
 
-    <span data-ttu-id="aa825-120">\[[API 集： ExcelApi 1.2](/javascript/office/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="aa825-120">\[ [API set: ExcelApi 1.2](/javascript/office/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="0d573-120">\[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="0d573-120">\[ [API set: ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   name: allowInsertColumns
   fullName: excel.Excel.WorksheetProtectionOptions.allowInsertColumns
   langs:
@@ -179,10 +179,10 @@ items:
       - boolean
 - uid: excel.Excel.WorksheetProtectionOptions.allowInsertHyperlinks
   summary: >-
-    <span data-ttu-id="aa825-121">表示允许插入超链接的工作表保护选项。</span><span class="sxs-lookup"><span data-stu-id="aa825-121">Represents the worksheet protection option of allowing inserting hyperlinks.</span></span>
+    <span data-ttu-id="0d573-121">表示允许插入超链接的工作表保护选项。</span><span class="sxs-lookup"><span data-stu-id="0d573-121">Represents the worksheet protection option of allowing inserting hyperlinks.</span></span>
 
 
-    <span data-ttu-id="aa825-122">\[[API 集： ExcelApi 1.2](/javascript/office/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="aa825-122">\[ [API set: ExcelApi 1.2](/javascript/office/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="0d573-122">\[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="0d573-122">\[ [API set: ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   name: allowInsertHyperlinks
   fullName: excel.Excel.WorksheetProtectionOptions.allowInsertHyperlinks
   langs:
@@ -195,10 +195,10 @@ items:
       - boolean
 - uid: excel.Excel.WorksheetProtectionOptions.allowInsertRows
   summary: >-
-    <span data-ttu-id="aa825-123">表示允许插入行的工作表保护选项。</span><span class="sxs-lookup"><span data-stu-id="aa825-123">Represents the worksheet protection option of allowing inserting rows.</span></span>
+    <span data-ttu-id="0d573-123">表示允许插入行的工作表保护选项。</span><span class="sxs-lookup"><span data-stu-id="0d573-123">Represents the worksheet protection option of allowing inserting rows.</span></span>
 
 
-    <span data-ttu-id="aa825-124">\[[API 集： ExcelApi 1.2](/javascript/office/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="aa825-124">\[ [API set: ExcelApi 1.2](/javascript/office/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="0d573-124">\[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="0d573-124">\[ [API set: ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   name: allowInsertRows
   fullName: excel.Excel.WorksheetProtectionOptions.allowInsertRows
   langs:
@@ -211,10 +211,10 @@ items:
       - boolean
 - uid: excel.Excel.WorksheetProtectionOptions.allowPivotTables
   summary: >-
-    <span data-ttu-id="aa825-125">表示允许使用数据透视表功能的工作表保护选项。</span><span class="sxs-lookup"><span data-stu-id="aa825-125">Represents the worksheet protection option of allowing using PivotTable feature.</span></span>
+    <span data-ttu-id="0d573-125">表示允许使用数据透视表功能的工作表保护选项。</span><span class="sxs-lookup"><span data-stu-id="0d573-125">Represents the worksheet protection option of allowing using PivotTable feature.</span></span>
 
 
-    <span data-ttu-id="aa825-126">\[[API 集： ExcelApi 1.2](/javascript/office/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="aa825-126">\[ [API set: ExcelApi 1.2](/javascript/office/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="0d573-126">\[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="0d573-126">\[ [API set: ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   name: allowPivotTables
   fullName: excel.Excel.WorksheetProtectionOptions.allowPivotTables
   langs:
@@ -227,10 +227,10 @@ items:
       - boolean
 - uid: excel.Excel.WorksheetProtectionOptions.allowSort
   summary: >-
-    <span data-ttu-id="aa825-127">表示允许使用排序功能的工作表保护选项。</span><span class="sxs-lookup"><span data-stu-id="aa825-127">Represents the worksheet protection option of allowing using sort feature.</span></span>
+    <span data-ttu-id="0d573-127">表示允许使用排序功能的工作表保护选项。</span><span class="sxs-lookup"><span data-stu-id="0d573-127">Represents the worksheet protection option of allowing using sort feature.</span></span>
 
 
-    <span data-ttu-id="aa825-128">\[[API 集： ExcelApi 1.2](/javascript/office/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="aa825-128">\[ [API set: ExcelApi 1.2](/javascript/office/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="0d573-128">\[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="0d573-128">\[ [API set: ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   name: allowSort
   fullName: excel.Excel.WorksheetProtectionOptions.allowSort
   langs:
@@ -243,10 +243,10 @@ items:
       - boolean
 - uid: excel.Excel.WorksheetProtectionOptions.selectionMode
   summary: >-
-    <span data-ttu-id="aa825-129">表示选定模式的工作表保护选项。</span><span class="sxs-lookup"><span data-stu-id="aa825-129">Represents the worksheet protection option of selection mode.</span></span>
+    <span data-ttu-id="0d573-129">表示选定模式的工作表保护选项。</span><span class="sxs-lookup"><span data-stu-id="0d573-129">Represents the worksheet protection option of selection mode.</span></span>
 
 
-    <span data-ttu-id="aa825-130">\[[API 集： ExcelApi 1.7](/javascript/office/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="aa825-130">\[ [API set: ExcelApi 1.7](/javascript/office/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="0d573-130">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="0d573-130">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   name: selectionMode
   fullName: excel.Excel.WorksheetProtectionOptions.selectionMode
   langs:
