--- a/docs/docs-ref-autogen/onenote/onenote.inkanalysislinecollection.yml
+++ b/docs/docs-ref-autogen/onenote/onenote.inkanalysislinecollection.yml
@@ -1,17 +1,17 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 4aa073cb4eed75cd86515f0a0bf2fa24e6a8d825
-ms.sourcegitcommit: 262b7c417245b7b61a57d53eee33a477a722ca6e
+ms.openlocfilehash: 374cf95bbdf65a8b941109e372e92d5b1fa0c6c2
+ms.sourcegitcommit: c1149d24b38f20daf9ce690cd0761ec1ceb7333d
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 09/28/2018
-ms.locfileid: "24040144"
+ms.lasthandoff: 10/17/2018
+ms.locfileid: "25592679"
 items:
 - uid: onenote.OneNote.InkAnalysisLineCollection
   summary: >-
-    <span data-ttu-id="4399b-101">表示 InkAnalysisLine 对象的集合。</span><span class="sxs-lookup"><span data-stu-id="4399b-101">Represents a collection of InkAnalysisLine objects.</span></span>
+    <span data-ttu-id="c0b1e-101">表示 InkAnalysisLine 对象的集合。</span><span class="sxs-lookup"><span data-stu-id="c0b1e-101">Represents a collection of InkAnalysisLine objects.</span></span>
 
 
-    <span data-ttu-id="4399b-102">\[[API 集： OneNoteApi 1.1](/javascript/office/requirement-sets/onenote-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="4399b-102">\[ [API set: OneNoteApi 1.1](/javascript/office/requirement-sets/onenote-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="c0b1e-102">\[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="c0b1e-102">\[ [API set: OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets) \]</span></span>
   name: OneNote.InkAnalysisLineCollection
   fullName: onenote.OneNote.InkAnalysisLineCollection
   langs:
@@ -31,10 +31,10 @@ items:
   - onenote.OneNote.InkAnalysisLineCollection.untrack
 - uid: onenote.OneNote.InkAnalysisLineCollection.count
   summary: >-
-    <span data-ttu-id="4399b-p101">返回页面中的 InkAnalysisLines 数目。只读。</span><span class="sxs-lookup"><span data-stu-id="4399b-p101">Returns the number of InkAnalysisLines in the page. Read-only.</span></span>
+    <span data-ttu-id="c0b1e-p101">返回页面中的 InkAnalysisLines 数目。只读。</span><span class="sxs-lookup"><span data-stu-id="c0b1e-p101">Returns the number of InkAnalysisLines in the page. Read-only.</span></span>
 
 
-    <span data-ttu-id="4399b-105">\[[API 集： OneNoteApi 1.1](/javascript/office/requirement-sets/onenote-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="4399b-105">\[ [API set: OneNoteApi 1.1](/javascript/office/requirement-sets/onenote-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="c0b1e-105">\[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="c0b1e-105">\[ [API set: OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets) \]</span></span>
   name: count
   fullName: onenote.OneNote.InkAnalysisLineCollection.count
   langs:
@@ -47,10 +47,10 @@ items:
       - number
 - uid: onenote.OneNote.InkAnalysisLineCollection.getItem
   summary: >-
-    <span data-ttu-id="4399b-p102">按其在集合中的 ID 或索引获取 InkAnalysisLine 对象。只读。</span><span class="sxs-lookup"><span data-stu-id="4399b-p102">Gets a InkAnalysisLine object by ID or by its index in the collection. Read-only.</span></span>
+    <span data-ttu-id="c0b1e-p102">按其在集合中的 ID 或索引获取 InkAnalysisLine 对象。只读。</span><span class="sxs-lookup"><span data-stu-id="c0b1e-p102">Gets a InkAnalysisLine object by ID or by its index in the collection. Read-only.</span></span>
 
 
-    <span data-ttu-id="4399b-108">\[[API 集： OneNoteApi 1.1](/javascript/office/requirement-sets/onenote-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="4399b-108">\[ [API set: OneNoteApi 1.1](/javascript/office/requirement-sets/onenote-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="c0b1e-108">\[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="c0b1e-108">\[ [API set: OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets) \]</span></span>
   name: getItem(index)
   fullName: onenote.OneNote.InkAnalysisLineCollection.getItem
   langs:
@@ -64,15 +64,15 @@ items:
       description: ''
     parameters:
     - id: index
-      description: <span data-ttu-id="4399b-109">InkAnalysisLine 对象的 ID 或集合中 InkAnalysisLine 对象的索引位置。</span><span class="sxs-lookup"><span data-stu-id="4399b-109">The ID of the InkAnalysisLine object, or the index location of the InkAnalysisLine object in the collection.</span></span>
+      description: <span data-ttu-id="c0b1e-109">InkAnalysisLine 对象的 ID 或集合中 InkAnalysisLine 对象的索引位置。</span><span class="sxs-lookup"><span data-stu-id="c0b1e-109">The ID of the InkAnalysisLine object, or the index location of the InkAnalysisLine object in the collection.</span></span>
       type:
       - number | string
 - uid: onenote.OneNote.InkAnalysisLineCollection.getItemAt
   summary: >-
-    <span data-ttu-id="4399b-110">按其在集合中的位置获取 InkAnalysisLine。</span><span class="sxs-lookup"><span data-stu-id="4399b-110">Gets a InkAnalysisLine on its position in the collection.</span></span>
+    <span data-ttu-id="c0b1e-110">按其在集合中的位置获取 InkAnalysisLine。</span><span class="sxs-lookup"><span data-stu-id="c0b1e-110">Gets a InkAnalysisLine on its position in the collection.</span></span>
 
 
-    <span data-ttu-id="4399b-111">\[[API 集： OneNoteApi 1.1](/javascript/office/requirement-sets/onenote-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="4399b-111">\[ [API set: OneNoteApi 1.1](/javascript/office/requirement-sets/onenote-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="c0b1e-111">\[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="c0b1e-111">\[ [API set: OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets) \]</span></span>
   name: getItemAt(index)
   fullName: onenote.OneNote.InkAnalysisLineCollection.getItemAt
   langs:
@@ -86,11 +86,11 @@ items:
       description: ''
     parameters:
     - id: index
-      description: <span data-ttu-id="4399b-p103">要检索的对象的索引值。从零开始编制索引。</span><span class="sxs-lookup"><span data-stu-id="4399b-p103">Index value of the object to be retrieved. Zero-indexed.</span></span>
+      description: <span data-ttu-id="c0b1e-p103">要检索的对象的索引值。从零开始编制索引。</span><span class="sxs-lookup"><span data-stu-id="c0b1e-p103">Index value of the object to be retrieved. Zero-indexed.</span></span>
       type:
       - number
 - uid: onenote.OneNote.InkAnalysisLineCollection.items
-  summary: <span data-ttu-id="4399b-114">获取此集合中的加载的子项目。</span><span class="sxs-lookup"><span data-stu-id="4399b-114">Gets the loaded child items in this collection.</span></span>
+  summary: <span data-ttu-id="c0b1e-114">获取此集合中的加载的子项目。</span><span class="sxs-lookup"><span data-stu-id="c0b1e-114">Gets the loaded child items in this collection.</span></span>
   name: items
   fullName: onenote.OneNote.InkAnalysisLineCollection.items
   langs:
@@ -102,15 +102,15 @@ items:
       type:
       - OneNote.InkAnalysisLine[]
 - uid: onenote.OneNote.InkAnalysisLineCollection.load
-  summary: <span data-ttu-id="4399b-115">队列设置命令加载指定的对象的属性。</span><span class="sxs-lookup"><span data-stu-id="4399b-115">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="4399b-116">读取属性之前，必须调用"context.sync()"。</span><span class="sxs-lookup"><span data-stu-id="4399b-116">You must call "context.sync()" before reading the properties.</span></span>
+  summary: <span data-ttu-id="c0b1e-115">队列设置命令加载指定的对象的属性。</span><span class="sxs-lookup"><span data-stu-id="c0b1e-115">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="c0b1e-116">读取属性之前，必须调用"context.sync()"。</span><span class="sxs-lookup"><span data-stu-id="c0b1e-116">You must call "context.sync()" before reading the properties.</span></span>
   remarks: >-
-    <span data-ttu-id="4399b-117">除了此签名，此方法具有以下签名：</span><span class="sxs-lookup"><span data-stu-id="4399b-117">In addition to this signature, this method has the following signatures:</span></span>
+    <span data-ttu-id="c0b1e-117">除了此签名，此方法具有以下签名：</span><span class="sxs-lookup"><span data-stu-id="c0b1e-117">In addition to this signature, this method has the following signatures:</span></span>
 
 
-    <span data-ttu-id="4399b-118">`load(option?: { select?: string; expand?: string; }): OneNote.InkAnalysisLineCollection`-其中 option.select 是一个以逗号分隔的字符串，指定要加载的属性，options.expand 是一个以逗号分隔的字符串，指定要加载的导航属性。</span><span class="sxs-lookup"><span data-stu-id="4399b-118">`load(option?: { select?: string; expand?: string; }): OneNote.InkAnalysisLineCollection` - Where option.select is a comma-delimited string that specifies the properties to load, and options.expand is a comma-delimited string that specifies the navigation properties to load.</span></span>
+    <span data-ttu-id="c0b1e-118">`load(option?: { select?: string; expand?: string; }): OneNote.InkAnalysisLineCollection`-其中 option.select 是一个以逗号分隔的字符串，指定要加载的属性，options.expand 是一个以逗号分隔的字符串，指定要加载的导航属性。</span><span class="sxs-lookup"><span data-stu-id="c0b1e-118">`load(option?: { select?: string; expand?: string; }): OneNote.InkAnalysisLineCollection` - Where option.select is a comma-delimited string that specifies the properties to load, and options.expand is a comma-delimited string that specifies the navigation properties to load.</span></span>
 
 
-    <span data-ttu-id="4399b-119">`load(option?: { select?: string; expand?: string; top?: number; skip?: number }): OneNote.InkAnalysisLineCollection`-仅可对集合的类型。</span><span class="sxs-lookup"><span data-stu-id="4399b-119">`load(option?: { select?: string; expand?: string; top?: number; skip?: number }): OneNote.InkAnalysisLineCollection` - Only available on collection types.</span></span> <span data-ttu-id="4399b-120">它是类似于前一个签名。</span><span class="sxs-lookup"><span data-stu-id="4399b-120">It is similar to the preceding signature.</span></span> <span data-ttu-id="4399b-121">Option.top 指定集合项可在结果中包含的最大数目。</span><span class="sxs-lookup"><span data-stu-id="4399b-121">Option.top specifies the maximum number of collection items that can be included in the result.</span></span> <span data-ttu-id="4399b-122">Option.skip 指定要跳过和结果中不包含的项的数目。</span><span class="sxs-lookup"><span data-stu-id="4399b-122">Option.skip specifies the number of items that are to be skipped and not included in the result.</span></span> <span data-ttu-id="4399b-123">如果指定 option.top，则将跳过指定的数目的项后启动结果集。</span><span class="sxs-lookup"><span data-stu-id="4399b-123">If option.top is specified, the result set will start after skipping the specified number of items.</span></span>
+    <span data-ttu-id="c0b1e-119">`load(option?: { select?: string; expand?: string; top?: number; skip?: number }): OneNote.InkAnalysisLineCollection`-仅可对集合的类型。</span><span class="sxs-lookup"><span data-stu-id="c0b1e-119">`load(option?: { select?: string; expand?: string; top?: number; skip?: number }): OneNote.InkAnalysisLineCollection` - Only available on collection types.</span></span> <span data-ttu-id="c0b1e-120">它是类似于前一个签名。</span><span class="sxs-lookup"><span data-stu-id="c0b1e-120">It is similar to the preceding signature.</span></span> <span data-ttu-id="c0b1e-121">Option.top 指定集合项可在结果中包含的最大数目。</span><span class="sxs-lookup"><span data-stu-id="c0b1e-121">Option.top specifies the maximum number of collection items that can be included in the result.</span></span> <span data-ttu-id="c0b1e-122">Option.skip 指定要跳过和结果中不包含的项的数目。</span><span class="sxs-lookup"><span data-stu-id="c0b1e-122">Option.skip specifies the number of items that are to be skipped and not included in the result.</span></span> <span data-ttu-id="c0b1e-123">如果指定 option.top，则将跳过指定的数目的项后启动结果集。</span><span class="sxs-lookup"><span data-stu-id="c0b1e-123">If option.top is specified, the result set will start after skipping the specified number of items.</span></span>
   name: load(option)
   fullName: onenote.OneNote.InkAnalysisLineCollection.load
   langs:
@@ -124,7 +124,7 @@ items:
       description: ''
     parameters:
     - id: option
-      description: <span data-ttu-id="4399b-124">以逗号分隔字符串或一个指定要加载的属性的字符串数组。</span><span class="sxs-lookup"><span data-stu-id="4399b-124">A comma-delimited string or an array of strings that specify the properties to load.</span></span>
+      description: <span data-ttu-id="c0b1e-124">以逗号分隔字符串或一个指定要加载的属性的字符串数组。</span><span class="sxs-lookup"><span data-stu-id="c0b1e-124">A comma-delimited string or an array of strings that specify the properties to load.</span></span>
       type:
       - string | string[]
 - uid: onenote.OneNote.InkAnalysisLineCollection.toJSON
@@ -140,7 +140,7 @@ items:
       - onenote.OneNote.Interfaces.InkAnalysisLineCollectionData
       description: ''
 - uid: onenote.OneNote.InkAnalysisLineCollection.track
-  summary: <span data-ttu-id="4399b-125">跟踪自动调整根据周围的文档中的更改的对象。</span><span class="sxs-lookup"><span data-stu-id="4399b-125">Track the object for automatic adjustment based on surrounding changes in the document.</span></span> <span data-ttu-id="4399b-126">此呼叫是 context.trackedObjects.add(thisObject) 简写。</span><span class="sxs-lookup"><span data-stu-id="4399b-126">This call is a shorthand for context.trackedObjects.add(thisObject).</span></span> <span data-ttu-id="4399b-127">如果您正在使用此对象跨".sync"呼叫和外部".run"批处理和 get"InvalidObjectPath"错误的顺序执行设置属性时，或调用对象的方法，您需要具有将对象添加到跟踪对象首先创建对象集合。</span><span class="sxs-lookup"><span data-stu-id="4399b-127">If you are using this object across ".sync" calls and outside the sequential execution of a ".run" batch, and get an "InvalidObjectPath" error when setting a property or invoking a method on the object, you needed to have added the object to the tracked object collection when the object was first created.</span></span>
+  summary: <span data-ttu-id="c0b1e-125">跟踪自动调整根据周围的文档中的更改的对象。</span><span class="sxs-lookup"><span data-stu-id="c0b1e-125">Track the object for automatic adjustment based on surrounding changes in the document.</span></span> <span data-ttu-id="c0b1e-126">此呼叫是 context.trackedObjects.add(thisObject) 简写。</span><span class="sxs-lookup"><span data-stu-id="c0b1e-126">This call is a shorthand for context.trackedObjects.add(thisObject).</span></span> <span data-ttu-id="c0b1e-127">如果您正在使用此对象跨".sync"呼叫和外部".run"批处理和 get"InvalidObjectPath"错误的顺序执行设置属性时，或调用对象的方法，您需要具有将对象添加到跟踪对象首先创建对象集合。</span><span class="sxs-lookup"><span data-stu-id="c0b1e-127">If you are using this object across ".sync" calls and outside the sequential execution of a ".run" batch, and get an "InvalidObjectPath" error when setting a property or invoking a method on the object, you needed to have added the object to the tracked object collection when the object was first created.</span></span>
   name: track()
   fullName: onenote.OneNote.InkAnalysisLineCollection.track
   langs:
@@ -153,7 +153,7 @@ items:
       - onenote.OneNote.InkAnalysisLineCollection
       description: ''
 - uid: onenote.OneNote.InkAnalysisLineCollection.untrack
-  summary: <span data-ttu-id="4399b-128">发行版与此对象，如果以前跟踪关联的内存。</span><span class="sxs-lookup"><span data-stu-id="4399b-128">Release the memory associated with this object, if it has previously been tracked.</span></span> <span data-ttu-id="4399b-129">此呼叫是简写 context.trackedObjects.remove(thisObject)。</span><span class="sxs-lookup"><span data-stu-id="4399b-129">This call is shorthand for context.trackedObjects.remove(thisObject).</span></span> <span data-ttu-id="4399b-130">具有许多跟踪的对象速度减慢主机应用程序，因此请记住以释放添加在完成后的任何对象使用它们。</span><span class="sxs-lookup"><span data-stu-id="4399b-130">Having many tracked objects slows down the host application, so please remember to free any objects you add, once you're done using them.</span></span> <span data-ttu-id="4399b-131">您将需要的内存版本生效前调用"context.sync()"。</span><span class="sxs-lookup"><span data-stu-id="4399b-131">You will need to call "context.sync()" before the memory release takes effect.</span></span>
+  summary: <span data-ttu-id="c0b1e-128">发行版与此对象，如果以前跟踪关联的内存。</span><span class="sxs-lookup"><span data-stu-id="c0b1e-128">Release the memory associated with this object, if it has previously been tracked.</span></span> <span data-ttu-id="c0b1e-129">此呼叫是简写 context.trackedObjects.remove(thisObject)。</span><span class="sxs-lookup"><span data-stu-id="c0b1e-129">This call is shorthand for context.trackedObjects.remove(thisObject).</span></span> <span data-ttu-id="c0b1e-130">具有许多跟踪的对象速度减慢主机应用程序，因此请记住以释放添加在完成后的任何对象使用它们。</span><span class="sxs-lookup"><span data-stu-id="c0b1e-130">Having many tracked objects slows down the host application, so please remember to free any objects you add, once you're done using them.</span></span> <span data-ttu-id="c0b1e-131">您将需要的内存版本生效前调用"context.sync()"。</span><span class="sxs-lookup"><span data-stu-id="c0b1e-131">You will need to call "context.sync()" before the memory release takes effect.</span></span>
   name: untrack()
   fullName: onenote.OneNote.InkAnalysisLineCollection.untrack
   langs:
