--- a/docs/docs-ref-autogen/onenote/onenote.inkstrokecollection.yml
+++ b/docs/docs-ref-autogen/onenote/onenote.inkstrokecollection.yml
@@ -1,17 +1,17 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 0c0b0f435d741c5c805e5e408c32ce9a0c954a5f
-ms.sourcegitcommit: 262b7c417245b7b61a57d53eee33a477a722ca6e
+ms.openlocfilehash: 682574925b9a6b230208f5789a378820c4470346
+ms.sourcegitcommit: c1149d24b38f20daf9ce690cd0761ec1ceb7333d
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 09/28/2018
-ms.locfileid: "24040508"
+ms.lasthandoff: 10/17/2018
+ms.locfileid: "25592665"
 items:
 - uid: onenote.OneNote.InkStrokeCollection
   summary: >-
-    <span data-ttu-id="979a2-101">表示 InkStroke 对象的集合。</span><span class="sxs-lookup"><span data-stu-id="979a2-101">Represents a collection of InkStroke objects.</span></span>
+    <span data-ttu-id="42716-101">表示 InkStroke 对象的集合。</span><span class="sxs-lookup"><span data-stu-id="42716-101">Represents a collection of InkStroke objects.</span></span>
 
 
-    <span data-ttu-id="979a2-102">\[[API 集： OneNoteApi 1.1](/javascript/office/requirement-sets/onenote-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="979a2-102">\[ [API set: OneNoteApi 1.1](/javascript/office/requirement-sets/onenote-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="42716-102">\[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="42716-102">\[ [API set: OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets) \]</span></span>
   name: OneNote.InkStrokeCollection
   fullName: onenote.OneNote.InkStrokeCollection
   langs:
@@ -31,10 +31,10 @@ items:
   - onenote.OneNote.InkStrokeCollection.untrack
 - uid: onenote.OneNote.InkStrokeCollection.count
   summary: >-
-    <span data-ttu-id="979a2-p101">返回页面中的 InkStrokes 数目。只读。</span><span class="sxs-lookup"><span data-stu-id="979a2-p101">Returns the number of InkStrokes in the page. Read-only.</span></span>
+    <span data-ttu-id="42716-p101">返回页面中的 InkStrokes 数目。只读。</span><span class="sxs-lookup"><span data-stu-id="42716-p101">Returns the number of InkStrokes in the page. Read-only.</span></span>
 
 
-    <span data-ttu-id="979a2-105">\[[API 集： OneNoteApi 1.1](/javascript/office/requirement-sets/onenote-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="979a2-105">\[ [API set: OneNoteApi 1.1](/javascript/office/requirement-sets/onenote-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="42716-105">\[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="42716-105">\[ [API set: OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets) \]</span></span>
   name: count
   fullName: onenote.OneNote.InkStrokeCollection.count
   langs:
@@ -47,10 +47,10 @@ items:
       - number
 - uid: onenote.OneNote.InkStrokeCollection.getItem
   summary: >-
-    <span data-ttu-id="979a2-p102">按其在集合中的 ID 或索引获取 InkStroke 对象。只读。</span><span class="sxs-lookup"><span data-stu-id="979a2-p102">Gets a InkStroke object by ID or by its index in the collection. Read-only.</span></span>
+    <span data-ttu-id="42716-p102">按其在集合中的 ID 或索引获取 InkStroke 对象。只读。</span><span class="sxs-lookup"><span data-stu-id="42716-p102">Gets a InkStroke object by ID or by its index in the collection. Read-only.</span></span>
 
 
-    <span data-ttu-id="979a2-108">\[[API 集： OneNoteApi 1.1](/javascript/office/requirement-sets/onenote-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="979a2-108">\[ [API set: OneNoteApi 1.1](/javascript/office/requirement-sets/onenote-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="42716-108">\[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="42716-108">\[ [API set: OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets) \]</span></span>
   name: getItem(index)
   fullName: onenote.OneNote.InkStrokeCollection.getItem
   langs:
@@ -64,15 +64,15 @@ items:
       description: ''
     parameters:
     - id: index
-      description: <span data-ttu-id="979a2-109">InkStroke 对象的 ID 或集合中 InkStroke 对象的索引位置。</span><span class="sxs-lookup"><span data-stu-id="979a2-109">The ID of the InkStroke object, or the index location of the InkStroke object in the collection.</span></span>
+      description: <span data-ttu-id="42716-109">InkStroke 对象的 ID 或集合中 InkStroke 对象的索引位置。</span><span class="sxs-lookup"><span data-stu-id="42716-109">The ID of the InkStroke object, or the index location of the InkStroke object in the collection.</span></span>
       type:
       - number | string
 - uid: onenote.OneNote.InkStrokeCollection.getItemAt
   summary: >-
-    <span data-ttu-id="979a2-110">按其在集合中的位置获取 InkStroke。</span><span class="sxs-lookup"><span data-stu-id="979a2-110">Gets a InkStroke on its position in the collection.</span></span>
+    <span data-ttu-id="42716-110">按其在集合中的位置获取 InkStroke。</span><span class="sxs-lookup"><span data-stu-id="42716-110">Gets a InkStroke on its position in the collection.</span></span>
 
 
-    <span data-ttu-id="979a2-111">\[[API 集： OneNoteApi 1.1](/javascript/office/requirement-sets/onenote-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="979a2-111">\[ [API set: OneNoteApi 1.1](/javascript/office/requirement-sets/onenote-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="42716-111">\[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="42716-111">\[ [API set: OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets) \]</span></span>
   name: getItemAt(index)
   fullName: onenote.OneNote.InkStrokeCollection.getItemAt
   langs:
@@ -86,11 +86,11 @@ items:
       description: ''
     parameters:
     - id: index
-      description: <span data-ttu-id="979a2-p103">要检索的对象的索引值。从零开始编制索引。</span><span class="sxs-lookup"><span data-stu-id="979a2-p103">Index value of the object to be retrieved. Zero-indexed.</span></span>
+      description: <span data-ttu-id="42716-p103">要检索的对象的索引值。从零开始编制索引。</span><span class="sxs-lookup"><span data-stu-id="42716-p103">Index value of the object to be retrieved. Zero-indexed.</span></span>
       type:
       - number
 - uid: onenote.OneNote.InkStrokeCollection.items
-  summary: <span data-ttu-id="979a2-114">获取此集合中的加载的子项目。</span><span class="sxs-lookup"><span data-stu-id="979a2-114">Gets the loaded child items in this collection.</span></span>
+  summary: <span data-ttu-id="42716-114">获取此集合中的加载的子项目。</span><span class="sxs-lookup"><span data-stu-id="42716-114">Gets the loaded child items in this collection.</span></span>
   name: items
   fullName: onenote.OneNote.InkStrokeCollection.items
   langs:
@@ -102,15 +102,15 @@ items:
       type:
       - OneNote.InkStroke[]
 - uid: onenote.OneNote.InkStrokeCollection.load
-  summary: <span data-ttu-id="979a2-115">队列设置命令加载指定的对象的属性。</span><span class="sxs-lookup"><span data-stu-id="979a2-115">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="979a2-116">读取属性之前，必须调用"context.sync()"。</span><span class="sxs-lookup"><span data-stu-id="979a2-116">You must call "context.sync()" before reading the properties.</span></span>
+  summary: <span data-ttu-id="42716-115">队列设置命令加载指定的对象的属性。</span><span class="sxs-lookup"><span data-stu-id="42716-115">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="42716-116">读取属性之前，必须调用"context.sync()"。</span><span class="sxs-lookup"><span data-stu-id="42716-116">You must call "context.sync()" before reading the properties.</span></span>
   remarks: >-
-    <span data-ttu-id="979a2-117">除了此签名，此方法具有以下签名：</span><span class="sxs-lookup"><span data-stu-id="979a2-117">In addition to this signature, this method has the following signatures:</span></span>
+    <span data-ttu-id="42716-117">除了此签名，此方法具有以下签名：</span><span class="sxs-lookup"><span data-stu-id="42716-117">In addition to this signature, this method has the following signatures:</span></span>
 
 
-    <span data-ttu-id="979a2-118">`load(option?: { select?: string; expand?: string; }): OneNote.InkStrokeCollection`-其中 option.select 是一个以逗号分隔的字符串，指定要加载的属性，options.expand 是一个以逗号分隔的字符串，指定要加载的导航属性。</span><span class="sxs-lookup"><span data-stu-id="979a2-118">`load(option?: { select?: string; expand?: string; }): OneNote.InkStrokeCollection` - Where option.select is a comma-delimited string that specifies the properties to load, and options.expand is a comma-delimited string that specifies the navigation properties to load.</span></span>
+    <span data-ttu-id="42716-118">`load(option?: { select?: string; expand?: string; }): OneNote.InkStrokeCollection`-其中 option.select 是一个以逗号分隔的字符串，指定要加载的属性，options.expand 是一个以逗号分隔的字符串，指定要加载的导航属性。</span><span class="sxs-lookup"><span data-stu-id="42716-118">`load(option?: { select?: string; expand?: string; }): OneNote.InkStrokeCollection` - Where option.select is a comma-delimited string that specifies the properties to load, and options.expand is a comma-delimited string that specifies the navigation properties to load.</span></span>
 
 
-    <span data-ttu-id="979a2-119">`load(option?: { select?: string; expand?: string; top?: number; skip?: number }): OneNote.InkStrokeCollection`-仅可对集合的类型。</span><span class="sxs-lookup"><span data-stu-id="979a2-119">`load(option?: { select?: string; expand?: string; top?: number; skip?: number }): OneNote.InkStrokeCollection` - Only available on collection types.</span></span> <span data-ttu-id="979a2-120">它是类似于前一个签名。</span><span class="sxs-lookup"><span data-stu-id="979a2-120">It is similar to the preceding signature.</span></span> <span data-ttu-id="979a2-121">Option.top 指定集合项可在结果中包含的最大数目。</span><span class="sxs-lookup"><span data-stu-id="979a2-121">Option.top specifies the maximum number of collection items that can be included in the result.</span></span> <span data-ttu-id="979a2-122">Option.skip 指定要跳过和结果中不包含的项的数目。</span><span class="sxs-lookup"><span data-stu-id="979a2-122">Option.skip specifies the number of items that are to be skipped and not included in the result.</span></span> <span data-ttu-id="979a2-123">如果指定 option.top，则将跳过指定的数目的项后启动结果集。</span><span class="sxs-lookup"><span data-stu-id="979a2-123">If option.top is specified, the result set will start after skipping the specified number of items.</span></span>
+    <span data-ttu-id="42716-119">`load(option?: { select?: string; expand?: string; top?: number; skip?: number }): OneNote.InkStrokeCollection`-仅可对集合的类型。</span><span class="sxs-lookup"><span data-stu-id="42716-119">`load(option?: { select?: string; expand?: string; top?: number; skip?: number }): OneNote.InkStrokeCollection` - Only available on collection types.</span></span> <span data-ttu-id="42716-120">它是类似于前一个签名。</span><span class="sxs-lookup"><span data-stu-id="42716-120">It is similar to the preceding signature.</span></span> <span data-ttu-id="42716-121">Option.top 指定集合项可在结果中包含的最大数目。</span><span class="sxs-lookup"><span data-stu-id="42716-121">Option.top specifies the maximum number of collection items that can be included in the result.</span></span> <span data-ttu-id="42716-122">Option.skip 指定要跳过和结果中不包含的项的数目。</span><span class="sxs-lookup"><span data-stu-id="42716-122">Option.skip specifies the number of items that are to be skipped and not included in the result.</span></span> <span data-ttu-id="42716-123">如果指定 option.top，则将跳过指定的数目的项后启动结果集。</span><span class="sxs-lookup"><span data-stu-id="42716-123">If option.top is specified, the result set will start after skipping the specified number of items.</span></span>
   name: load(option)
   fullName: onenote.OneNote.InkStrokeCollection.load
   langs:
@@ -124,7 +124,7 @@ items:
       description: ''
     parameters:
     - id: option
-      description: <span data-ttu-id="979a2-124">以逗号分隔字符串或一个指定要加载的属性的字符串数组。</span><span class="sxs-lookup"><span data-stu-id="979a2-124">A comma-delimited string or an array of strings that specify the properties to load.</span></span>
+      description: <span data-ttu-id="42716-124">以逗号分隔字符串或一个指定要加载的属性的字符串数组。</span><span class="sxs-lookup"><span data-stu-id="42716-124">A comma-delimited string or an array of strings that specify the properties to load.</span></span>
       type:
       - string | string[]
 - uid: onenote.OneNote.InkStrokeCollection.toJSON
@@ -140,7 +140,7 @@ items:
       - onenote.OneNote.Interfaces.InkStrokeCollectionData
       description: ''
 - uid: onenote.OneNote.InkStrokeCollection.track
-  summary: <span data-ttu-id="979a2-125">跟踪自动调整根据周围的文档中的更改的对象。</span><span class="sxs-lookup"><span data-stu-id="979a2-125">Track the object for automatic adjustment based on surrounding changes in the document.</span></span> <span data-ttu-id="979a2-126">此呼叫是 context.trackedObjects.add(thisObject) 简写。</span><span class="sxs-lookup"><span data-stu-id="979a2-126">This call is a shorthand for context.trackedObjects.add(thisObject).</span></span> <span data-ttu-id="979a2-127">如果您正在使用此对象跨".sync"呼叫和外部".run"批处理和 get"InvalidObjectPath"错误的顺序执行设置属性时，或调用对象的方法，您需要具有将对象添加到跟踪对象首先创建对象集合。</span><span class="sxs-lookup"><span data-stu-id="979a2-127">If you are using this object across ".sync" calls and outside the sequential execution of a ".run" batch, and get an "InvalidObjectPath" error when setting a property or invoking a method on the object, you needed to have added the object to the tracked object collection when the object was first created.</span></span>
+  summary: <span data-ttu-id="42716-125">跟踪自动调整根据周围的文档中的更改的对象。</span><span class="sxs-lookup"><span data-stu-id="42716-125">Track the object for automatic adjustment based on surrounding changes in the document.</span></span> <span data-ttu-id="42716-126">此呼叫是 context.trackedObjects.add(thisObject) 简写。</span><span class="sxs-lookup"><span data-stu-id="42716-126">This call is a shorthand for context.trackedObjects.add(thisObject).</span></span> <span data-ttu-id="42716-127">如果您正在使用此对象跨".sync"呼叫和外部".run"批处理和 get"InvalidObjectPath"错误的顺序执行设置属性时，或调用对象的方法，您需要具有将对象添加到跟踪对象首先创建对象集合。</span><span class="sxs-lookup"><span data-stu-id="42716-127">If you are using this object across ".sync" calls and outside the sequential execution of a ".run" batch, and get an "InvalidObjectPath" error when setting a property or invoking a method on the object, you needed to have added the object to the tracked object collection when the object was first created.</span></span>
   name: track()
   fullName: onenote.OneNote.InkStrokeCollection.track
   langs:
@@ -153,7 +153,7 @@ items:
       - onenote.OneNote.InkStrokeCollection
       description: ''
 - uid: onenote.OneNote.InkStrokeCollection.untrack
-  summary: <span data-ttu-id="979a2-128">发行版与此对象，如果以前跟踪关联的内存。</span><span class="sxs-lookup"><span data-stu-id="979a2-128">Release the memory associated with this object, if it has previously been tracked.</span></span> <span data-ttu-id="979a2-129">此呼叫是简写 context.trackedObjects.remove(thisObject)。</span><span class="sxs-lookup"><span data-stu-id="979a2-129">This call is shorthand for context.trackedObjects.remove(thisObject).</span></span> <span data-ttu-id="979a2-130">具有许多跟踪的对象速度减慢主机应用程序，因此请记住以释放添加在完成后的任何对象使用它们。</span><span class="sxs-lookup"><span data-stu-id="979a2-130">Having many tracked objects slows down the host application, so please remember to free any objects you add, once you're done using them.</span></span> <span data-ttu-id="979a2-131">您将需要的内存版本生效前调用"context.sync()"。</span><span class="sxs-lookup"><span data-stu-id="979a2-131">You will need to call "context.sync()" before the memory release takes effect.</span></span>
+  summary: <span data-ttu-id="42716-128">发行版与此对象，如果以前跟踪关联的内存。</span><span class="sxs-lookup"><span data-stu-id="42716-128">Release the memory associated with this object, if it has previously been tracked.</span></span> <span data-ttu-id="42716-129">此呼叫是简写 context.trackedObjects.remove(thisObject)。</span><span class="sxs-lookup"><span data-stu-id="42716-129">This call is shorthand for context.trackedObjects.remove(thisObject).</span></span> <span data-ttu-id="42716-130">具有许多跟踪的对象速度减慢主机应用程序，因此请记住以释放添加在完成后的任何对象使用它们。</span><span class="sxs-lookup"><span data-stu-id="42716-130">Having many tracked objects slows down the host application, so please remember to free any objects you add, once you're done using them.</span></span> <span data-ttu-id="42716-131">您将需要的内存版本生效前调用"context.sync()"。</span><span class="sxs-lookup"><span data-stu-id="42716-131">You will need to call "context.sync()" before the memory release takes effect.</span></span>
   name: untrack()
   fullName: onenote.OneNote.InkStrokeCollection.untrack
   langs:
