--- a/docs/docs-ref-autogen/onenote/onenote.interfaces.inkanalysislineupdatedata.yml
+++ b/docs/docs-ref-autogen/onenote/onenote.interfaces.inkanalysislineupdatedata.yml
@@ -1,13 +1,13 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 3dc5259f5c24cfaeddbc4af0ca2e6f6e278dc61f
-ms.sourcegitcommit: 262b7c417245b7b61a57d53eee33a477a722ca6e
+ms.openlocfilehash: 31e196708f68a384ba21f53ba80f57fa71e5abb2
+ms.sourcegitcommit: c1149d24b38f20daf9ce690cd0761ec1ceb7333d
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 09/28/2018
-ms.locfileid: "24040512"
+ms.lasthandoff: 10/17/2018
+ms.locfileid: "25592567"
 items:
 - uid: onenote.OneNote.Interfaces.InkAnalysisLineUpdateData
-  summary: <span data-ttu-id="2a025-101">更新数据的 InkAnalysisLine 对象，在"inkAnalysisLine.set （{...}）"中使用的接口。</span><span class="sxs-lookup"><span data-stu-id="2a025-101">An interface for updating data on the InkAnalysisLine object, for use in "inkAnalysisLine.set({ ... })".</span></span>
+  summary: <span data-ttu-id="5080e-101">更新数据的 InkAnalysisLine 对象，在"inkAnalysisLine.set （{...}）"中使用的接口。</span><span class="sxs-lookup"><span data-stu-id="5080e-101">An interface for updating data on the InkAnalysisLine object, for use in "inkAnalysisLine.set({ ... })".</span></span>
   name: OneNote.Interfaces.InkAnalysisLineUpdateData
   fullName: onenote.OneNote.Interfaces.InkAnalysisLineUpdateData
   langs:
@@ -18,10 +18,10 @@ items:
   - onenote.OneNote.Interfaces.InkAnalysisLineUpdateData.paragraph
 - uid: onenote.OneNote.Interfaces.InkAnalysisLineUpdateData.paragraph
   summary: >-
-    <span data-ttu-id="2a025-102">对父级 InkAnalysisParagraph 的引用。</span><span class="sxs-lookup"><span data-stu-id="2a025-102">Reference to the parent InkAnalysisParagraph.</span></span>
+    <span data-ttu-id="5080e-102">对父级 InkAnalysisParagraph 的引用。</span><span class="sxs-lookup"><span data-stu-id="5080e-102">Reference to the parent InkAnalysisParagraph.</span></span>
 
 
-    <span data-ttu-id="2a025-103">\[[API 集： OneNoteApi 1.1](/javascript/office/requirement-sets/onenote-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="2a025-103">\[ [API set: OneNoteApi 1.1](/javascript/office/requirement-sets/onenote-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="5080e-103">\[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="5080e-103">\[ [API set: OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets) \]</span></span>
   name: paragraph
   fullName: onenote.OneNote.Interfaces.InkAnalysisLineUpdateData.paragraph
   langs:
