--- a/docs/docs-ref-autogen/onenote/onenote.interfaces.richtextdata.yml
+++ b/docs/docs-ref-autogen/onenote/onenote.interfaces.richtextdata.yml
@@ -1,13 +1,13 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 89784534f4fd57b16ed55b5c4c3c064a855c915f
-ms.sourcegitcommit: 262b7c417245b7b61a57d53eee33a477a722ca6e
+ms.openlocfilehash: 5c10abc4b1479a367c4d021dd7ac0bbf964737ed
+ms.sourcegitcommit: c1149d24b38f20daf9ce690cd0761ec1ceb7333d
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 09/28/2018
-ms.locfileid: "24040093"
+ms.lasthandoff: 10/17/2018
+ms.locfileid: "25592574"
 items:
 - uid: onenote.OneNote.Interfaces.RichTextData
-  summary: <span data-ttu-id="110c0-101">描述调用"richText.toJSON()"返回的数据的接口。</span><span class="sxs-lookup"><span data-stu-id="110c0-101">An interface describing the data returned by calling "richText.toJSON()".</span></span>
+  summary: <span data-ttu-id="758e9-101">描述调用"richText.toJSON()"返回的数据的接口。</span><span class="sxs-lookup"><span data-stu-id="758e9-101">An interface describing the data returned by calling "richText.toJSON()".</span></span>
   name: OneNote.Interfaces.RichTextData
   fullName: onenote.OneNote.Interfaces.RichTextData
   langs:
@@ -21,10 +21,10 @@ items:
   - onenote.OneNote.Interfaces.RichTextData.text
 - uid: onenote.OneNote.Interfaces.RichTextData.id
   summary: >-
-    <span data-ttu-id="110c0-p101">获取 RichText 对象的 ID。只读。</span><span class="sxs-lookup"><span data-stu-id="110c0-p101">Gets the ID of the RichText object. Read-only.</span></span>
+    <span data-ttu-id="758e9-p101">获取 RichText 对象的 ID。只读。</span><span class="sxs-lookup"><span data-stu-id="758e9-p101">Gets the ID of the RichText object. Read-only.</span></span>
 
 
-    <span data-ttu-id="110c0-104">\[[API 集： OneNoteApi 1.1](/javascript/office/requirement-sets/onenote-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="110c0-104">\[ [API set: OneNoteApi 1.1](/javascript/office/requirement-sets/onenote-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="758e9-104">\[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="758e9-104">\[ [API set: OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets) \]</span></span>
   name: id
   fullName: onenote.OneNote.Interfaces.RichTextData.id
   langs:
@@ -37,10 +37,10 @@ items:
       - string
 - uid: onenote.OneNote.Interfaces.RichTextData.languageId
   summary: >-
-    <span data-ttu-id="110c0-p102">文本的语言 ID。只读。</span><span class="sxs-lookup"><span data-stu-id="110c0-p102">The language id of the text. Read-only.</span></span>
+    <span data-ttu-id="758e9-p102">文本的语言 ID。只读。</span><span class="sxs-lookup"><span data-stu-id="758e9-p102">The language id of the text. Read-only.</span></span>
 
 
-    <span data-ttu-id="110c0-107">\[[API 集： OneNoteApi 1.1](/javascript/office/requirement-sets/onenote-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="110c0-107">\[ [API set: OneNoteApi 1.1](/javascript/office/requirement-sets/onenote-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="758e9-107">\[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="758e9-107">\[ [API set: OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets) \]</span></span>
   name: languageId
   fullName: onenote.OneNote.Interfaces.RichTextData.languageId
   langs:
@@ -53,10 +53,10 @@ items:
       - string
 - uid: onenote.OneNote.Interfaces.RichTextData.paragraph
   summary: >-
-    <span data-ttu-id="110c0-p103">获取包含 RichText 对象的 Paragraph 对象。只读。</span><span class="sxs-lookup"><span data-stu-id="110c0-p103">Gets the Paragraph object that contains the RichText object. Read-only.</span></span>
+    <span data-ttu-id="758e9-p103">获取包含 RichText 对象的 Paragraph 对象。只读。</span><span class="sxs-lookup"><span data-stu-id="758e9-p103">Gets the Paragraph object that contains the RichText object. Read-only.</span></span>
 
 
-    <span data-ttu-id="110c0-110">\[[API 集： OneNoteApi 1.1](/javascript/office/requirement-sets/onenote-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="110c0-110">\[ [API set: OneNoteApi 1.1](/javascript/office/requirement-sets/onenote-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="758e9-110">\[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="758e9-110">\[ [API set: OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets) \]</span></span>
   name: paragraph
   fullName: onenote.OneNote.Interfaces.RichTextData.paragraph
   langs:
@@ -69,10 +69,10 @@ items:
       - onenote.OneNote.Interfaces.ParagraphData
 - uid: onenote.OneNote.Interfaces.RichTextData.text
   summary: >-
-    <span data-ttu-id="110c0-p104">获取 RichText 对象的文本内容。只读。</span><span class="sxs-lookup"><span data-stu-id="110c0-p104">Gets the text content of the RichText object. Read-only.</span></span>
+    <span data-ttu-id="758e9-p104">获取 RichText 对象的文本内容。只读。</span><span class="sxs-lookup"><span data-stu-id="758e9-p104">Gets the text content of the RichText object. Read-only.</span></span>
 
 
-    <span data-ttu-id="110c0-113">\[[API 集： OneNoteApi 1.1](/javascript/office/requirement-sets/onenote-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="110c0-113">\[ [API set: OneNoteApi 1.1](/javascript/office/requirement-sets/onenote-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="758e9-113">\[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="758e9-113">\[ [API set: OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets) \]</span></span>
   name: text
   fullName: onenote.OneNote.Interfaces.RichTextData.text
   langs:
