--- a/docs/docs-ref-autogen/onenote/onenote.interfaces.tablecellupdatedata.yml
+++ b/docs/docs-ref-autogen/onenote/onenote.interfaces.tablecellupdatedata.yml
@@ -1,13 +1,13 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 4a1929a9ce11ba991b956c857f7ecc066a99a4fc
-ms.sourcegitcommit: 262b7c417245b7b61a57d53eee33a477a722ca6e
+ms.openlocfilehash: 33aadfb40aec4a826f28e0d384491f61b952a404
+ms.sourcegitcommit: c1149d24b38f20daf9ce690cd0761ec1ceb7333d
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 09/28/2018
-ms.locfileid: "24041706"
+ms.lasthandoff: 10/17/2018
+ms.locfileid: "25592560"
 items:
 - uid: onenote.OneNote.Interfaces.TableCellUpdateData
-  summary: <span data-ttu-id="ac803-101">更新数据的 TableCell 对象，在"tableCell.set （{...}）"中使用的接口。</span><span class="sxs-lookup"><span data-stu-id="ac803-101">An interface for updating data on the TableCell object, for use in "tableCell.set({ ... })".</span></span>
+  summary: <span data-ttu-id="79b92-101">更新数据的 TableCell 对象，在"tableCell.set （{...}）"中使用的接口。</span><span class="sxs-lookup"><span data-stu-id="79b92-101">An interface for updating data on the TableCell object, for use in "tableCell.set({ ... })".</span></span>
   name: OneNote.Interfaces.TableCellUpdateData
   fullName: onenote.OneNote.Interfaces.TableCellUpdateData
   langs:
@@ -18,10 +18,10 @@ items:
   - onenote.OneNote.Interfaces.TableCellUpdateData.shadingColor
 - uid: onenote.OneNote.Interfaces.TableCellUpdateData.shadingColor
   summary: >-
-    <span data-ttu-id="ac803-102">获取并设置单元格的底纹色</span><span class="sxs-lookup"><span data-stu-id="ac803-102">Gets and sets the shading color of the cell</span></span>
+    <span data-ttu-id="79b92-102">获取并设置单元格的底纹色</span><span class="sxs-lookup"><span data-stu-id="79b92-102">Gets and sets the shading color of the cell</span></span>
 
 
-    <span data-ttu-id="ac803-103">\[[API 集： OneNoteApi 1.1](/javascript/office/requirement-sets/onenote-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="ac803-103">\[ [API set: OneNoteApi 1.1](/javascript/office/requirement-sets/onenote-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="79b92-103">\[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="79b92-103">\[ [API set: OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets) \]</span></span>
   name: shadingColor
   fullName: onenote.OneNote.Interfaces.TableCellUpdateData.shadingColor
   langs:
