--- a/docs/docs-ref-autogen/onenote/onenote.interfaces.tabledata.yml
+++ b/docs/docs-ref-autogen/onenote/onenote.interfaces.tabledata.yml
@@ -1,13 +1,13 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: b30eeb99a12ecdfd0da23e1932f3bed58d1aa55a
-ms.sourcegitcommit: 262b7c417245b7b61a57d53eee33a477a722ca6e
+ms.openlocfilehash: 31a53a9ec3a1f3834d61e07dec42d1431c2fd7d0
+ms.sourcegitcommit: c1149d24b38f20daf9ce690cd0761ec1ceb7333d
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 09/28/2018
-ms.locfileid: "24040282"
+ms.lasthandoff: 10/17/2018
+ms.locfileid: "25592630"
 items:
 - uid: onenote.OneNote.Interfaces.TableData
-  summary: <span data-ttu-id="fb42c-101">描述调用"table.toJSON()"返回的数据的接口。</span><span class="sxs-lookup"><span data-stu-id="fb42c-101">An interface describing the data returned by calling "table.toJSON()".</span></span>
+  summary: <span data-ttu-id="1a65d-101">描述调用"table.toJSON()"返回的数据的接口。</span><span class="sxs-lookup"><span data-stu-id="1a65d-101">An interface describing the data returned by calling "table.toJSON()".</span></span>
   name: OneNote.Interfaces.TableData
   fullName: onenote.OneNote.Interfaces.TableData
   langs:
@@ -23,10 +23,10 @@ items:
   - onenote.OneNote.Interfaces.TableData.rows
 - uid: onenote.OneNote.Interfaces.TableData.borderVisible
   summary: >-
-    <span data-ttu-id="fb42c-p101">获取或设置边框是否可见。如果为 true，则边框可见；如果为 false，则边框不可见。</span><span class="sxs-lookup"><span data-stu-id="fb42c-p101">Gets or sets whether the borders are visible or not. True if they are visible, false if they are hidden.</span></span>
+    <span data-ttu-id="1a65d-p101">获取或设置边框是否可见。如果为 true，则边框可见；如果为 false，则边框不可见。</span><span class="sxs-lookup"><span data-stu-id="1a65d-p101">Gets or sets whether the borders are visible or not. True if they are visible, false if they are hidden.</span></span>
 
 
-    <span data-ttu-id="fb42c-104">\[[API 集： OneNoteApi 1.1](/javascript/office/requirement-sets/onenote-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="fb42c-104">\[ [API set: OneNoteApi 1.1](/javascript/office/requirement-sets/onenote-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="1a65d-104">\[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="1a65d-104">\[ [API set: OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets) \]</span></span>
   name: borderVisible
   fullName: onenote.OneNote.Interfaces.TableData.borderVisible
   langs:
@@ -39,10 +39,10 @@ items:
       - boolean
 - uid: onenote.OneNote.Interfaces.TableData.columnCount
   summary: >-
-    <span data-ttu-id="fb42c-105">获取表中的列数。</span><span class="sxs-lookup"><span data-stu-id="fb42c-105">Gets the number of columns in the table.</span></span>
+    <span data-ttu-id="1a65d-105">获取表中的列数。</span><span class="sxs-lookup"><span data-stu-id="1a65d-105">Gets the number of columns in the table.</span></span>
 
 
-    <span data-ttu-id="fb42c-106">\[[API 集： OneNoteApi 1.1](/javascript/office/requirement-sets/onenote-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="fb42c-106">\[ [API set: OneNoteApi 1.1](/javascript/office/requirement-sets/onenote-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="1a65d-106">\[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="1a65d-106">\[ [API set: OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets) \]</span></span>
   name: columnCount
   fullName: onenote.OneNote.Interfaces.TableData.columnCount
   langs:
@@ -55,10 +55,10 @@ items:
       - number
 - uid: onenote.OneNote.Interfaces.TableData.id
   summary: >-
-    <span data-ttu-id="fb42c-p102">获取表格的 ID。只读。</span><span class="sxs-lookup"><span data-stu-id="fb42c-p102">Gets the ID of the table. Read-only.</span></span>
+    <span data-ttu-id="1a65d-p102">获取表格的 ID。只读。</span><span class="sxs-lookup"><span data-stu-id="1a65d-p102">Gets the ID of the table. Read-only.</span></span>
 
 
-    <span data-ttu-id="fb42c-109">\[[API 集： OneNoteApi 1.1](/javascript/office/requirement-sets/onenote-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="fb42c-109">\[ [API set: OneNoteApi 1.1](/javascript/office/requirement-sets/onenote-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="1a65d-109">\[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="1a65d-109">\[ [API set: OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets) \]</span></span>
   name: id
   fullName: onenote.OneNote.Interfaces.TableData.id
   langs:
@@ -71,10 +71,10 @@ items:
       - string
 - uid: onenote.OneNote.Interfaces.TableData.paragraph
   summary: >-
-    <span data-ttu-id="fb42c-p103">获取包含表对象的段落对象。只读。</span><span class="sxs-lookup"><span data-stu-id="fb42c-p103">Gets the Paragraph object that contains the Table object. Read-only.</span></span>
+    <span data-ttu-id="1a65d-p103">获取包含表对象的段落对象。只读。</span><span class="sxs-lookup"><span data-stu-id="1a65d-p103">Gets the Paragraph object that contains the Table object. Read-only.</span></span>
 
 
-    <span data-ttu-id="fb42c-112">\[[API 集： OneNoteApi 1.1](/javascript/office/requirement-sets/onenote-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="fb42c-112">\[ [API set: OneNoteApi 1.1](/javascript/office/requirement-sets/onenote-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="1a65d-112">\[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="1a65d-112">\[ [API set: OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets) \]</span></span>
   name: paragraph
   fullName: onenote.OneNote.Interfaces.TableData.paragraph
   langs:
@@ -87,10 +87,10 @@ items:
       - onenote.OneNote.Interfaces.ParagraphData
 - uid: onenote.OneNote.Interfaces.TableData.rowCount
   summary: >-
-    <span data-ttu-id="fb42c-113">获取表格中的行数。</span><span class="sxs-lookup"><span data-stu-id="fb42c-113">Gets the number of rows in the table.</span></span>
+    <span data-ttu-id="1a65d-113">获取表格中的行数。</span><span class="sxs-lookup"><span data-stu-id="1a65d-113">Gets the number of rows in the table.</span></span>
 
 
-    <span data-ttu-id="fb42c-114">\[[API 集： OneNoteApi 1.1](/javascript/office/requirement-sets/onenote-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="fb42c-114">\[ [API set: OneNoteApi 1.1](/javascript/office/requirement-sets/onenote-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="1a65d-114">\[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="1a65d-114">\[ [API set: OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets) \]</span></span>
   name: rowCount
   fullName: onenote.OneNote.Interfaces.TableData.rowCount
   langs:
@@ -103,10 +103,10 @@ items:
       - number
 - uid: onenote.OneNote.Interfaces.TableData.rows
   summary: >-
-    <span data-ttu-id="fb42c-p104">获取所有表格行。只读。</span><span class="sxs-lookup"><span data-stu-id="fb42c-p104">Gets all of the table rows. Read-only.</span></span>
+    <span data-ttu-id="1a65d-p104">获取所有表格行。只读。</span><span class="sxs-lookup"><span data-stu-id="1a65d-p104">Gets all of the table rows. Read-only.</span></span>
 
 
-    <span data-ttu-id="fb42c-117">\[[API 集： OneNoteApi 1.1](/javascript/office/requirement-sets/onenote-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="fb42c-117">\[ [API set: OneNoteApi 1.1](/javascript/office/requirement-sets/onenote-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="1a65d-117">\[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="1a65d-117">\[ [API set: OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets) \]</span></span>
   name: rows
   fullName: onenote.OneNote.Interfaces.TableData.rows
   langs:
