--- a/docs/docs-ref-autogen/onenote/onenote.interfaces.tablerowdata.yml
+++ b/docs/docs-ref-autogen/onenote/onenote.interfaces.tablerowdata.yml
@@ -1,13 +1,13 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: a95a24f59b8b8fa96daeeb3f5b9026db72ae3b2b
-ms.sourcegitcommit: 262b7c417245b7b61a57d53eee33a477a722ca6e
+ms.openlocfilehash: 97a8f178084306243d5bbcdab986a5fb913d7dc6
+ms.sourcegitcommit: c1149d24b38f20daf9ce690cd0761ec1ceb7333d
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 09/28/2018
-ms.locfileid: "24040121"
+ms.lasthandoff: 10/17/2018
+ms.locfileid: "25592539"
 items:
 - uid: onenote.OneNote.Interfaces.TableRowData
-  summary: <span data-ttu-id="5ca26-101">描述调用"tableRow.toJSON()"返回的数据的接口。</span><span class="sxs-lookup"><span data-stu-id="5ca26-101">An interface describing the data returned by calling "tableRow.toJSON()".</span></span>
+  summary: <span data-ttu-id="65c04-101">描述调用"tableRow.toJSON()"返回的数据的接口。</span><span class="sxs-lookup"><span data-stu-id="65c04-101">An interface describing the data returned by calling "tableRow.toJSON()".</span></span>
   name: OneNote.Interfaces.TableRowData
   fullName: onenote.OneNote.Interfaces.TableRowData
   langs:
@@ -22,10 +22,10 @@ items:
   - onenote.OneNote.Interfaces.TableRowData.rowIndex
 - uid: onenote.OneNote.Interfaces.TableRowData.cellCount
   summary: >-
-    <span data-ttu-id="5ca26-p101">获取行中的单元格数。只读。</span><span class="sxs-lookup"><span data-stu-id="5ca26-p101">Gets the number of cells in the row. Read-only.</span></span>
+    <span data-ttu-id="65c04-p101">获取行中的单元格数。只读。</span><span class="sxs-lookup"><span data-stu-id="65c04-p101">Gets the number of cells in the row. Read-only.</span></span>
 
 
-    <span data-ttu-id="5ca26-104">\[[API 集： OneNoteApi 1.1](/javascript/office/requirement-sets/onenote-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="5ca26-104">\[ [API set: OneNoteApi 1.1](/javascript/office/requirement-sets/onenote-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="65c04-104">\[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="65c04-104">\[ [API set: OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets) \]</span></span>
   name: cellCount
   fullName: onenote.OneNote.Interfaces.TableRowData.cellCount
   langs:
@@ -38,10 +38,10 @@ items:
       - number
 - uid: onenote.OneNote.Interfaces.TableRowData.cells
   summary: >-
-    <span data-ttu-id="5ca26-p102">获取行中的单元格。只读。</span><span class="sxs-lookup"><span data-stu-id="5ca26-p102">Gets the cells in the row. Read-only.</span></span>
+    <span data-ttu-id="65c04-p102">获取行中的单元格。只读。</span><span class="sxs-lookup"><span data-stu-id="65c04-p102">Gets the cells in the row. Read-only.</span></span>
 
 
-    <span data-ttu-id="5ca26-107">\[[API 集： OneNoteApi 1.1](/javascript/office/requirement-sets/onenote-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="5ca26-107">\[ [API set: OneNoteApi 1.1](/javascript/office/requirement-sets/onenote-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="65c04-107">\[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="65c04-107">\[ [API set: OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets) \]</span></span>
   name: cells
   fullName: onenote.OneNote.Interfaces.TableRowData.cells
   langs:
@@ -54,10 +54,10 @@ items:
       - OneNote.Interfaces.TableCellData[]
 - uid: onenote.OneNote.Interfaces.TableRowData.id
   summary: >-
-    <span data-ttu-id="5ca26-p103">获取行的 ID。只读。</span><span class="sxs-lookup"><span data-stu-id="5ca26-p103">Gets the ID of the row. Read-only.</span></span>
+    <span data-ttu-id="65c04-p103">获取行的 ID。只读。</span><span class="sxs-lookup"><span data-stu-id="65c04-p103">Gets the ID of the row. Read-only.</span></span>
 
 
-    <span data-ttu-id="5ca26-110">\[[API 集： OneNoteApi 1.1](/javascript/office/requirement-sets/onenote-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="5ca26-110">\[ [API set: OneNoteApi 1.1](/javascript/office/requirement-sets/onenote-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="65c04-110">\[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="65c04-110">\[ [API set: OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets) \]</span></span>
   name: id
   fullName: onenote.OneNote.Interfaces.TableRowData.id
   langs:
@@ -70,10 +70,10 @@ items:
       - string
 - uid: onenote.OneNote.Interfaces.TableRowData.parentTable
   summary: >-
-    <span data-ttu-id="5ca26-p104">获取父表。只读。</span><span class="sxs-lookup"><span data-stu-id="5ca26-p104">Gets the parent table. Read-only.</span></span>
+    <span data-ttu-id="65c04-p104">获取父表。只读。</span><span class="sxs-lookup"><span data-stu-id="65c04-p104">Gets the parent table. Read-only.</span></span>
 
 
-    <span data-ttu-id="5ca26-113">\[[API 集： OneNoteApi 1.1](/javascript/office/requirement-sets/onenote-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="5ca26-113">\[ [API set: OneNoteApi 1.1](/javascript/office/requirement-sets/onenote-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="65c04-113">\[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="65c04-113">\[ [API set: OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets) \]</span></span>
   name: parentTable
   fullName: onenote.OneNote.Interfaces.TableRowData.parentTable
   langs:
@@ -86,10 +86,10 @@ items:
       - OneNote.Interfaces.TableData
 - uid: onenote.OneNote.Interfaces.TableRowData.rowIndex
   summary: >-
-    <span data-ttu-id="5ca26-p105">获取其父表中的行索引。只读。</span><span class="sxs-lookup"><span data-stu-id="5ca26-p105">Gets the index of the row in its parent table. Read-only.</span></span>
+    <span data-ttu-id="65c04-p105">获取其父表中的行索引。只读。</span><span class="sxs-lookup"><span data-stu-id="65c04-p105">Gets the index of the row in its parent table. Read-only.</span></span>
 
 
-    <span data-ttu-id="5ca26-116">\[[API 集： OneNoteApi 1.1](/javascript/office/requirement-sets/onenote-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="5ca26-116">\[ [API set: OneNoteApi 1.1](/javascript/office/requirement-sets/onenote-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="65c04-116">\[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="65c04-116">\[ [API set: OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets) \]</span></span>
   name: rowIndex
   fullName: onenote.OneNote.Interfaces.TableRowData.rowIndex
   langs:
