--- a/docs/docs-ref-autogen/outlook/office.emailuser.yml
+++ b/docs/docs-ref-autogen/outlook/office.emailuser.yml
@@ -1,22 +1,22 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: b26fdd4dd41e3875c10970495b3127526c24beb8
-ms.sourcegitcommit: a36161c2113d94680dc68150d024e68bdf0390fa
+ms.openlocfilehash: 8c21e1693dd9129be69eb821fcc26c3eb5fab085
+ms.sourcegitcommit: c1149d24b38f20daf9ce690cd0761ec1ceb7333d
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 10/10/2018
-ms.locfileid: "25457142"
+ms.lasthandoff: 10/17/2018
+ms.locfileid: "25592798"
 items:
 - uid: outlook.Office.EmailUser
   summary: >-
-    <span data-ttu-id="1cd76-101">表示 Exchange Server 上的电子邮件帐户。</span><span class="sxs-lookup"><span data-stu-id="1cd76-101">Represents an email account on an Exchange Server.</span></span>
+    <span data-ttu-id="389a0-101">表示 Exchange Server 上的电子邮件帐户。</span><span class="sxs-lookup"><span data-stu-id="389a0-101">Represents an email account on an Exchange Server.</span></span>
 
 
-    <span data-ttu-id="1cd76-102">\[[API 集： 邮箱 1.0](/javascript/office/requirement-sets/outlook-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="1cd76-102">\[ [API set: Mailbox 1.0](/javascript/office/requirement-sets/outlook-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="389a0-102">\[[API 集： 邮箱 1.0](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="389a0-102">\[ [API set: Mailbox 1.0](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets) \]</span></span>
   remarks: >-
-    <table><tr><td>[<span data-ttu-id="1cd76-103">最低权限级别</span><span class="sxs-lookup"><span data-stu-id="1cd76-103"> Minimum permission level</span></span>](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)</td><td><span data-ttu-id="1cd76-104">ReadItem</span><span class="sxs-lookup"><span data-stu-id="1cd76-104">ReadItem</span></span></td></tr>
+    <table><tr><td>[<span data-ttu-id="389a0-103">最低权限级别</span><span class="sxs-lookup"><span data-stu-id="389a0-103"> Minimum permission level</span></span>](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)</td><td><span data-ttu-id="389a0-104">ReadItem</span><span class="sxs-lookup"><span data-stu-id="389a0-104">ReadItem</span></span></td></tr>
 
 
-    <tr><td>[<span data-ttu-id="1cd76-105">适用的 Outlook 模式</span><span class="sxs-lookup"><span data-stu-id="1cd76-105"> Applicable Outlook mode</span></span>](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td><span data-ttu-id="1cd76-106">Read</span><span class="sxs-lookup"><span data-stu-id="1cd76-106">Read</span></span></td></tr></table>
+    <tr><td>[<span data-ttu-id="389a0-105">适用的 Outlook 模式</span><span class="sxs-lookup"><span data-stu-id="389a0-105"> Applicable Outlook mode</span></span>](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td><span data-ttu-id="389a0-106">Read</span><span class="sxs-lookup"><span data-stu-id="389a0-106">Read</span></span></td></tr></table>
   name: Office.EmailUser
   fullName: outlook.Office.EmailUser
   langs:
@@ -27,7 +27,7 @@ items:
   - outlook.Office.EmailUser.displayName
   - outlook.Office.EmailUser.emailAddress
 - uid: outlook.Office.EmailUser.displayName
-  summary: <span data-ttu-id="1cd76-107">获取与电子邮件地址关联的显示名称。</span><span class="sxs-lookup"><span data-stu-id="1cd76-107">Gets the display name associated with an email address.</span></span>
+  summary: <span data-ttu-id="389a0-107">获取与电子邮件地址关联的显示名称。</span><span class="sxs-lookup"><span data-stu-id="389a0-107">Gets the display name associated with an email address.</span></span>
   name: displayName
   fullName: outlook.Office.EmailUser.displayName
   langs:
@@ -39,7 +39,7 @@ items:
       type:
       - string
 - uid: outlook.Office.EmailUser.emailAddress
-  summary: <span data-ttu-id="1cd76-108">获取 SMTP 电子邮件地址。</span><span class="sxs-lookup"><span data-stu-id="1cd76-108">Gets the SMTP email address.</span></span>
+  summary: <span data-ttu-id="389a0-108">获取 SMTP 电子邮件地址。</span><span class="sxs-lookup"><span data-stu-id="389a0-108">Gets the SMTP email address.</span></span>
   name: emailAddress
   fullName: outlook.Office.EmailUser.emailAddress
   langs:
