--- a/docs/docs-ref-autogen/outlook/office.time.yml
+++ b/docs/docs-ref-autogen/outlook/office.time.yml
@@ -1,22 +1,22 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 661978f4f88d0e547b9d787e4ed8f6123343933a
-ms.sourcegitcommit: a36161c2113d94680dc68150d024e68bdf0390fa
+ms.openlocfilehash: f0721e3dac5ef07a76ba6508957c0af7fe9d0490
+ms.sourcegitcommit: c1149d24b38f20daf9ce690cd0761ec1ceb7333d
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 10/10/2018
-ms.locfileid: "25457681"
+ms.lasthandoff: 10/17/2018
+ms.locfileid: "25592889"
 items:
 - uid: outlook.Office.Time
   summary: >-
-    <span data-ttu-id="d66e6-101">Time 对象作为撰写模式中约会的 start 或 end 属性返回。</span><span class="sxs-lookup"><span data-stu-id="d66e6-101">The Time object is returned as the start or end property of an appointment in compose mode.</span></span>
+    <span data-ttu-id="99f2e-101">Time 对象作为撰写模式中约会的 start 或 end 属性返回。</span><span class="sxs-lookup"><span data-stu-id="99f2e-101">The Time object is returned as the start or end property of an appointment in compose mode.</span></span>
 
 
-    <span data-ttu-id="d66e6-102">\[[API 集： 邮箱 1.1](/javascript/office/requirement-sets/outlook-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="d66e6-102">\[ [API set: Mailbox 1.1](/javascript/office/requirement-sets/outlook-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="99f2e-102">\[[API 集： 邮箱 1.1](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="99f2e-102">\[ [API set: Mailbox 1.1](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets) \]</span></span>
   remarks: >-
-    <table><tr><td>[<span data-ttu-id="d66e6-103">最低权限级别</span><span class="sxs-lookup"><span data-stu-id="d66e6-103"> Minimum permission level</span></span>](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)</td><td><span data-ttu-id="d66e6-104">ReadItem</span><span class="sxs-lookup"><span data-stu-id="d66e6-104">ReadItem</span></span></td></tr>
+    <table><tr><td>[<span data-ttu-id="99f2e-103">最低权限级别</span><span class="sxs-lookup"><span data-stu-id="99f2e-103"> Minimum permission level</span></span>](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)</td><td><span data-ttu-id="99f2e-104">ReadItem</span><span class="sxs-lookup"><span data-stu-id="99f2e-104">ReadItem</span></span></td></tr>
 
 
-    <tr><td>[<span data-ttu-id="d66e6-105">适用的 Outlook 模式</span><span class="sxs-lookup"><span data-stu-id="d66e6-105"> Applicable Outlook mode</span></span>](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td><span data-ttu-id="d66e6-106">撰写</span><span class="sxs-lookup"><span data-stu-id="d66e6-106">Compose</span></span></td></tr></table>
+    <tr><td>[<span data-ttu-id="99f2e-105">适用的 Outlook 模式</span><span class="sxs-lookup"><span data-stu-id="99f2e-105"> Applicable Outlook mode</span></span>](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td><span data-ttu-id="99f2e-106">撰写</span><span class="sxs-lookup"><span data-stu-id="99f2e-106">Compose</span></span></td></tr></table>
   name: Office.Time
   fullName: outlook.Office.Time
   langs:
@@ -28,21 +28,21 @@ items:
   - outlook.Office.Time.setAsync
 - uid: outlook.Office.Time.getAsync
   summary: >-
-    <span data-ttu-id="d66e6-107">获取约会的开始或结束时间。</span><span class="sxs-lookup"><span data-stu-id="d66e6-107">Gets the start or end time of an appointment.</span></span>
+    <span data-ttu-id="99f2e-107">获取约会的开始或结束时间。</span><span class="sxs-lookup"><span data-stu-id="99f2e-107">Gets the start or end time of an appointment.</span></span>
 
 
-    <span data-ttu-id="d66e6-p101">日期和时间作为 asyncResult.value 属性中的 Date 对象提供。该值以协调世界时 (UTC) 表示。您可以使用 convertToLocalClientTime 方法将 UTC 时间转换为本地客户端时间。</span><span class="sxs-lookup"><span data-stu-id="d66e6-p101">The date and time is provided as a Date object in the asyncResult.value property. The value is in Coordinated Universal Time (UTC). You can convert the UTC time to the local client time by using the convertToLocalClientTime method.</span></span>
+    <span data-ttu-id="99f2e-p101">日期和时间作为 asyncResult.value 属性中的 Date 对象提供。该值以协调世界时 (UTC) 表示。您可以使用 convertToLocalClientTime 方法将 UTC 时间转换为本地客户端时间。</span><span class="sxs-lookup"><span data-stu-id="99f2e-p101">The date and time is provided as a Date object in the asyncResult.value property. The value is in Coordinated Universal Time (UTC). You can convert the UTC time to the local client time by using the convertToLocalClientTime method.</span></span>
 
 
-    <span data-ttu-id="d66e6-111">\[[API 集： 邮箱 1.1](/javascript/office/requirement-sets/outlook-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="d66e6-111">\[ [API set: Mailbox 1.1](/javascript/office/requirement-sets/outlook-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="99f2e-111">\[[API 集： 邮箱 1.1](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="99f2e-111">\[ [API set: Mailbox 1.1](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets) \]</span></span>
   remarks: >-
-    <table><tr><td>[<span data-ttu-id="d66e6-112">最低权限级别</span><span class="sxs-lookup"><span data-stu-id="d66e6-112"> Minimum permission level</span></span>](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)</td><td><span data-ttu-id="d66e6-113">ReadItem</span><span class="sxs-lookup"><span data-stu-id="d66e6-113">ReadItem</span></span></td></tr>
+    <table><tr><td>[<span data-ttu-id="99f2e-112">最低权限级别</span><span class="sxs-lookup"><span data-stu-id="99f2e-112"> Minimum permission level</span></span>](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)</td><td><span data-ttu-id="99f2e-113">ReadItem</span><span class="sxs-lookup"><span data-stu-id="99f2e-113">ReadItem</span></span></td></tr>
 
 
-    <tr><td>[<span data-ttu-id="d66e6-114">适用的 Outlook 模式</span><span class="sxs-lookup"><span data-stu-id="d66e6-114"> Applicable Outlook mode</span></span>](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td><span data-ttu-id="d66e6-115">撰写</span><span class="sxs-lookup"><span data-stu-id="d66e6-115">Compose</span></span></td></tr></table>
+    <tr><td>[<span data-ttu-id="99f2e-114">适用的 Outlook 模式</span><span class="sxs-lookup"><span data-stu-id="99f2e-114"> Applicable Outlook mode</span></span>](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td><span data-ttu-id="99f2e-115">撰写</span><span class="sxs-lookup"><span data-stu-id="99f2e-115">Compose</span></span></td></tr></table>
 
 
-    <span data-ttu-id="d66e6-116">除了此签名，此方法还具有以下签名：</span><span class="sxs-lookup"><span data-stu-id="d66e6-116">In addition to this signature, this method also has the following signature:</span></span>
+    <span data-ttu-id="99f2e-116">除了此签名，此方法还具有以下签名：</span><span class="sxs-lookup"><span data-stu-id="99f2e-116">In addition to this signature, this method also has the following signature:</span></span>
 
 
     `getAsync(callback: (result: AsyncResult<Date>) => void): void;`
@@ -59,36 +59,36 @@ items:
       description: ''
     parameters:
     - id: options
-      description: '<span data-ttu-id="d66e6-117">包含一个或多个以下属性的对象文本。</span><span class="sxs-lookup"><span data-stu-id="d66e6-117">An object literal that contains one or more of the following properties.</span></span> <span data-ttu-id="d66e6-118">asyncContext： 开发人员可以提供他们希望在回调方法访问任何对象。</span><span class="sxs-lookup"><span data-stu-id="d66e6-118">asyncContext: Developers can provide any object they wish to access in the callback method.</span></span>'
+      description: '<span data-ttu-id="99f2e-117">包含一个或多个以下属性的对象文本。</span><span class="sxs-lookup"><span data-stu-id="99f2e-117">An object literal that contains one or more of the following properties.</span></span> <span data-ttu-id="99f2e-118">asyncContext： 开发人员可以提供他们希望在回调方法访问任何对象。</span><span class="sxs-lookup"><span data-stu-id="99f2e-118">asyncContext: Developers can provide any object they wish to access in the callback method.</span></span>'
       type:
       - office.Office.AsyncContextOptions
     - id: callback
-      description: <span data-ttu-id="d66e6-119">方法完成后，使用单个的类型为 AsyncResult 参数调用中的 callback 参数传递的函数。</span><span class="sxs-lookup"><span data-stu-id="d66e6-119">When the method completes, the function passed in the callback parameter is called with a single parameter of type AsyncResult.</span></span> <span data-ttu-id="d66e6-120">`value`结果属性是一个 Date 对象。</span><span class="sxs-lookup"><span data-stu-id="d66e6-120">The `value` property of the result is a Date object.</span></span>
+      description: <span data-ttu-id="99f2e-119">方法完成后，使用单个的类型为 AsyncResult 参数调用中的 callback 参数传递的函数。</span><span class="sxs-lookup"><span data-stu-id="99f2e-119">When the method completes, the function passed in the callback parameter is called with a single parameter of type AsyncResult.</span></span> <span data-ttu-id="99f2e-120">`value`结果属性是一个 Date 对象。</span><span class="sxs-lookup"><span data-stu-id="99f2e-120">The `value` property of the result is a Date object.</span></span>
       type:
       - '(result: AsyncResult<Date>) => void'
 - uid: outlook.Office.Time.setAsync
   summary: >-
-    <span data-ttu-id="d66e6-121">设置约会的开始或结束时间。</span><span class="sxs-lookup"><span data-stu-id="d66e6-121">Sets the start or end time of an appointment.</span></span>
+    <span data-ttu-id="99f2e-121">设置约会的开始或结束时间。</span><span class="sxs-lookup"><span data-stu-id="99f2e-121">Sets the start or end time of an appointment.</span></span>
 
 
-    <span data-ttu-id="d66e6-p104">如果对 start 属性调用了 setAsync 方法，end 属性将会调整为维持约会持续时间（同之前的设置一样）。如果对 end 属性调用了setAsync 方法，则约会的持续时间将延长到新的结束时间。</span><span class="sxs-lookup"><span data-stu-id="d66e6-p104">If the setAsync method is called on the start property, the end property will be adjusted to maintain the duration of the appointment as previously set. If the setAsync method is called on the end property, the duration of the appointment will be extended to the new end time.</span></span>
+    <span data-ttu-id="99f2e-p104">如果对 start 属性调用了 setAsync 方法，end 属性将会调整为维持约会持续时间（同之前的设置一样）。如果对 end 属性调用了setAsync 方法，则约会的持续时间将延长到新的结束时间。</span><span class="sxs-lookup"><span data-stu-id="99f2e-p104">If the setAsync method is called on the start property, the end property will be adjusted to maintain the duration of the appointment as previously set. If the setAsync method is called on the end property, the duration of the appointment will be extended to the new end time.</span></span>
 
 
-    <span data-ttu-id="d66e6-124">时间必须以 UTC 格式表示；您可以使用 convertToUtcClientTime 方法获取正确的 UTC 时间。</span><span class="sxs-lookup"><span data-stu-id="d66e6-124">The time must be in UTC; you can get the correct UTC time by using the convertToUtcClientTime method.</span></span>
+    <span data-ttu-id="99f2e-124">时间必须以 UTC 格式表示；您可以使用 convertToUtcClientTime 方法获取正确的 UTC 时间。</span><span class="sxs-lookup"><span data-stu-id="99f2e-124">The time must be in UTC; you can get the correct UTC time by using the convertToUtcClientTime method.</span></span>
 
 
-    <span data-ttu-id="d66e6-125">\[[API 集： 邮箱 1.1](/javascript/office/requirement-sets/outlook-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="d66e6-125">\[ [API set: Mailbox 1.1](/javascript/office/requirement-sets/outlook-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="99f2e-125">\[[API 集： 邮箱 1.1](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="99f2e-125">\[ [API set: Mailbox 1.1](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets) \]</span></span>
   remarks: >-
-    <table><tr><td>[<span data-ttu-id="d66e6-126">最低权限级别</span><span class="sxs-lookup"><span data-stu-id="d66e6-126"> Minimum permission level</span></span>](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)</td><td><span data-ttu-id="d66e6-127">ReadWriteItem</span><span class="sxs-lookup"><span data-stu-id="d66e6-127">ReadWriteItem</span></span></td></tr>
+    <table><tr><td>[<span data-ttu-id="99f2e-126">最低权限级别</span><span class="sxs-lookup"><span data-stu-id="99f2e-126"> Minimum permission level</span></span>](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)</td><td><span data-ttu-id="99f2e-127">ReadWriteItem</span><span class="sxs-lookup"><span data-stu-id="99f2e-127">ReadWriteItem</span></span></td></tr>
 
 
-    <tr><td>[<span data-ttu-id="d66e6-128">适用的 Outlook 模式</span><span class="sxs-lookup"><span data-stu-id="d66e6-128"> Applicable Outlook mode</span></span>](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td><span data-ttu-id="d66e6-129">撰写</span><span class="sxs-lookup"><span data-stu-id="d66e6-129">Compose</span></span></td></tr>
+    <tr><td>[<span data-ttu-id="99f2e-128">适用的 Outlook 模式</span><span class="sxs-lookup"><span data-stu-id="99f2e-128"> Applicable Outlook mode</span></span>](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td><span data-ttu-id="99f2e-129">撰写</span><span class="sxs-lookup"><span data-stu-id="99f2e-129">Compose</span></span></td></tr>
 
 
-    <tr><td><span data-ttu-id="d66e6-130">错误</span><span class="sxs-lookup"><span data-stu-id="d66e6-130">Errors</span></span></td><td><span data-ttu-id="d66e6-131">InvalidEndTime-约会结束时间是早于约会开始时间。</span><span class="sxs-lookup"><span data-stu-id="d66e6-131">InvalidEndTime - The appointment end time is before the appointment start time.</span></span></td></tr></table>
+    <tr><td><span data-ttu-id="99f2e-130">错误</span><span class="sxs-lookup"><span data-stu-id="99f2e-130">Errors</span></span></td><td><span data-ttu-id="99f2e-131">InvalidEndTime-约会结束时间是早于约会开始时间。</span><span class="sxs-lookup"><span data-stu-id="99f2e-131">InvalidEndTime - The appointment end time is before the appointment start time.</span></span></td></tr></table>
 
 
-    <span data-ttu-id="d66e6-132">除了此签名，此方法还具有以下签名：</span><span class="sxs-lookup"><span data-stu-id="d66e6-132">In addition to this signature, this method also has the following signatures:</span></span>
+    <span data-ttu-id="99f2e-132">除了此签名，此方法还具有以下签名：</span><span class="sxs-lookup"><span data-stu-id="99f2e-132">In addition to this signature, this method also has the following signatures:</span></span>
 
 
     `setAsync(dateTime: Date): void;`
@@ -99,7 +99,7 @@ items:
 
     `setAsync(dateTime: Date, callback: (result: AsyncResult<void>) => void): void;`
 
-    #### <a name="examples"></a><span data-ttu-id="d66e6-133">示例</span><span class="sxs-lookup"><span data-stu-id="d66e6-133">Examples</span></span>
+    #### <a name="examples"></a><span data-ttu-id="99f2e-133">示例</span><span class="sxs-lookup"><span data-stu-id="99f2e-133">Examples</span></span>
 
 
     ```javascript
@@ -135,14 +135,14 @@ items:
       description: ''
     parameters:
     - id: dateTime
-      description: <span data-ttu-id="d66e6-134">一个日期时间对象以协调世界时 (UTC)。</span><span class="sxs-lookup"><span data-stu-id="d66e6-134">A date-time object in Coordinated Universal Time (UTC).</span></span>
+      description: <span data-ttu-id="99f2e-134">一个日期时间对象以协调世界时 (UTC)。</span><span class="sxs-lookup"><span data-stu-id="99f2e-134">A date-time object in Coordinated Universal Time (UTC).</span></span>
       type:
       - Date
     - id: options
-      description: '<span data-ttu-id="d66e6-135">包含一个或多个以下属性的对象文本。</span><span class="sxs-lookup"><span data-stu-id="d66e6-135">An object literal that contains one or more of the following properties.</span></span> <span data-ttu-id="d66e6-136">asyncContext： 开发人员可以提供他们希望在回调方法访问任何对象。</span><span class="sxs-lookup"><span data-stu-id="d66e6-136">asyncContext: Developers can provide any object they wish to access in the callback method.</span></span>'
+      description: '<span data-ttu-id="99f2e-135">包含一个或多个以下属性的对象文本。</span><span class="sxs-lookup"><span data-stu-id="99f2e-135">An object literal that contains one or more of the following properties.</span></span> <span data-ttu-id="99f2e-136">asyncContext： 开发人员可以提供他们希望在回调方法访问任何对象。</span><span class="sxs-lookup"><span data-stu-id="99f2e-136">asyncContext: Developers can provide any object they wish to access in the callback method.</span></span>'
       type:
       - office.Office.AsyncContextOptions
     - id: callback
-      description: <span data-ttu-id="d66e6-137">该方法完成后，使用类型 Office.AsyncResult 的单个参数调用中的 callback 参数传递的函数。</span><span class="sxs-lookup"><span data-stu-id="d66e6-137">When the method completes, the function passed in the callback parameter is called with a single parameter of type Office.AsyncResult.</span></span> <span data-ttu-id="d66e6-138">如果设置日期和时间失败，则 asyncResult.error 属性将包含错误代码。</span><span class="sxs-lookup"><span data-stu-id="d66e6-138">If setting the date and time fails, the asyncResult.error property will contain an error code.</span></span>
+      description: <span data-ttu-id="99f2e-137">该方法完成后，使用类型 Office.AsyncResult 的单个参数调用中的 callback 参数传递的函数。</span><span class="sxs-lookup"><span data-stu-id="99f2e-137">When the method completes, the function passed in the callback parameter is called with a single parameter of type Office.AsyncResult.</span></span> <span data-ttu-id="99f2e-138">如果设置日期和时间失败，则 asyncResult.error 属性将包含错误代码。</span><span class="sxs-lookup"><span data-stu-id="99f2e-138">If setting the date and time fails, the asyncResult.error property will contain an error code.</span></span>
       type:
       - '(result: AsyncResult<void>) => void'
