--- a/docs/docs-ref-autogen/outlook_1_4/office.attachmentdetails.yml
+++ b/docs/docs-ref-autogen/outlook_1_4/office.attachmentdetails.yml
@@ -1,25 +1,25 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 417378136fb09ceaf30048212ae3f93589807f64
-ms.sourcegitcommit: 262b7c417245b7b61a57d53eee33a477a722ca6e
+ms.openlocfilehash: 7bb86ebb224c0c552135605d2f702101405ef434
+ms.sourcegitcommit: c1149d24b38f20daf9ce690cd0761ec1ceb7333d
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 09/28/2018
-ms.locfileid: "24041016"
+ms.lasthandoff: 10/17/2018
+ms.locfileid: "25592749"
 items:
 - uid: Outlook_1_4.Office.AttachmentDetails
   summary: >-
-    <span data-ttu-id="e630e-p101">表示服务器中一个项目上的附件。仅限阅读模式。</span><span class="sxs-lookup"><span data-stu-id="e630e-p101">Represents an attachment on an item from the server. Read mode only.</span></span>
+    <span data-ttu-id="42181-p101">表示服务器中一个项目上的附件。仅限阅读模式。</span><span class="sxs-lookup"><span data-stu-id="42181-p101">Represents an attachment on an item from the server. Read mode only.</span></span>
 
 
-    <span data-ttu-id="e630e-103">AttachmentDetail 对象的数组作为 Appointment 或 Message 对象的 attachments 属性返回。</span><span class="sxs-lookup"><span data-stu-id="e630e-103">An array of AttachmentDetail objects is returned as the attachments property of an Appointment or Message object.</span></span>
+    <span data-ttu-id="42181-103">AttachmentDetail 对象的数组作为 Appointment 或 Message 对象的 attachments 属性返回。</span><span class="sxs-lookup"><span data-stu-id="42181-103">An array of AttachmentDetail objects is returned as the attachments property of an Appointment or Message object.</span></span>
 
 
-    <span data-ttu-id="e630e-104">\[[API 集： 邮箱 1.0](/javascript/office/requirement-sets/outlook-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e630e-104">\[ [API set: Mailbox 1.0](/javascript/office/requirement-sets/outlook-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="42181-104">\[[API 集： 邮箱 1.0](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="42181-104">\[ [API set: Mailbox 1.0](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets) \]</span></span>
   remarks: >-
-    <table><tr><td>[<span data-ttu-id="e630e-105">最低权限级别</span><span class="sxs-lookup"><span data-stu-id="e630e-105">Minimum permission level</span></span>](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)</td><td><span data-ttu-id="e630e-106">ReadItem</span><span class="sxs-lookup"><span data-stu-id="e630e-106">ReadItem</span></span></td></tr>
+    <table><tr><td>[<span data-ttu-id="42181-105">最低权限级别</span><span class="sxs-lookup"><span data-stu-id="42181-105">Minimum permission level</span></span>](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)</td><td><span data-ttu-id="42181-106">ReadItem</span><span class="sxs-lookup"><span data-stu-id="42181-106">ReadItem</span></span></td></tr>
 
 
-    <tr><td>[<span data-ttu-id="e630e-107">适用的 Outlook 模式</span><span class="sxs-lookup"><span data-stu-id="e630e-107">Applicable Outlook mode</span></span>](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td><span data-ttu-id="e630e-108">Read</span><span class="sxs-lookup"><span data-stu-id="e630e-108">Read</span></span></td></tr></table>
+    <tr><td>[<span data-ttu-id="42181-107">适用的 Outlook 模式</span><span class="sxs-lookup"><span data-stu-id="42181-107">Applicable Outlook mode</span></span>](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td><span data-ttu-id="42181-108">Read</span><span class="sxs-lookup"><span data-stu-id="42181-108">Read</span></span></td></tr></table>
   name: Office.AttachmentDetails
   fullName: Outlook_1_4.Office.AttachmentDetails
   langs:
@@ -34,7 +34,7 @@ items:
   - Outlook_1_4.Office.AttachmentDetails.name
   - Outlook_1_4.Office.AttachmentDetails.size
 - uid: Outlook_1_4.Office.AttachmentDetails.attachmentType
-  summary: <span data-ttu-id="e630e-109">获取一个指示附件类型的值。</span><span class="sxs-lookup"><span data-stu-id="e630e-109">Gets a value that indicates the type of an attachment.</span></span>
+  summary: <span data-ttu-id="42181-109">获取一个指示附件类型的值。</span><span class="sxs-lookup"><span data-stu-id="42181-109">Gets a value that indicates the type of an attachment.</span></span>
   name: attachmentType
   fullName: Outlook_1_4.Office.AttachmentDetails.attachmentType
   langs:
@@ -46,7 +46,7 @@ items:
       type:
       - outlook.Office.MailboxEnums.AttachmentType
 - uid: Outlook_1_4.Office.AttachmentDetails.contentType
-  summary: <span data-ttu-id="e630e-110">获取附件的 MIME 内容类型。</span><span class="sxs-lookup"><span data-stu-id="e630e-110">Gets the MIME content type of the attachment.</span></span>
+  summary: <span data-ttu-id="42181-110">获取附件的 MIME 内容类型。</span><span class="sxs-lookup"><span data-stu-id="42181-110">Gets the MIME content type of the attachment.</span></span>
   name: contentType
   fullName: Outlook_1_4.Office.AttachmentDetails.contentType
   langs:
@@ -58,7 +58,7 @@ items:
       type:
       - string
 - uid: Outlook_1_4.Office.AttachmentDetails.id
-  summary: <span data-ttu-id="e630e-111">获取附件的 Exchange 附件 ID。</span><span class="sxs-lookup"><span data-stu-id="e630e-111">Gets the Exchange attachment ID of the attachment.</span></span>
+  summary: <span data-ttu-id="42181-111">获取附件的 Exchange 附件 ID。</span><span class="sxs-lookup"><span data-stu-id="42181-111">Gets the Exchange attachment ID of the attachment.</span></span>
   name: id
   fullName: Outlook_1_4.Office.AttachmentDetails.id
   langs:
@@ -70,7 +70,7 @@ items:
       type:
       - string
 - uid: Outlook_1_4.Office.AttachmentDetails.isInline
-  summary: <span data-ttu-id="e630e-112">获取指示是否应在项目正文中显示附件的值。</span><span class="sxs-lookup"><span data-stu-id="e630e-112">Gets a value that indicates whether the attachment should be displayed in the body of the item.</span></span>
+  summary: <span data-ttu-id="42181-112">获取指示是否应在项目正文中显示附件的值。</span><span class="sxs-lookup"><span data-stu-id="42181-112">Gets a value that indicates whether the attachment should be displayed in the body of the item.</span></span>
   name: isInline
   fullName: Outlook_1_4.Office.AttachmentDetails.isInline
   langs:
@@ -82,7 +82,7 @@ items:
       type:
       - boolean
 - uid: Outlook_1_4.Office.AttachmentDetails.name
-  summary: <span data-ttu-id="e630e-113">获取附件的名称。</span><span class="sxs-lookup"><span data-stu-id="e630e-113">Gets the name of the attachment.</span></span>
+  summary: <span data-ttu-id="42181-113">获取附件的名称。</span><span class="sxs-lookup"><span data-stu-id="42181-113">Gets the name of the attachment.</span></span>
   name: name
   fullName: Outlook_1_4.Office.AttachmentDetails.name
   langs:
@@ -94,7 +94,7 @@ items:
       type:
       - string
 - uid: Outlook_1_4.Office.AttachmentDetails.size
-  summary: <span data-ttu-id="e630e-114">获取以字节为单位的附件大小。</span><span class="sxs-lookup"><span data-stu-id="e630e-114">Gets the size of the attachment in bytes.</span></span>
+  summary: <span data-ttu-id="42181-114">获取以字节为单位的附件大小。</span><span class="sxs-lookup"><span data-stu-id="42181-114">Gets the size of the attachment in bytes.</span></span>
   name: size
   fullName: Outlook_1_4.Office.AttachmentDetails.size
   langs:
