--- a/docs/docs-ref-autogen/outlook_1_7/office.mailboxenums.restversion.yml
+++ b/docs/docs-ref-autogen/outlook_1_7/office.mailboxenums.restversion.yml
@@ -1,18 +1,18 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 2f067644edce28f3bfa49d4e55db1951de2b6696
-ms.sourcegitcommit: 262b7c417245b7b61a57d53eee33a477a722ca6e
+ms.openlocfilehash: 45407fdb9838c031d7c3609bfba6965e57bc3de4
+ms.sourcegitcommit: c1149d24b38f20daf9ce690cd0761ec1ceb7333d
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 09/28/2018
-ms.locfileid: "24968798"
+ms.lasthandoff: 10/17/2018
+ms.locfileid: "25592063"
 items:
 - uid: Outlook_1_7.Office.MailboxEnums.RestVersion
   summary: >-
-    <span data-ttu-id="3ab44-101">指定对应于 REST 格式的项目 ID 的 REST API 的版本。</span><span class="sxs-lookup"><span data-stu-id="3ab44-101">Specifies the version of the REST API that corresponds to a REST-formatted item ID.</span></span>
+    <span data-ttu-id="92c03-101">指定对应于 REST 格式的项目 ID 的 REST API 的版本。</span><span class="sxs-lookup"><span data-stu-id="92c03-101">Specifies the version of the REST API that corresponds to a REST-formatted item ID.</span></span>
 
 
-    <span data-ttu-id="3ab44-102">\[[API 集： 邮箱 1.3](/javascript/office/requirement-sets/outlook-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="3ab44-102">\[ [API set: Mailbox 1.3](/javascript/office/requirement-sets/outlook-api-requirement-sets) \]</span></span>
-  remarks: <table><tr><td> <span data-ttu-id="3ab44-103">[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points) </span><span class="sxs-lookup"><span data-stu-id="3ab44-103">[Applicable Outlook mode](https://docs.microsoft.com/outlook/add-ins/#extension-points) </span></span></td><td><span data-ttu-id="3ab44-104">撰写或阅读</span><span class="sxs-lookup"><span data-stu-id="3ab44-104">Compose or read</span></span></td></tr></table>
+    <span data-ttu-id="92c03-102">\[[API 集： 邮箱 1.3](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="92c03-102">\[ [API set: Mailbox 1.3](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets) \]</span></span>
+  remarks: <table><tr><td> <span data-ttu-id="92c03-103">[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points) </span><span class="sxs-lookup"><span data-stu-id="92c03-103">[Applicable Outlook mode](https://docs.microsoft.com/outlook/add-ins/#extension-points) </span></span></td><td><span data-ttu-id="92c03-104">撰写或阅读</span><span class="sxs-lookup"><span data-stu-id="92c03-104">Compose or read</span></span></td></tr></table>
   name: Office.MailboxEnums.RestVersion
   fullName: Outlook_1_7.Office.MailboxEnums.RestVersion
   langs:
@@ -24,7 +24,7 @@ items:
   - Outlook_1_7.Office.MailboxEnums.RestVersion.v1_0
   - Outlook_1_7.Office.MailboxEnums.RestVersion.v2_0
 - uid: Outlook_1_7.Office.MailboxEnums.RestVersion.Beta
-  summary: <span data-ttu-id="3ab44-105">Beta.</span><span class="sxs-lookup"><span data-stu-id="3ab44-105">Beta.</span></span>
+  summary: <span data-ttu-id="92c03-105">Beta.</span><span class="sxs-lookup"><span data-stu-id="92c03-105">Beta.</span></span>
   name: Beta
   fullName: Outlook_1_7.Office.MailboxEnums.RestVersion.Beta
   langs:
@@ -32,7 +32,7 @@ items:
   type: field
   numericValue: "\"beta\""
 - uid: Outlook_1_7.Office.MailboxEnums.RestVersion.v1_0
-  summary: <span data-ttu-id="3ab44-106">版本 1.0</span><span class="sxs-lookup"><span data-stu-id="3ab44-106">Version 1.0.</span></span>
+  summary: <span data-ttu-id="92c03-106">版本 1.0</span><span class="sxs-lookup"><span data-stu-id="92c03-106">Version 1.0.</span></span>
   name: v1_0
   fullName: Outlook_1_7.Office.MailboxEnums.RestVersion.v1_0
   langs:
@@ -40,7 +40,7 @@ items:
   type: field
   numericValue: "\"v1.0\""
 - uid: Outlook_1_7.Office.MailboxEnums.RestVersion.v2_0
-  summary: <span data-ttu-id="3ab44-107">版本 2.0</span><span class="sxs-lookup"><span data-stu-id="3ab44-107">Version 2.0.</span></span>
+  summary: <span data-ttu-id="92c03-107">版本 2.0</span><span class="sxs-lookup"><span data-stu-id="92c03-107">Version 2.0.</span></span>
   name: v2_0
   fullName: Outlook_1_7.Office.MailboxEnums.RestVersion.v2_0
   langs:
