--- a/docs/docs-ref-autogen/outlook_1_7/office.meetingsuggestion.yml
+++ b/docs/docs-ref-autogen/outlook_1_7/office.meetingsuggestion.yml
@@ -1,28 +1,28 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 70b6432a027d40692577d5aa06579e1e45a8c906
-ms.sourcegitcommit: 262b7c417245b7b61a57d53eee33a477a722ca6e
+ms.openlocfilehash: a2713c299b3478c0b020050362829e47e1a0fdda
+ms.sourcegitcommit: c1149d24b38f20daf9ce690cd0761ec1ceb7333d
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 09/28/2018
-ms.locfileid: "24968871"
+ms.lasthandoff: 10/17/2018
+ms.locfileid: "25592091"
 items:
 - uid: Outlook_1_7.Office.MeetingSuggestion
   summary: >-
-    <span data-ttu-id="4dd8f-p101">表示在项目中找到的建议会议。仅限阅读模式。</span><span class="sxs-lookup"><span data-stu-id="4dd8f-p101">Represents a suggested meeting found in an item. Read mode only.</span></span>
+    <span data-ttu-id="f23aa-p101">表示在项目中找到的建议会议。仅限阅读模式。</span><span class="sxs-lookup"><span data-stu-id="f23aa-p101">Represents a suggested meeting found in an item. Read mode only.</span></span>
 
 
-    <span data-ttu-id="4dd8f-103">当对活动项目调用 getEntities 或 getEntitiesByType 方法时，在电子邮件中建议的会议列表将在返回的 Entities 对象的 meetingSuggestions 属性中返回。</span><span class="sxs-lookup"><span data-stu-id="4dd8f-103">The list of meetings suggested in an email message is returned in the meetingSuggestions property of the Entities object that is returned when the getEntities or getEntitiesByType method is called on the active item.</span></span>
+    <span data-ttu-id="f23aa-103">当对活动项目调用 getEntities 或 getEntitiesByType 方法时，在电子邮件中建议的会议列表将在返回的 Entities 对象的 meetingSuggestions 属性中返回。</span><span class="sxs-lookup"><span data-stu-id="f23aa-103">The list of meetings suggested in an email message is returned in the meetingSuggestions property of the Entities object that is returned when the getEntities or getEntitiesByType method is called on the active item.</span></span>
 
 
-    <span data-ttu-id="4dd8f-p102">start 和 end 的值为包含建议会议的开始和结束日期和时间的 Date 对象的字符串表示形式。这些值用为当前用户指定的默认时区表示。</span><span class="sxs-lookup"><span data-stu-id="4dd8f-p102">The start and end values are string representations of a Date object that contains the date and time at which the suggested meeting is to begin and end. The values are in the default time zone specified for the current user.</span></span>
+    <span data-ttu-id="f23aa-p102">start 和 end 的值为包含建议会议的开始和结束日期和时间的 Date 对象的字符串表示形式。这些值用为当前用户指定的默认时区表示。</span><span class="sxs-lookup"><span data-stu-id="f23aa-p102">The start and end values are string representations of a Date object that contains the date and time at which the suggested meeting is to begin and end. The values are in the default time zone specified for the current user.</span></span>
 
 
-    <span data-ttu-id="4dd8f-106">\[[API 集： 邮箱 1.0](/javascript/office/requirement-sets/outlook-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="4dd8f-106">\[ [API set: Mailbox 1.0](/javascript/office/requirement-sets/outlook-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="f23aa-106">\[[API 集： 邮箱 1.0](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="f23aa-106">\[ [API set: Mailbox 1.0](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets) \]</span></span>
   remarks: >-
-    <table><tr><td>[<span data-ttu-id="4dd8f-107">最低权限级别</span><span class="sxs-lookup"><span data-stu-id="4dd8f-107">Minimum permission level</span></span>](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)</td><td><span data-ttu-id="4dd8f-108">ReadItem</span><span class="sxs-lookup"><span data-stu-id="4dd8f-108">ReadItem</span></span></td></tr>
+    <table><tr><td>[<span data-ttu-id="f23aa-107">最低权限级别</span><span class="sxs-lookup"><span data-stu-id="f23aa-107">Minimum permission level</span></span>](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)</td><td><span data-ttu-id="f23aa-108">ReadItem</span><span class="sxs-lookup"><span data-stu-id="f23aa-108">ReadItem</span></span></td></tr>
 
 
-    <tr><td>[<span data-ttu-id="4dd8f-109">适用的 Outlook 模式</span><span class="sxs-lookup"><span data-stu-id="4dd8f-109">Applicable Outlook mode</span></span>](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td><span data-ttu-id="4dd8f-110">Read</span><span class="sxs-lookup"><span data-stu-id="4dd8f-110">Read</span></span></td></tr></table>
+    <tr><td>[<span data-ttu-id="f23aa-109">适用的 Outlook 模式</span><span class="sxs-lookup"><span data-stu-id="f23aa-109">Applicable Outlook mode</span></span>](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td><span data-ttu-id="f23aa-110">Read</span><span class="sxs-lookup"><span data-stu-id="f23aa-110">Read</span></span></td></tr></table>
   name: Office.MeetingSuggestion
   fullName: Outlook_1_7.Office.MeetingSuggestion
   langs:
@@ -37,7 +37,7 @@ items:
   - Outlook_1_7.Office.MeetingSuggestion.start
   - Outlook_1_7.Office.MeetingSuggestion.subject
 - uid: Outlook_1_7.Office.MeetingSuggestion.attendees
-  summary: <span data-ttu-id="4dd8f-111">获取建议会议的与会者。</span><span class="sxs-lookup"><span data-stu-id="4dd8f-111">Gets the attendees for a suggested meeting.</span></span>
+  summary: <span data-ttu-id="f23aa-111">获取建议会议的与会者。</span><span class="sxs-lookup"><span data-stu-id="f23aa-111">Gets the attendees for a suggested meeting.</span></span>
   name: attendees
   fullName: Outlook_1_7.Office.MeetingSuggestion.attendees
   langs:
@@ -49,7 +49,7 @@ items:
       type:
       - EmailUser[]
 - uid: Outlook_1_7.Office.MeetingSuggestion.end
-  summary: <span data-ttu-id="4dd8f-112">获取建议会议结束的日期和时间。</span><span class="sxs-lookup"><span data-stu-id="4dd8f-112">Gets the date and time that a suggested meeting is to end.</span></span>
+  summary: <span data-ttu-id="f23aa-112">获取建议会议结束的日期和时间。</span><span class="sxs-lookup"><span data-stu-id="f23aa-112">Gets the date and time that a suggested meeting is to end.</span></span>
   name: end
   fullName: Outlook_1_7.Office.MeetingSuggestion.end
   langs:
@@ -61,7 +61,7 @@ items:
       type:
       - string
 - uid: Outlook_1_7.Office.MeetingSuggestion.location
-  summary: <span data-ttu-id="4dd8f-113">获取建议会议的位置。</span><span class="sxs-lookup"><span data-stu-id="4dd8f-113">Gets the location of a suggested meeting.</span></span>
+  summary: <span data-ttu-id="f23aa-113">获取建议会议的位置。</span><span class="sxs-lookup"><span data-stu-id="f23aa-113">Gets the location of a suggested meeting.</span></span>
   name: location
   fullName: Outlook_1_7.Office.MeetingSuggestion.location
   langs:
@@ -73,7 +73,7 @@ items:
       type:
       - string
 - uid: Outlook_1_7.Office.MeetingSuggestion.meetingstring
-  summary: <span data-ttu-id="4dd8f-114">获取标识为会议建议的字符串。</span><span class="sxs-lookup"><span data-stu-id="4dd8f-114">Gets a string that was identified as a meeting suggestion.</span></span>
+  summary: <span data-ttu-id="f23aa-114">获取标识为会议建议的字符串。</span><span class="sxs-lookup"><span data-stu-id="f23aa-114">Gets a string that was identified as a meeting suggestion.</span></span>
   name: meetingstring
   fullName: Outlook_1_7.Office.MeetingSuggestion.meetingstring
   langs:
@@ -85,7 +85,7 @@ items:
       type:
       - string
 - uid: Outlook_1_7.Office.MeetingSuggestion.start
-  summary: <span data-ttu-id="4dd8f-115">获取建议会议开始的日期和时间。</span><span class="sxs-lookup"><span data-stu-id="4dd8f-115">Gets the date and time that a suggested meeting is to begin.</span></span>
+  summary: <span data-ttu-id="f23aa-115">获取建议会议开始的日期和时间。</span><span class="sxs-lookup"><span data-stu-id="f23aa-115">Gets the date and time that a suggested meeting is to begin.</span></span>
   name: start
   fullName: Outlook_1_7.Office.MeetingSuggestion.start
   langs:
@@ -97,7 +97,7 @@ items:
       type:
       - string
 - uid: Outlook_1_7.Office.MeetingSuggestion.subject
-  summary: <span data-ttu-id="4dd8f-116">获取建议会议的主题。</span><span class="sxs-lookup"><span data-stu-id="4dd8f-116">Gets the subject of a suggested meeting.</span></span>
+  summary: <span data-ttu-id="f23aa-116">获取建议会议的主题。</span><span class="sxs-lookup"><span data-stu-id="f23aa-116">Gets the subject of a suggested meeting.</span></span>
   name: subject
   fullName: Outlook_1_7.Office.MeetingSuggestion.subject
   langs:
